modify ReadMe, beautify output file name

--- a/Tools/Rotation/LayerRotation/LayerRotation_10.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_10.cfg
@@ -1,200 +1,200 @@
-GooseBay_RAAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
-Lashkar_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 WPMC+AirAssault MEA+CombinedArms
-Manicouagan_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
-Mutaha_Invasion_v1 INS+LightInfantry MEA+LightInfantry
-Kohat_AAS_v1 PLA+AirAssault ADF+AirAssault
-Chora_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
-Sanxian_RAAS_v1 PLANMC+LightInfantry BAF+Support
-Fallujah_RAAS_v2 WPMC+LightInfantry INS+LightInfantry
-Logar_AAS_v1 BAF+CombinedArms MEA+CombinedArms
-Yehorivka_Destruction_v1 PLA+LightInfantry USMC+LightInfantry
-Gorodok_RAAS_v2 TLF+Support IMF+Support
-Lashkar_RAAS_v1 VDV+Support BAF+Armored
-Kamdesh_Skirmish_v1 VDV+CombinedArms INS+CombinedArms
-Anvil_AAS_v1 INS+Motorized PLA+Motorized
-AlBasrah_RAAS_v1 PLANMC+Motorized INS+Motorized
-Kohat_Invasion_v1 VDV+Armored BAF+Armored
-Kokan_RAAS_v1 MEA+CombinedArms INS+CombinedArms
-Manicouagan_AAS_v2 CAF+Support WPMC+AirAssault
-BlackCoast_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Skirmish_v1 USMC+CombinedArms IMF+CombinedArms
-Tallil_RAAS_v1 RGF+Support USA+Support
-Narva_Destruction_v1 WPMC+LightInfantry IMF+LightInfantry
-Fallujah_RAAS_v2 ADF+CombinedArms PLA+CombinedArms
-Yehorivka_RAAS_v1 RGF+Motorized CAF+Support
-Belaya_RAAS_v1 USA+Motorized RGF+Motorized
+Harju_AAS_v3 USA+CombinedArms RGF+CombinedArms
+Tallil_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
+Manicouagan_RAAS_v2 WPMC+CombinedArms PLANMC+CombinedArms
+Gorodok_Invasion_v2 USMC+Armored PLA+Armored
+FoolsRoad_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Mutaha_TC_v1 USMC+Armored VDV+Armored
+Fallujah_AAS_v1 MEA+Support VDV+Mechanized
+Anvil_RAAS_v2 ADF+CombinedArms RGF+CombinedArms
+Mestia_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Yehorivka_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
+Lashkar_RAAS_v1 ADF+CombinedArms MEA+CombinedArms
+Kohat_AAS_v1 TLF+Armored PLA+Armored
+Kokan_TC_v1 WPMC+CombinedArms MEA+CombinedArms
+AlBasrah_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms ADF+CombinedArms
+Narva_Destruction_v1 VDV+Support IMF+Support
+Chora_RAAS_v1 TLF+CombinedArms VDV+CombinedArms
+Kamdesh_AAS_v1 ADF+Mechanized PLA+AirAssault
+Anvil_TC_v1 PLA+Support MEA+Support
+Skorpo_RAAS_v1 CAF+Motorized IMF+Motorized
+Sumari_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+GooseBay_Invasion_v1 PLA+LightInfantry WPMC+LightInfantry
+BlackCoast_RAAS_v2 BAF+AirAssault PLANMC+AirAssault
+Tallil_TC_v1 WPMC+AirAssault MEA+AirAssault
+Kohat_RAAS_v1 TLF+Mechanized PLA+AirAssault
+Mestia_AAS_v2 IMF+CombinedArms ADF+CombinedArms
+AlBasrah_AAS_v1 RGF+Armored TLF+Armored
+Lashkar_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
+Kokan_AAS_v2 MEA+CombinedArms USA+CombinedArms
+Narva_TC_v1 WPMC+LightInfantry IMF+LightInfantry
+Kamdesh_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Logar_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+Manicouagan_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Fallujah_Invasion_v2 RGF+Motorized PLA+CombinedArms
+Chora_AAS_v2 INS+CombinedArms TLF+CombinedArms
+Kohat_TC_v1 INS+Support MEA+Support
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Harju_RAAS_v2 BAF+Support RGF+Support
+Skorpo_RAAS_v1 USA+Support IMF+LightInfantry
+FoolsRoad_Destruction_v1 IMF+CombinedArms CAF+CombinedArms
+Yehorivka_AAS_v2 WPMC+AirAssault TLF+AirAssault
+AlBasrah_AAS_v1 ADF+Mechanized TLF+Mechanized
+Kamdesh_Skirmish_v1 INS+CombinedArms VDV+CombinedArms
+Lashkar_AAS_v2 CAF+Mechanized INS+Mechanized
+Tallil_RAAS_v1 USMC+CombinedArms RGF+CombinedArms
+Belaya_Invasion_v1 VDV+Armored PLA+Armored
+Anvil_RAAS_v1 USA+Mechanized TLF+AirAssault
+Mestia_RAAS_v1 USMC+CombinedArms IMF+CombinedArms
+Gorodok_RAAS_v1 IMF+CombinedArms BAF+CombinedArms
+Kohat_RAAS_v2 MEA+AirAssault CAF+AirAssault
+GooseBay_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
 PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-AlBasrah_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Anvil_RAAS_v2 WPMC+CombinedArms MEA+CombinedArms
-Gorodok_Invasion_v1 WPMC+AirAssault USMC+Support
-Chora_RAAS_v1 CAF+CombinedArms VDV+CombinedArms
-Kamdesh_RAAS_v1 PLA+Armored TLF+Armored
-Tallil_AAS_v1 WPMC+AirAssault PLA+AirAssault
-Lashkar_RAAS_v1 TLF+Support VDV+Support
-Kokan_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v1 PLA+CombinedArms USA+Motorized
-Yehorivka_Destruction_v1 USA+CombinedArms VDV+CombinedArms
-Harju_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
-GooseBay_RAAS_v2 WPMC+CombinedArms VDV+CombinedArms
-Sumari_Skirmish_v1 WPMC+CombinedArms MEA+CombinedArms
-Manicouagan_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
-Sanxian_AAS_v2 USMC+LightInfantry WPMC+CombinedArms
-Mestia_Invasion_v1 TLF+CombinedArms BAF+CombinedArms
-BlackCoast_RAAS_v1 CAF+CombinedArms PLAAGF+CombinedArms
-Belaya_TC_v1 CAF+Motorized PLA+Motorized
-Logar_AAS_v1 MEA+CombinedArms CAF+CombinedArms
-Narva_AAS_v1 IMF+CombinedArms VDV+CombinedArms
-Mutaha_AAS_v2 TLF+AirAssault WPMC+AirAssault
-Anvil_Invasion_v1 VDV+Armored MEA+Armored
-Lashkar_AAS_v2 PLA+Support BAF+Support
-Yehorivka_TC_v2 BAF+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v2 INS+Motorized ADF+CombinedArms
-Fallujah_RAAS_v1 PLA+Motorized TLF+Motorized
-FoolsRoad_AAS_v1 USA+CombinedArms IMF+CombinedArms
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms PLA+CombinedArms
-BlackCoast_Invasion_v2 PLAAGF+CombinedArms ADF+CombinedArms
-Kamdesh_RAAS_v1 TLF+AirAssault PLA+AirAssault
-Sumari_AAS_v1 PLA+CombinedArms VDV+CombinedArms
-GooseBay_RAAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 MEA+Armored INS+Armored
-Mestia_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
-Yehorivka_Destruction_v1 IMF+Armored RGF+Armored
-AlBasrah_AAS_v1 VDV+CombinedArms CAF+CombinedArms
-Logar_RAAS_v1 PLA+CombinedArms USA+CombinedArms
-Lashkar_RAAS_v1 PLA+CombinedArms INS+CombinedArms
-Fallujah_AAS_v1 VDV+Support PLA+Support
-Tallil_TC_v1 PLA+AirAssault ADF+AirAssault
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v2 TLF+Motorized INS+CombinedArms
-Gorodok_Invasion_v1 USA+Support RGF+Support
-Mutaha_RAAS_v2 INS+Armored MEA+Armored
-Harju_TC_v1 WPMC+CombinedArms ADF+CombinedArms
-Manicouagan_AAS_v1 WPMC+AirAssault PLANMC+AirAssault
-Kamdesh_AAS_v1 TLF+Mechanized INS+Mechanized
-Anvil_RAAS_v2 CAF+Armored MEA+AirAssault
-Skorpo_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-Narva_AAS_v2 USA+LightInfantry IMF+LightInfantry
-Logar_AAS_v1 INS+CombinedArms PLA+CombinedArms
-Yehorivka_RAAS_v2 CAF+Motorized TLF+Motorized
-Lashkar_AAS_v1 BAF+Armored MEA+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Mutaha_AAS_v1 PLA+AirAssault USA+Motorized
-FoolsRoad_Destruction_v1 WPMC+CombinedArms TLF+CombinedArms
-Harju_RAAS_v2 CAF+AirAssault WPMC+AirAssault
-Tallil_TC_v1 TLF+Armored MEA+Armored
-Chora_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
-BlackCoast_AAS_v1 USMC+Motorized RGF+Motorized
-Fallujah_RAAS_v2 TLF+Support USMC+Support
-Kohat_Invasion_v1 PLA+Motorized CAF+Motorized
-Manicouagan_RAAS_v1 USA+CombinedArms PLA+CombinedArms
-Kokan_TC_v1 MEA+CombinedArms RGF+CombinedArms
-Lashkar_AAS_v1 BAF+Support VDV+CombinedArms
-Yehorivka_RAAS_v1 USMC+Support PLA+Support
-Sumari_RAAS_v1 MEA+CombinedArms RGF+CombinedArms
-Narva_Destruction_v1 WPMC+CombinedArms RGF+CombinedArms
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Chora_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 WPMC+AirAssault MEA+AirAssault
-Gorodok_RAAS_v2 CAF+Support IMF+Motorized
-Tallil_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
-Kohat_Invasion_v1 PLA+Support CAF+Support
-GooseBay_RAAS_v2 WPMC+CombinedArms RGF+CombinedArms
-Manicouagan_AAS_v3 WPMC+CombinedArms PLAAGF+CombinedArms
-Mestia_AAS_v1 ADF+CombinedArms PLA+CombinedArms
-Anvil_AAS_v1 MEA+AirAssault ADF+AirAssault
-BlackCoast_RAAS_v2 IMF+Support WPMC+AirAssault
-Yehorivka_Invasion_v2 WPMC+CombinedArms CAF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Lashkar_TC_v2 BAF+CombinedArms INS+CombinedArms
-Mutaha_RAAS_v2 BAF+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v1 BAF+CombinedArms PLA+AirAssault
-Sumari_AAS_v1 TLF+CombinedArms PLA+CombinedArms
-Belaya_Invasion_v2 PLA+LightInfantry IMF+LightInfantry
-Kohat_RAAS_v1 MEA+Support TLF+Support
-Kokan_TC_v1 USMC+CombinedArms PLA+CombinedArms
-Kamdesh_AAS_v1 MEA+CombinedArms ADF+CombinedArms
-Manicouagan_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Yehorivka_RAAS_v2 VDV+Support IMF+Support
-Fallujah_Invasion_v1 PLA+Support MEA+Support
-Sanxian_RAAS_v1 USA+Armored PLANMC+Armored
-Lashkar_AAS_v1 MEA+CombinedArms VDV+AirAssault
-Mestia_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v1 PLA+LightInfantry USA+LightInfantry
-GooseBay_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
-Belaya_Invasion_v1 USA+Motorized PLA+Motorized
-Chora_AAS_v3 RGF+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 PLANMC+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v2 CAF+CombinedArms PLA+CombinedArms
-Mutaha_TC_v1 MEA+LightInfantry WPMC+CombinedArms
-Yehorivka_RAAS_v1 BAF+Armored IMF+Armored
-Tallil_RAAS_v1 INS+Mechanized TLF+Mechanized
-Fallujah_Invasion_v2 WPMC+CombinedArms BAF+CombinedArms
-Kokan_AAS_v1 PLA+CombinedArms MEA+CombinedArms
-AlBasrah_AAS_v1 WPMC+AirAssault ADF+AirAssault
-Lashkar_RAAS_v1 USMC+Motorized PLA+Motorized
-Anvil_TC_v1 PLA+AirAssault WPMC+AirAssault
-Chora_RAAS_v1 RGF+CombinedArms CAF+CombinedArms
-Kamdesh_Invasion_v1 VDV+Armored PLA+Motorized
-Kohat_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
-Logar_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
-Yehorivka_RAAS_v1 IMF+Armored PLA+Armored
-Mutaha_RAAS_v1 MEA+CombinedArms USMC+CombinedArms
-Mestia_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v1 USMC+Motorized RGF+CombinedArms
-Belaya_Invasion_v2 VDV+Support PLA+Support
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Kokan_AAS_v1 PLA+CombinedArms USA+CombinedArms
-Lashkar_TC_v1 INS+Armored TLF+Armored
-Skorpo_RAAS_v1 IMF+Armored BAF+Mechanized
-Kohat_RAAS_v2 INS+Motorized PLA+Motorized
-FoolsRoad_Invasion_v1 VDV+CombinedArms TLF+CombinedArms
-AlBasrah_RAAS_v1 INS+Armored MEA+Armored
-Kamdesh_AAS_v1 WPMC+AirAssault TLF+AirAssault
-Yehorivka_TC_v1 VDV+CombinedArms USA+CombinedArms
-Mutaha_RAAS_v2 TLF+Support PLA+Support
-Anvil_RAAS_v1 MEA+AirAssault INS+LightInfantry
-Belaya_Invasion_v2 WPMC+LightInfantry USMC+LightInfantry
-Chora_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Fallujah_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
-Tallil_AAS_v1 RGF+LightInfantry MEA+LightInfantry
-Kokan_TC_v1 MEA+CombinedArms WPMC+CombinedArms
-Gorodok_AAS_v1 USA+AirAssault TLF+Motorized
-Lashkar_Invasion_v1 INS+LightInfantry RGF+LightInfantry
-Skorpo_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
-Kohat_AAS_v1 INS+CombinedArms MEA+CombinedArms
-FoolsRoad_TC_v1 TLF+CombinedArms USMC+CombinedArms
-Harju_RAAS_v1 RGF+Armored CAF+Armored
-AlBasrah_AAS_v1 TLF+Mechanized USMC+Motorized
-Sanxian_Invasion_v2 USMC+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v2 ADF+Mechanized IMF+Mechanized
-Tallil_TC_v1 PLA+Support VDV+Support
-Mutaha_AAS_v1 TLF+Mechanized USA+Mechanized
-Manicouagan_AAS_v3 VDV+Support WPMC+AirAssault
-Sumari_AAS_v3 MEA+CombinedArms ADF+CombinedArms
-Kamdesh_Invasion_v1 PLA+CombinedArms TLF+CombinedArms
-Gorodok_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLA+CombinedArms
-Mestia_TC_v1 TLF+CombinedArms IMF+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms USMC+CombinedArms
+Manicouagan_Invasion_v1 USA+Motorized RGF+Motorized
+Yehorivka_RAAS_v1 PLA+Motorized IMF+Motorized
+BlackCoast_RAAS_v1 RGF+Mechanized TLF+Mechanized
+Kokan_AAS_v2 USMC+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 VDV+AirAssault CAF+Armored
+Anvil_AAS_v1 INS+Armored PLA+Armored
+FoolsRoad_Destruction_v1 TLF+CombinedArms WPMC+CombinedArms
+Tallil_AAS_v1 BAF+AirAssault MEA+AirAssault
+AlBasrah_TC_v1 MEA+Armored RGF+Armored
+Sanxian_AAS_v2 WPMC+LightInfantry USMC+LightInfantry
+Kohat_RAAS_v1 USA+Armored INS+Armored
+Mestia_AAS_v2 PLA+CombinedArms USA+CombinedArms
+Narva_Invasion_v1 IMF+Support CAF+Support
+BlackCoast_AAS_v2 PLA+Support CAF+Support
+Chora_TC_v1 TLF+CombinedArms MEA+CombinedArms
+Kamdesh_AAS_v1 WPMC+CombinedArms INS+CombinedArms
+Anvil_AAS_v1 CAF+Motorized PLA+Motorized
+GooseBay_AAS_v1 USA+AirAssault PLANMC+LightInfantry
+Yehorivka_Invasion_v1 PLA+Armored IMF+Armored
+Manicouagan_AAS_v1 RGF+Mechanized USA+Mechanized
+AlBasrah_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Sumari_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 BAF+Support WPMC+CombinedArms
+Sanxian_RAAS_v2 BAF+AirAssault WPMC+AirAssault
+Tallil_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
+Mestia_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Belaya_TC_v1 IMF+LightInfantry WPMC+LightInfantry
+Kohat_RAAS_v1 CAF+Motorized PLA+Motorized
+Anvil_AAS_v1 USA+LightInfantry INS+Mechanized
+Skorpo_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+FoolsRoad_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
+BlackCoast_RAAS_v2 IMF+CombinedArms TLF+CombinedArms
+AlBasrah_RAAS_v1 TLF+CombinedArms INS+CombinedArms
+Sumari_TC_v1 MEA+CombinedArms PLA+CombinedArms
+Narva_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Kamdesh_AAS_v1 PLA+CombinedArms CAF+CombinedArms
+Kokan_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
+Yehorivka_AAS_v2 TLF+Support PLA+Support
+Sanxian_RAAS_v2 WPMC+AirAssault ADF+AirAssault
+Lashkar_AAS_v2 PLA+Armored BAF+Armored
+Mestia_TC_v1 WPMC+CombinedArms PLA+CombinedArms
+Harju_RAAS_v1 WPMC+LightInfantry USA+Armored
+Skorpo_Invasion_v1 IMF+CombinedArms WPMC+CombinedArms
+Chora_AAS_v3 MEA+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 PLA+Support TLF+Support
+GooseBay_RAAS_v2 USA+AirAssault WPMC+AirAssault
+Sumari_TC_v1 WPMC+CombinedArms INS+CombinedArms
+Manicouagan_AAS_v3 BAF+Support PLA+Support
+BlackCoast_Invasion_v2 ADF+Mechanized PLAAGF+Armored
+Mutaha_RAAS_v2 RGF+Support MEA+Support
+Kokan_AAS_v1 RGF+CombinedArms ADF+CombinedArms
+Kamdesh_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Lashkar_TC_v1 ADF+Mechanized TLF+Mechanized
+Logar_AAS_v1 MEA+CombinedArms PLA+CombinedArms
+Belaya_Invasion_v2 PLA+Support USA+Mechanized
+Fallujah_RAAS_v1 RGF+Support TLF+Support
+FoolsRoad_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Yehorivka_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Sanxian_AAS_v3 WPMC+CombinedArms BAF+CombinedArms
+Narva_TC_v1 RGF+LightInfantry IMF+CombinedArms
+Gorodok_RAAS_v2 TLF+Armored IMF+Armored
+Mestia_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
+BlackCoast_RAAS_v2 WPMC+AirAssault TLF+AirAssault
+Tallil_RAAS_v1 USA+AirAssault WPMC+AirAssault
+Kohat_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
+Lashkar_RAAS_v1 PLA+CombinedArms INS+Mechanized
+GooseBay_AAS_v1 USMC+LightInfantry RGF+LightInfantry
+FoolsRoad_Destruction_v1 VDV+CombinedArms IMF+CombinedArms
+AlBasrah_AAS_v1 WPMC+AirAssault BAF+AirAssault
+Mutaha_TC_v1 RGF+Support TLF+Support
+Belaya_AAS_v2 CAF+Mechanized IMF+Mechanized
+Kamdesh_AAS_v1 INS+Support TLF+Support
+Sanxian_AAS_v2 PLANMC+CombinedArms BAF+CombinedArms
+Narva_Destruction_v1 IMF+Support VDV+Support
+Skorpo_RAAS_v1 IMF+CombinedArms VDV+CombinedArms
+Kokan_Skirmish_v1 MEA+CombinedArms USMC+CombinedArms
+Yehorivka_AAS_v2 PLA+Motorized RGF+Motorized
+Tallil_AAS_v1 PLA+AirAssault TLF+AirAssault
+Chora_RAAS_v1 MEA+CombinedArms RGF+CombinedArms
+AlBasrah_Invasion_v2 WPMC+CombinedArms USA+Motorized
+Gorodok_AAS_v1 USMC+CombinedArms PLA+CombinedArms
+Kohat_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v1 VDV+AirAssault WPMC+AirAssault
+Lashkar_AAS_v1 PLA+Support USA+Support
+Logar_RAAS_v1 USMC+CombinedArms RGF+CombinedArms
+Belaya_AAS_v3 TLF+Armored IMF+LightInfantry
+Fallujah_Insurgency_v1 TLF+Motorized INS+Motorized
+Yehorivka_RAAS_v2 RGF+Motorized PLA+Motorized
+FoolsRoad_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 INS+LightInfantry WPMC+LightInfantry
+AlBasrah_AAS_v1 BAF+CombinedArms PLANMC+Armored
+Sanxian_RAAS_v2 WPMC+AirAssault PLANMC+AirAssault
+Kokan_Invasion_v1 BAF+CombinedArms TLF+CombinedArms
+Harju_RAAS_v2 WPMC+AirAssault ADF+AirAssault
+Gorodok_TC_v1 PLA+AirAssault USA+AirAssault
+Mutaha_AAS_v2 ADF+CombinedArms INS+CombinedArms
+Kohat_AAS_v1 PLA+LightInfantry MEA+LightInfantry
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Yehorivka_Destruction_v1 PLA+CombinedArms CAF+CombinedArms
+GooseBay_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Tallil_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Kamdesh_AAS_v1 CAF+AirAssault VDV+AirAssault
+AlBasrah_RAAS_v1 INS+CombinedArms RGF+CombinedArms
+Mestia_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
+Belaya_AAS_v1 RGF+Motorized IMF+Motorized
+Gorodok_Destruction_v1 ADF+Mechanized IMF+Mechanized
+Sumari_AAS_v2 CAF+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v2 WPMC+LightInfantry PLAAGF+Armored
+Anvil_TC_v1 PLA+Armored INS+Armored
 Narva_AAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Yehorivka_Destruction_v1 RGF+LightInfantry WPMC+LightInfantry
-AlBasrah_AAS_v1 MEA+Support INS+Support
-Fallujah_TC_v1 TLF+CombinedArms MEA+CombinedArms
-Anvil_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Sumari_AAS_v2 PLA+CombinedArms BAF+CombinedArms
-BlackCoast_RAAS_v1 IMF+Motorized TLF+Motorized
-Lashkar_Invasion_v1 WPMC+AirAssault MEA+LightInfantry
-Tallil_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 MEA+Mechanized INS+Mechanized
-Kokan_AAS_v1 PLA+CombinedArms USA+CombinedArms
-Sanxian_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 BAF+Support INS+Armored
-Yehorivka_Destruction_v1 PLA+CombinedArms IMF+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Kokan_AAS_v2 INS+CombinedArms TLF+CombinedArms
+Yehorivka_Destruction_v1 WPMC+CombinedArms BAF+CombinedArms
 PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-GooseBay_Skirmish_v1 USMC+CombinedArms WPMC+CombinedArms
-Manicouagan_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Lashkar_AAS_v2 USA+Armored VDV+Armored
-AlBasrah_Invasion_v2 INS+Support TLF+Motorized
-Gorodok_AAS_v1 BAF+Mechanized TLF+Mechanized
+Mutaha_Skirmish_v1 RGF+CombinedArms INS+CombinedArms
+Kohat_RAAS_v2 INS+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v1 RGF+Support PLA+Support
+AlBasrah_RAAS_v1 ADF+AirAssault PLA+AirAssault
+Harju_Invasion_v2 IMF+Armored BAF+CombinedArms
+Manicouagan_RAAS_v1 WPMC+AirAssault VDV+AirAssault
+Sumari_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
+Anvil_AAS_v1 PLA+Motorized USMC+Motorized
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Lashkar_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Mestia_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Kamdesh_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Kokan_TC_v1 TLF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 PLA+Armored MEA+Armored
+AlBasrah_RAAS_v1 INS+Mechanized ADF+Mechanized
+Harju_AAS_v1 WPMC+LightInfantry IMF+Support
+FoolsRoad_Destruction_v1 TLF+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+BlackCoast_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Skorpo_RAAS_v1 IMF+LightInfantry RGF+LightInfantry
+Logar_RAAS_v1 TLF+CombinedArms RGF+CombinedArms
+Kohat_RAAS_v1 MEA+AirAssault TLF+Motorized
+Narva_Invasion_v1 IMF+Mechanized BAF+Mechanized
+Chora_AAS_v3 CAF+CombinedArms PLA+CombinedArms
+Gorodok_AAS_v1 PLA+Armored VDV+Armored
+Kamdesh_RAAS_v1 RGF+Armored PLA+Armored
+AlBasrah_TC_v1 TLF+CombinedArms BAF+CombinedArms
+Fallujah_AAS_v1 VDV+Armored PLA+Armored
+Lashkar_Invasion_v1 VDV+CombinedArms TLF+CombinedArms
+Sanxian_RAAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Yehorivka_Skirmish_v2 USA+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v2 TLF+Armored RGF+Armored
+Harju_RAAS_v2 IMF+Motorized USMC+Motorized
