--- a/Tools/Rotation/LayerRotation/LayerRotation_12.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_12.cfg
@@ -1,200 +1,200 @@
-Gorodok_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
-Narva_Destruction_v1 BAF+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v2 INS+Mechanized ADF+Mechanized
-Mutaha_Skirmish_v1 ADF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 IMF+Mechanized ADF+Mechanized
-Yehorivka_RAAS_v1 IMF+CombinedArms TLF+Armored
-FoolsRoad_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
-Manicouagan_Invasion_v1 PLAAGF+Armored USMC+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Chora_Skirmish_v1 MEA+CombinedArms PLA+CombinedArms
-Kamdesh_RAAS_v1 PLA+Armored USMC+Support
-Harju_RAAS_v2 IMF+Motorized CAF+Motorized
-Mestia_AAS_v2 ADF+CombinedArms VDV+CombinedArms
-AlBasrah_Invasion_v1 PLAAGF+Mechanized CAF+Mechanized
-Kohat_RAAS_v1 PLA+AirAssault WPMC+AirAssault
-Mutaha_RAAS_v2 INS+Mechanized MEA+AirAssault
-Anvil_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
-GooseBay_RAAS_v1 USMC+Armored VDV+Armored
-Tallil_RAAS_v1 USMC+Armored PLA+Armored
-Narva_Destruction_v1 USMC+LightInfantry RGF+LightInfantry
-Sanxian_AAS_v1 PLAAGF+Armored WPMC+AirAssault
-Kokan_TC_v1 BAF+CombinedArms RGF+CombinedArms
-Fallujah_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Logar_AAS_v1 VDV+CombinedArms USMC+CombinedArms
-Belaya_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v1 PLA+Motorized IMF+Motorized
-Lashkar_AAS_v1 WPMC+LightInfantry ADF+AirAssault
-AlBasrah_AAS_v1 VDV+CombinedArms ADF+CombinedArms
-FoolsRoad_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v1 PLA+LightInfantry INS+LightInfantry
-Yehorivka_Invasion_v2 USA+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v2 WPMC+CombinedArms PLA+AirAssault
-Kokan_AAS_v2 INS+CombinedArms ADF+CombinedArms
-Anvil_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Tallil_TC_v1 INS+Armored MEA+Armored
-Manicouagan_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Harju_Invasion_v3 WPMC+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v2 PLANMC+LightInfantry TLF+Armored
-Chora_AAS_v3 INS+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 WPMC+AirAssault TLF+AirAssault
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms BAF+CombinedArms
-Mestia_RAAS_v1 IMF+CombinedArms TLF+CombinedArms
-Fallujah_Invasion_v1 TLF+CombinedArms MEA+Mechanized
-Mutaha_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Lashkar_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v2 WPMC+AirAssault VDV+AirAssault
-Skorpo_RAAS_v1 IMF+Support VDV+Support
-Kamdesh_AAS_v1 VDV+CombinedArms INS+CombinedArms
-Kokan_Invasion_v1 TLF+CombinedArms ADF+CombinedArms
-Tallil_RAAS_v1 RGF+Armored CAF+Armored
-Anvil_RAAS_v2 TLF+CombinedArms RGF+LightInfantry
-Kohat_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-BlackCoast_AAS_v2 PLANMC+LightInfantry RGF+LightInfantry
-Gorodok_RAAS_v2 PLA+Support BAF+Support
-Narva_Invasion_v2 ADF+CombinedArms IMF+CombinedArms
-Sumari_AAS_v1 BAF+CombinedArms VDV+CombinedArms
-Lashkar_RAAS_v1 PLA+AirAssault TLF+AirAssault
-Sanxian_AAS_v2 USMC+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 PLANMC+AirAssault ADF+AirAssault
-Mutaha_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
-Yehorivka_RAAS_v2 WPMC+LightInfantry IMF+Armored
-Anvil_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
-Kamdesh_AAS_v1 ADF+AirAssault PLA+AirAssault
-Chora_AAS_v2 RGF+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v2 PLAAGF+Armored IMF+Armored
-Manicouagan_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Sumari_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
-Kohat_RAAS_v2 PLA+Motorized RGF+Motorized
-Fallujah_Invasion_v2 USA+CombinedArms INS+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Sanxian_AAS_v1 WPMC+AirAssault ADF+AirAssault
-Gorodok_Skirmish_v1 USMC+CombinedArms PLA+CombinedArms
-Tallil_AAS_v1 INS+LightInfantry TLF+Motorized
-Harju_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Anvil_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
-FoolsRoad_AAS_v2 PLA+CombinedArms RGF+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v1 IMF+LightInfantry USA+LightInfantry
-Sumari_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
-Narva_AAS_v2 VDV+CombinedArms CAF+CombinedArms
-Mutaha_Invasion_v1 MEA+Support BAF+Support
-Sanxian_RAAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Logar_TC_v1 USMC+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v1 CAF+Support PLA+Support
-Fallujah_RAAS_v2 WPMC+CombinedArms USA+CombinedArms
-Kohat_RAAS_v2 INS+LightInfantry USA+Motorized
-Gorodok_Destruction_v1 USMC+LightInfantry IMF+LightInfantry
-FoolsRoad_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 VDV+CombinedArms ADF+CombinedArms
-Skorpo_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
-Lashkar_AAS_v2 TLF+Mechanized ADF+Mechanized
-Narva_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
-Kokan_Invasion_v1 CAF+CombinedArms MEA+CombinedArms
-Yehorivka_RAAS_v1 TLF+Armored USMC+Armored
-Mutaha_AAS_v2 PLA+CombinedArms ADF+CombinedArms
-Tallil_RAAS_v2 INS+CombinedArms MEA+CombinedArms
-Fallujah_RAAS_v1 INS+Mechanized PLA+Motorized
-Harju_TC_v1 WPMC+CombinedArms VDV+CombinedArms
+Harju_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Lashkar_TC_v2 RGF+Mechanized MEA+Mechanized
+Yehorivka_RAAS_v1 USMC+CombinedArms TLF+CombinedArms
+FoolsRoad_RAAS_v1 USMC+CombinedArms IMF+CombinedArms
+Mutaha_AAS_v1 ADF+AirAssault VDV+AirAssault
+Gorodok_Destruction_v1 PLA+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v2 WPMC+LightInfantry IMF+Mechanized
+Sumari_Skirmish_v1 CAF+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 VDV+CombinedArms PLAAGF+CombinedArms
+Kohat_AAS_v1 CAF+AirAssault TLF+AirAssault
+Tallil_AAS_v1 USA+AirAssault WPMC+AirAssault
+Skorpo_Invasion_v1 ADF+Mechanized WPMC+CombinedArms
+Kamdesh_RAAS_v1 ADF+Mechanized INS+Mechanized
+Mestia_Skirmish_v1 WPMC+CombinedArms ADF+CombinedArms
+Anvil_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Yehorivka_AAS_v1 VDV+AirAssault WPMC+AirAssault
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Gorodok_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
+Harju_RAAS_v2 ADF+AirAssault WPMC+AirAssault
+FoolsRoad_Invasion_v1 IMF+CombinedArms USMC+CombinedArms
+Fallujah_RAAS_v2 MEA+LightInfantry USA+LightInfantry
+AlBasrah_TC_v1 PLA+Armored BAF+Armored
+Tallil_RAAS_v1 INS+Support RGF+Support
+Mutaha_AAS_v1 VDV+CombinedArms MEA+Armored
+Manicouagan_AAS_v2 WPMC+AirAssault USA+AirAssault
+Lashkar_Invasion_v1 INS+CombinedArms TLF+CombinedArms
+Kokan_RAAS_v1 USA+CombinedArms VDV+CombinedArms
+Kamdesh_RAAS_v1 INS+Motorized PLA+Motorized
+Gorodok_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Anvil_TC_v1 INS+Mechanized TLF+Mechanized
+Mestia_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Skorpo_Invasion_v1 IMF+Motorized USA+CombinedArms
+Harju_RAAS_v1 USMC+Support IMF+Support
 PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Manicouagan_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
-Kohat_AAS_v1 PLA+Support MEA+Support
-Lashkar_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
-Kamdesh_TC_v1 PLA+AirAssault TLF+AirAssault
-Belaya_AAS_v2 USMC+Support VDV+Support
-Chora_AAS_v1 BAF+CombinedArms MEA+CombinedArms
-Yehorivka_Destruction_v1 IMF+CombinedArms CAF+CombinedArms
-Gorodok_AAS_v1 ADF+Mechanized RGF+Mechanized
-BlackCoast_AAS_v2 TLF+Armored IMF+Armored
-Mutaha_AAS_v1 RGF+Motorized INS+Support
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Kokan_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
-AlBasrah_AAS_v1 MEA+AirAssault VDV+AirAssault
-Kohat_Invasion_v1 WPMC+CombinedArms RGF+CombinedArms
-Anvil_AAS_v1 ADF+AirAssault MEA+AirAssault
-GooseBay_AAS_v1 PLANMC+Armored WPMC+LightInfantry
-Sumari_AAS_v1 BAF+CombinedArms PLA+CombinedArms
-Belaya_RAAS_v1 USA+Mechanized TLF+Mechanized
-Sanxian_AAS_v3 WPMC+AirAssault BAF+AirAssault
-Narva_AAS_v2 IMF+Armored BAF+Armored
-FoolsRoad_Invasion_v1 WPMC+CombinedArms RGF+CombinedArms
-Harju_AAS_v1 IMF+Motorized BAF+Armored
-Lashkar_TC_v1 WPMC+LightInfantry USMC+LightInfantry
-Mutaha_RAAS_v1 TLF+AirAssault MEA+AirAssault
-Chora_RAAS_v1 BAF+CombinedArms MEA+CombinedArms
-Fallujah_RAAS_v2 CAF+Support RGF+Support
-Kohat_AAS_v1 USA+Armored PLA+Armored
-Tallil_Invasion_v1 PLA+Support MEA+Support
-Logar_RAAS_v1 CAF+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v1 WPMC+AirAssault PLA+AirAssault
-Anvil_RAAS_v2 TLF+Motorized BAF+Armored
-Yehorivka_Skirmish_v2 TLF+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 WPMC+AirAssault VDV+AirAssault
-Lashkar_Invasion_v1 INS+Mechanized MEA+Mechanized
-Manicouagan_RAAS_v2 RGF+Support CAF+Support
-Harju_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
-Fallujah_RAAS_v2 PLA+Armored CAF+Mechanized
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Chora_AAS_v3 RGF+CombinedArms TLF+CombinedArms
-Tallil_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 INS+Mechanized USA+Mechanized
-Gorodok_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Narva_AAS_v3 IMF+LightInfantry WPMC+LightInfantry
-AlBasrah_RAAS_v1 TLF+Armored INS+Support
-BlackCoast_RAAS_v2 IMF+Support PLA+Support
-Kokan_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
-Yehorivka_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v2 IMF+CombinedArms BAF+CombinedArms
-Skorpo_RAAS_v1 USA+Armored IMF+Armored
-Lashkar_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
-Sumari_AAS_v2 RGF+CombinedArms ADF+CombinedArms
-Kamdesh_AAS_v1 MEA+CombinedArms TLF+CombinedArms
-Gorodok_Destruction_v1 VDV+CombinedArms ADF+CombinedArms
-Mutaha_RAAS_v1 INS+CombinedArms ADF+CombinedArms
-GooseBay_AAS_v1 WPMC+AirAssault USA+AirAssault
-Harju_RAAS_v2 BAF+Support WPMC+LightInfantry
-Kokan_TC_v1 RGF+CombinedArms WPMC+CombinedArms
-AlBasrah_AAS_v1 PLA+Mechanized ADF+Mechanized
-BlackCoast_Invasion_v2 CAF+Support VDV+Support
-FoolsRoad_RAAS_v1 ADF+CombinedArms IMF+CombinedArms
-Anvil_AAS_v1 USMC+CombinedArms INS+CombinedArms
-Fallujah_TC_v1 TLF+Support INS+Support
-Skorpo_RAAS_v1 WPMC+AirAssault IMF+CombinedArms
-Chora_AAS_v2 PLA+CombinedArms RGF+CombinedArms
-Tallil_Invasion_v1 MEA+Mechanized INS+Mechanized
-Kamdesh_AAS_v1 VDV+Mechanized TLF+Mechanized
-Kohat_AAS_v1 TLF+CombinedArms BAF+CombinedArms
-Lashkar_Skirmish_v1 PLA+CombinedArms RGF+CombinedArms
-Sanxian_RAAS_v2 USMC+Motorized WPMC+CombinedArms
-Belaya_AAS_v2 VDV+CombinedArms TLF+CombinedArms
-Yehorivka_Invasion_v1 BAF+CombinedArms RGF+CombinedArms
-FoolsRoad_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v1 MEA+CombinedArms INS+CombinedArms
-Harju_AAS_v1 BAF+Armored RGF+Armored
-Kokan_Skirmish_v1 USA+CombinedArms MEA+CombinedArms
-AlBasrah_RAAS_v1 BAF+AirAssault MEA+Support
-Gorodok_Invasion_v1 RGF+Support USA+Support
-Kamdesh_RAAS_v1 ADF+AirAssault VDV+AirAssault
-BlackCoast_AAS_v2 ADF+AirAssault WPMC+AirAssault
-Fallujah_RAAS_v2 PLA+CombinedArms TLF+CombinedArms
-Anvil_Skirmish_v1 VDV+CombinedArms INS+CombinedArms
-Sanxian_RAAS_v2 WPMC+CombinedArms PLANMC+AirAssault
-Narva_Invasion_v2 BAF+Support IMF+Support
-Kohat_AAS_v1 PLA+AirAssault WPMC+AirAssault
-Manicouagan_RAAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Sumari_AAS_v2 WPMC+CombinedArms INS+CombinedArms
-Mutaha_RAAS_v1 VDV+Mechanized USMC+Motorized
-Tallil_TC_v1 BAF+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 MEA+Mechanized USA+Mechanized
-FoolsRoad_Invasion_v1 USA+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v2 VDV+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v1 INS+Mechanized WPMC+AirAssault
-Fallujah_AAS_v1 PLA+Armored VDV+Armored
-Lashkar_RAAS_v1 PLA+Armored USMC+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-BlackCoast_Invasion_v2 PLA+Mechanized VDV+Mechanized
-Gorodok_RAAS_v2 CAF+CombinedArms PLA+AirAssault
-Sumari_Skirmish_v1 MEA+CombinedArms USA+CombinedArms
-Kamdesh_AAS_v1 PLA+Motorized USMC+Motorized
-Tallil_RAAS_v1 TLF+Armored USA+Armored
+Mutaha_Skirmish_v1 USMC+CombinedArms VDV+CombinedArms
+Belaya_AAS_v3 WPMC+AirAssault CAF+AirAssault
+Narva_AAS_v1 CAF+CombinedArms RGF+CombinedArms
+Kokan_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v2 USMC+CombinedArms WPMC+CombinedArms
+Lashkar_RAAS_v1 PLA+Support USA+Support
+Yehorivka_TC_v1 PLA+Support USA+Support
+Gorodok_RAAS_v1 WPMC+AirAssault USA+Motorized
+GooseBay_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Manicouagan_Invasion_v1 WPMC+LightInfantry PLANMC+LightInfantry
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Fallujah_RAAS_v1 PLA+Support RGF+Support
+Sumari_AAS_v1 USA+CombinedArms VDV+CombinedArms
+Kamdesh_AAS_v1 INS+Mechanized BAF+CombinedArms
+Anvil_TC_v1 CAF+Motorized INS+Motorized
+Mestia_RAAS_v1 VDV+CombinedArms TLF+CombinedArms
+Harju_Invasion_v3 IMF+LightInfantry RGF+LightInfantry
+Belaya_AAS_v3 BAF+Mechanized VDV+Mechanized
+AlBasrah_AAS_v1 RGF+Support TLF+Mechanized
+Kokan_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Manicouagan_AAS_v3 USA+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Chora_Insurgency_v1 BAF+CombinedArms INS+CombinedArms
+Kohat_AAS_v1 INS+LightInfantry WPMC+LightInfantry
+Mutaha_AAS_v1 PLA+Armored WPMC+LightInfantry
+FoolsRoad_AAS_v2 TLF+CombinedArms IMF+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Anvil_TC_v1 VDV+AirAssault USA+AirAssault
+Gorodok_AAS_v1 IMF+Motorized USA+Motorized
+BlackCoast_Invasion_v2 RGF+CombinedArms PLA+CombinedArms
+Harju_RAAS_v2 WPMC+AirAssault IMF+Mechanized
+Belaya_AAS_v1 IMF+Motorized TLF+Motorized
+Kokan_TC_v1 PLA+CombinedArms MEA+CombinedArms
+Kamdesh_RAAS_v1 TLF+CombinedArms USMC+CombinedArms
+Fallujah_RAAS_v2 INS+CombinedArms WPMC+CombinedArms
+Lashkar_Invasion_v1 PLA+CombinedArms INS+Armored
+Kohat_RAAS_v2 PLA+Support TLF+Support
+Sanxian_AAS_v1 WPMC+AirAssault BAF+AirAssault
+Logar_AAS_v1 ADF+CombinedArms VDV+CombinedArms
+Tallil_AAS_v1 MEA+AirAssault VDV+AirAssault
+Yehorivka_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Gorodok_Destruction_v1 VDV+Support TLF+Support
+Belaya_AAS_v3 TLF+Mechanized BAF+Support
+Chora_TC_v1 TLF+CombinedArms MEA+CombinedArms
+AlBasrah_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v1 CAF+Mechanized VDV+Mechanized
+Anvil_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
+Mutaha_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
+Lashkar_RAAS_v1 VDV+Armored WPMC+AirAssault
+GooseBay_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Kohat_RAAS_v2 BAF+Support MEA+Support
+Kokan_AAS_v2 RGF+CombinedArms USA+CombinedArms
+Manicouagan_RAAS_v1 BAF+AirAssault WPMC+AirAssault
+Gorodok_Invasion_v1 CAF+Motorized TLF+Motorized
+Sumari_AAS_v1 PLA+CombinedArms CAF+CombinedArms
+Sanxian_RAAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Narva_RAAS_v1 BAF+CombinedArms IMF+Armored
+Logar_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
+BlackCoast_RAAS_v1 USA+Support PLA+Support
+Yehorivka_Invasion_v2 ADF+CombinedArms PLA+CombinedArms
+Chora_AAS_v2 PLA+CombinedArms MEA+CombinedArms
+Belaya_AAS_v2 ADF+CombinedArms IMF+CombinedArms
+Mutaha_TC_v1 INS+Motorized PLA+Motorized
+AlBasrah_RAAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Kamdesh_RAAS_v1 PLA+LightInfantry MEA+LightInfantry
+Gorodok_Destruction_v1 ADF+CombinedArms PLA+CombinedArms
+Kohat_AAS_v1 TLF+Motorized PLA+Motorized
+Skorpo_Skirmish_v1 IMF+CombinedArms USA+CombinedArms
+Tallil_AAS_v1 PLA+Support BAF+CombinedArms
+Lashkar_AAS_v1 TLF+AirAssault PLA+AirAssault
+Sanxian_RAAS_v2 USA+Armored PLAAGF+Armored
+FoolsRoad_Destruction_v1 IMF+CombinedArms USMC+CombinedArms
+Fallujah_RAAS_v2 CAF+Support MEA+Support
+Mutaha_RAAS_v2 PLA+LightInfantry RGF+LightInfantry
+AlBasrah_TC_v1 ADF+CombinedArms VDV+CombinedArms
+Narva_AAS_v1 CAF+Armored VDV+Armored
+Anvil_RAAS_v2 RGF+CombinedArms INS+LightInfantry
+Yehorivka_Destruction_v1 PLA+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 PLA+AirAssault WPMC+AirAssault
+Kokan_AAS_v1 PLA+CombinedArms RGF+CombinedArms
+Gorodok_RAAS_v1 USMC+Armored TLF+Armored
+Lashkar_TC_v2 INS+LightInfantry PLA+LightInfantry
+Harju_RAAS_v1 BAF+CombinedArms RGF+CombinedArms
+Tallil_Invasion_v1 USMC+Armored INS+Armored
+Belaya_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
+FoolsRoad_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
+Kohat_RAAS_v1 WPMC+AirAssault TLF+AirAssault
+AlBasrah_RAAS_v1 USA+Armored TLF+Motorized
+Logar_TC_v1 MEA+CombinedArms TLF+CombinedArms
+Skorpo_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+Manicouagan_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
+Yehorivka_AAS_v2 ADF+CombinedArms PLA+CombinedArms
+Kamdesh_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+Lashkar_AAS_v1 VDV+Support INS+Support
+Sumari_AAS_v3 PLA+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 PLA+LightInfantry USA+LightInfantry
+Anvil_Invasion_v1 CAF+Motorized TLF+CombinedArms
+Chora_AAS_v2 MEA+CombinedArms PLA+CombinedArms
+AlBasrah_TC_v1 MEA+CombinedArms PLAAGF+CombinedArms
+Tallil_RAAS_v1 MEA+CombinedArms USA+CombinedArms
+Kohat_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
+Mestia_RAAS_v1 USA+CombinedArms TLF+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Fallujah_Insurgency_v1 USMC+LightInfantry INS+LightInfantry
+Narva_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Kamdesh_RAAS_v1 BAF+Support VDV+Support
+BlackCoast_RAAS_v2 USA+Mechanized VDV+Mechanized
+Kokan_AAS_v2 USA+CombinedArms VDV+CombinedArms
+Gorodok_TC_v1 VDV+CombinedArms CAF+Support
+Yehorivka_RAAS_v1 PLA+Armored USA+Armored
+FoolsRoad_AAS_v2 TLF+CombinedArms USA+CombinedArms
+Lashkar_Invasion_v1 INS+Armored MEA+Armored
+Harju_AAS_v1 BAF+Mechanized IMF+Mechanized
+GooseBay_RAAS_v2 BAF+AirAssault PLANMC+LightInfantry
+Anvil_AAS_v1 VDV+Armored PLA+Armored
+Mestia_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
+Mutaha_RAAS_v1 PLA+AirAssault WPMC+AirAssault
+Manicouagan_Invasion_v1 PLANMC+Support USMC+Support
+Logar_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
+Narva_AAS_v3 WPMC+LightInfantry IMF+CombinedArms
+Gorodok_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Sanxian_RAAS_v2 WPMC+CombinedArms PLAAGF+CombinedArms
+Yehorivka_TC_v2 TLF+Armored PLA+Armored
+GooseBay_AAS_v1 PLA+LightInfantry BAF+Mechanized
+Fallujah_Invasion_v1 INS+LightInfantry WPMC+LightInfantry
+Skorpo_RAAS_v1 VDV+Support IMF+Support
+Mutaha_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Mestia_TC_v1 PLA+CombinedArms TLF+CombinedArms
+Manicouagan_AAS_v2 PLANMC+AirAssault WPMC+AirAssault
+Kohat_RAAS_v1 TLF+CombinedArms INS+Motorized
+FoolsRoad_Invasion_v1 IMF+CombinedArms CAF+CombinedArms
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v1 BAF+Support INS+Support
+Kamdesh_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
+Tallil_RAAS_v2 INS+Mechanized MEA+Mechanized
+Sanxian_AAS_v2 WPMC+CombinedArms PLANMC+CombinedArms
+Narva_Invasion_v2 WPMC+CombinedArms IMF+CombinedArms
+Yehorivka_AAS_v1 WPMC+LightInfantry IMF+Motorized
+Logar_Skirmish_v1 USA+CombinedArms MEA+CombinedArms
+BlackCoast_RAAS_v1 IMF+LightInfantry USA+LightInfantry
+Gorodok_AAS_v1 BAF+Support PLA+Support
+Mutaha_RAAS_v2 USA+LightInfantry WPMC+LightInfantry
+Belaya_Invasion_v1 USMC+Motorized IMF+Motorized
+AlBasrah_AAS_v1 BAF+AirAssault WPMC+AirAssault
+Sumari_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 ADF+CombinedArms RGF+Support
+Kokan_AAS_v2 ADF+CombinedArms WPMC+CombinedArms
+Yehorivka_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
+Narva_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Mestia_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
+Lashkar_RAAS_v1 MEA+Mechanized TLF+Mechanized
+Fallujah_AAS_v1 RGF+Support USMC+Support
+Belaya_AAS_v1 PLA+Support TLF+Support
+FoolsRoad_Destruction_v1 TLF+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 RGF+CombinedArms USMC+CombinedArms
+Tallil_RAAS_v2 TLF+Armored PLA+Support
+Anvil_TC_v1 VDV+AirAssault PLA+AirAssault
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+GooseBay_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Sumari_Invasion_v1 BAF+CombinedArms VDV+CombinedArms
+Manicouagan_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Gorodok_AAS_v1 BAF+Mechanized WPMC+AirAssault
+Fallujah_TC_v1 PLA+CombinedArms RGF+CombinedArms
+Mutaha_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
