--- a/Tools/Rotation/LayerRotation/LayerRotation_13.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_13.cfg
@@ -1,200 +1,200 @@
-Kohat_RAAS_v2 MEA+LightInfantry WPMC+LightInfantry
-GooseBay_Invasion_v1 PLAAGF+CombinedArms VDV+CombinedArms
-AlBasrah_AAS_v1 USA+AirAssault MEA+Mechanized
-Mestia_TC_v1 RGF+CombinedArms CAF+CombinedArms
-Harju_AAS_v1 CAF+Mechanized VDV+Mechanized
-Manicouagan_AAS_v3 WPMC+CombinedArms USMC+CombinedArms
-Anvil_RAAS_v2 PLA+Armored VDV+Armored
-Fallujah_Invasion_v2 USA+LightInfantry PLA+LightInfantry
-Mutaha_RAAS_v2 ADF+CombinedArms MEA+CombinedArms
-FoolsRoad_Skirmish_v1 PLA+CombinedArms IMF+CombinedArms
-Gorodok_AAS_v1 PLA+AirAssault TLF+Armored
-Tallil_RAAS_v2 RGF+Mechanized BAF+Mechanized
-Kokan_AAS_v1 USMC+CombinedArms PLA+CombinedArms
-Sanxian_Invasion_v2 BAF+CombinedArms WPMC+CombinedArms
-Kamdesh_RAAS_v1 PLA+Armored USA+Armored
-BlackCoast_Skirmish_v1 PLANMC+CombinedArms ADF+CombinedArms
-AlBasrah_AAS_v1 PLAAGF+Armored USMC+Armored
-Anvil_RAAS_v2 MEA+LightInfantry USA+Support
-Manicouagan_AAS_v3 WPMC+LightInfantry PLANMC+LightInfantry
-Yehorivka_Invasion_v2 PLA+CombinedArms BAF+CombinedArms
-Logar_RAAS_v1 INS+CombinedArms TLF+CombinedArms
-Gorodok_AAS_v1 PLA+Armored USMC+Armored
-Harju_AAS_v1 CAF+CombinedArms IMF+CombinedArms
-Kokan_TC_v1 ADF+CombinedArms INS+CombinedArms
-Skorpo_RAAS_v1 BAF+Support VDV+Support
-Tallil_Invasion_v1 TLF+Armored VDV+Armored
-GooseBay_AAS_v1 PLANMC+Motorized WPMC+LightInfantry
-Lashkar_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
-Fallujah_Skirmish_v1 VDV+CombinedArms INS+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Mutaha_RAAS_v1 TLF+Armored MEA+Armored
-AlBasrah_Insurgency_v1 MEA+Support INS+Motorized
-Mestia_RAAS_v1 VDV+CombinedArms USA+CombinedArms
-Yehorivka_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
-Gorodok_RAAS_v2 USMC+LightInfantry IMF+LightInfantry
-Kokan_Skirmish_v1 WPMC+CombinedArms BAF+CombinedArms
-Kamdesh_AAS_v1 USA+Mechanized PLA+Motorized
-Narva_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
-Logar_Insurgency_v1 PLA+CombinedArms INS+CombinedArms
-Skorpo_RAAS_v1 USMC+LightInfantry IMF+LightInfantry
-Tallil_TC_v1 MEA+Mechanized ADF+Mechanized
-Kohat_RAAS_v2 BAF+Mechanized VDV+Mechanized
-BlackCoast_AAS_v2 CAF+Mechanized RGF+Armored
-Lashkar_RAAS_v1 MEA+Armored INS+Armored
-AlBasrah_Invasion_v2 RGF+Mechanized INS+Mechanized
-Chora_AAS_v3 USA+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v2 TLF+Armored USA+Armored
-Fallujah_RAAS_v2 USMC+Motorized PLA+Support
-Kokan_AAS_v2 BAF+CombinedArms MEA+CombinedArms
-Narva_AAS_v2 ADF+AirAssault WPMC+AirAssault
-Mutaha_Invasion_v1 PLA+Armored BAF+Armored
-Logar_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
-Harju_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 PLANMC+Armored USA+Armored
-Kohat_TC_v1 TLF+Motorized INS+CombinedArms
-Mestia_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Tallil_Invasion_v1 PLA+Armored VDV+Armored
-AlBasrah_RAAS_v1 PLAAGF+Mechanized VDV+Mechanized
-FoolsRoad_AAS_v1 PLA+CombinedArms IMF+CombinedArms
-Fallujah_RAAS_v1 BAF+CombinedArms INS+Motorized
-Kamdesh_RAAS_v1 BAF+AirAssault PLA+AirAssault
-Skorpo_RAAS_v1 USMC+Armored IMF+Armored
-Kokan_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v3 WPMC+AirAssault PLA+AirAssault
-Yehorivka_RAAS_v1 RGF+Armored USMC+Armored
-Chora_TC_v1 PLA+CombinedArms USMC+CombinedArms
-GooseBay_AAS_v1 WPMC+CombinedArms VDV+CombinedArms
-Kohat_AAS_v1 TLF+CombinedArms USMC+LightInfantry
-Gorodok_Destruction_v1 VDV+CombinedArms CAF+CombinedArms
-Lashkar_RAAS_v1 PLA+Support USMC+Support
-Mestia_TC_v1 IMF+CombinedArms WPMC+CombinedArms
-Kamdesh_RAAS_v1 TLF+Motorized USMC+Motorized
-Skorpo_RAAS_v1 WPMC+AirAssault USMC+Motorized
-Narva_AAS_v2 IMF+CombinedArms ADF+CombinedArms
-Tallil_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
-Anvil_RAAS_v2 CAF+Armored MEA+Armored
-FoolsRoad_AAS_v2 RGF+CombinedArms TLF+CombinedArms
-BlackCoast_RAAS_v2 WPMC+AirAssault PLANMC+Armored
-Fallujah_TC_v1 VDV+CombinedArms ADF+CombinedArms
-AlBasrah_RAAS_v1 BAF+Mechanized INS+Mechanized
-Sumari_Invasion_v1 RGF+CombinedArms PLA+CombinedArms
-Yehorivka_AAS_v1 USMC+CombinedArms IMF+CombinedArms
-Manicouagan_AAS_v2 PLA+Mechanized USMC+LightInfantry
-Kohat_TC_v1 WPMC+LightInfantry INS+LightInfantry
-Skorpo_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v1 TLF+Motorized USMC+Motorized
-Kamdesh_Invasion_v1 MEA+Armored INS+Armored
-Mutaha_RAAS_v1 TLF+AirAssault VDV+AirAssault
-Anvil_TC_v1 WPMC+CombinedArms TLF+AirAssault
-Fallujah_RAAS_v2 TLF+Motorized INS+Motorized
-Harju_RAAS_v1 IMF+LightInfantry USMC+LightInfantry
-Kokan_AAS_v2 USA+CombinedArms WPMC+CombinedArms
-Yehorivka_Destruction_v1 IMF+Support RGF+Support
-GooseBay_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-BlackCoast_Skirmish_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 USMC+LightInfantry WPMC+AirAssault
-AlBasrah_RAAS_v1 VDV+AirAssault USA+AirAssault
-Mestia_AAS_v1 BAF+CombinedArms IMF+CombinedArms
-Lashkar_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 RGF+Mechanized IMF+Mechanized
+BlackCoast_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
+Kohat_Insurgency_v1 PLA+CombinedArms INS+CombinedArms
 Logar_RAAS_v1 USMC+CombinedArms PLA+CombinedArms
-Anvil_Invasion_v1 BAF+Support TLF+Support
-Fallujah_RAAS_v1 MEA+LightInfantry WPMC+LightInfantry
-Kamdesh_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Yehorivka_RAAS_v1 PLA+CombinedArms USA+Motorized
-Manicouagan_RAAS_v2 USA+CombinedArms PLAAGF+CombinedArms
-FoolsRoad_AAS_v2 TLF+CombinedArms RGF+CombinedArms
-Kohat_Invasion_v2 MEA+Armored INS+Armored
-AlBasrah_AAS_v1 RGF+Armored USA+Armored
-Lashkar_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
-Belaya_AAS_v2 ADF+AirAssault PLA+AirAssault
-Sanxian_RAAS_v2 ADF+Mechanized WPMC+AirAssault
-Anvil_RAAS_v2 WPMC+LightInfantry INS+LightInfantry
-Gorodok_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
-Mutaha_RAAS_v1 INS+Mechanized ADF+Mechanized
-Mestia_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Harju_RAAS_v1 ADF+CombinedArms IMF+CombinedArms
-BlackCoast_AAS_v2 WPMC+AirAssault TLF+AirAssault
-Sumari_AAS_v2 INS+CombinedArms USMC+CombinedArms
-AlBasrah_Invasion_v2 RGF+LightInfantry PLA+LightInfantry
-Yehorivka_RAAS_v2 WPMC+CombinedArms PLA+CombinedArms
-Narva_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
-Manicouagan_RAAS_v1 CAF+Mechanized WPMC+AirAssault
-Anvil_AAS_v1 INS+LightInfantry MEA+LightInfantry
-Fallujah_RAAS_v1 INS+CombinedArms BAF+CombinedArms
-FoolsRoad_Invasion_v1 TLF+CombinedArms RGF+CombinedArms
-Lashkar_RAAS_v1 USMC+CombinedArms PLA+CombinedArms
-Kamdesh_AAS_v1 PLA+AirAssault ADF+AirAssault
-Mutaha_RAAS_v2 PLA+Support RGF+Support
-Mestia_TC_v1 USMC+CombinedArms TLF+CombinedArms
-Sanxian_RAAS_v1 PLAAGF+CombinedArms ADF+CombinedArms
-Yehorivka_Invasion_v2 VDV+Armored PLA+Armored
-Kohat_AAS_v1 TLF+Armored WPMC+LightInfantry
-AlBasrah_RAAS_v1 CAF+Support INS+Support
-Manicouagan_Skirmish_v2 BAF+CombinedArms WPMC+CombinedArms
-Tallil_AAS_v1 RGF+Mechanized MEA+Mechanized
-Fallujah_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
-Chora_AAS_v1 INS+CombinedArms USA+CombinedArms
-Anvil_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v1 TLF+Motorized WPMC+LightInfantry
-Kamdesh_AAS_v1 MEA+Mechanized BAF+Mechanized
-Logar_TC_v1 TLF+CombinedArms PLA+CombinedArms
-Lashkar_RAAS_v1 ADF+AirAssault WPMC+AirAssault
-Gorodok_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Yehorivka_Destruction_v1 TLF+AirAssault BAF+Mechanized
-Sanxian_AAS_v2 PLANMC+AirAssault CAF+AirAssault
-Harju_Skirmish_v2 WPMC+CombinedArms IMF+CombinedArms
-PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v2 VDV+CombinedArms ADF+CombinedArms
-Manicouagan_RAAS_v2 PLANMC+AirAssault WPMC+CombinedArms
-Kokan_Invasion_v1 TLF+CombinedArms BAF+CombinedArms
-Fallujah_RAAS_v2 TLF+CombinedArms VDV+CombinedArms
-GooseBay_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-BlackCoast_Skirmish_v1 TLF+CombinedArms PLANMC+CombinedArms
-Narva_AAS_v1 RGF+Motorized USMC+Motorized
-Mutaha_AAS_v1 WPMC+CombinedArms CAF+AirAssault
-Yehorivka_Destruction_v1 TLF+Support IMF+Support
-Skorpo_RAAS_v1 VDV+AirAssault WPMC+AirAssault
-Gorodok_TC_v1 PLA+CombinedArms IMF+CombinedArms
-Mestia_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Kohat_AAS_v1 INS+Armored PLA+AirAssault
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-FoolsRoad_Destruction_v1 VDV+CombinedArms TLF+CombinedArms
-Belaya_RAAS_v1 TLF+Motorized IMF+Motorized
-Anvil_TC_v1 WPMC+CombinedArms BAF+CombinedArms
-Lashkar_RAAS_v1 USA+Mechanized INS+Mechanized
-Manicouagan_AAS_v2 PLAAGF+Armored VDV+Armored
-Harju_AAS_v1 VDV+Armored WPMC+LightInfantry
-Sumari_Invasion_v1 TLF+CombinedArms CAF+CombinedArms
-AlBasrah_AAS_v1 WPMC+AirAssault USA+AirAssault
-Fallujah_TC_v1 TLF+Support INS+Support
-Yehorivka_AAS_v2 TLF+AirAssault CAF+AirAssault
-Tallil_AAS_v1 USMC+LightInfantry RGF+Armored
-Kokan_AAS_v2 MEA+CombinedArms INS+CombinedArms
-Kohat_Insurgency_v1 WPMC+LightInfantry INS+LightInfantry
-Mutaha_RAAS_v1 RGF+LightInfantry PLA+LightInfantry
-Gorodok_TC_v1 CAF+CombinedArms VDV+CombinedArms
-Manicouagan_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Anvil_RAAS_v1 INS+LightInfantry MEA+LightInfantry
-Sumari_AAS_v2 TLF+CombinedArms USA+CombinedArms
-Harju_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v1 VDV+Support PLA+CombinedArms
-Fallujah_Skirmish_v1 INS+CombinedArms ADF+CombinedArms
-Narva_AAS_v2 IMF+Mechanized ADF+Mechanized
-Tallil_RAAS_v2 USMC+CombinedArms RGF+CombinedArms
-FoolsRoad_AAS_v2 BAF+CombinedArms TLF+CombinedArms
-Yehorivka_Invasion_v1 ADF+Mechanized VDV+Mechanized
-Gorodok_RAAS_v2 IMF+Mechanized ADF+AirAssault
-Kohat_TC_v1 MEA+Mechanized CAF+Mechanized
-Kamdesh_AAS_v1 RGF+LightInfantry WPMC+LightInfantry
-BlackCoast_AAS_v2 TLF+Armored PLA+Armored
-Logar_AAS_v1 PLA+CombinedArms USA+CombinedArms
-Mutaha_Invasion_v1 VDV+CombinedArms USA+CombinedArms
-Anvil_RAAS_v1 BAF+Armored WPMC+CombinedArms
-Kokan_Skirmish_v1 INS+CombinedArms ADF+CombinedArms
-Fallujah_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
-GooseBay_AAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
-Yehorivka_AAS_v1 IMF+Mechanized ADF+Mechanized
-FoolsRoad_Destruction_v1 RGF+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v1 TLF+AirAssault IMF+LightInfantry
+Tallil_TC_v1 BAF+Armored PLA+Armored
+FoolsRoad_RAAS_v1 PLA+CombinedArms IMF+CombinedArms
+Belaya_AAS_v3 PLA+CombinedArms CAF+CombinedArms
+Manicouagan_Invasion_v2 WPMC+CombinedArms RGF+CombinedArms
+GooseBay_AAS_v1 WPMC+AirAssault VDV+AirAssault
+Chora_TC_v1 PLA+CombinedArms VDV+CombinedArms
+Mutaha_AAS_v2 PLA+Armored USA+Armored
+Sanxian_AAS_v2 USMC+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v2 PLA+Motorized CAF+Motorized
+Kamdesh_Invasion_v1 PLA+AirAssault RGF+CombinedArms
+Sumari_AAS_v2 RGF+CombinedArms MEA+CombinedArms
+Anvil_RAAS_v2 TLF+AirAssault WPMC+AirAssault
+BlackCoast_RAAS_v2 PLANMC+AirAssault BAF+AirAssault
+AlBasrah_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
+Tallil_AAS_v1 TLF+CombinedArms RGF+CombinedArms
+Fallujah_Invasion_v1 RGF+Mechanized ADF+CombinedArms
+Skorpo_RAAS_v1 RGF+Armored CAF+Armored
+Manicouagan_AAS_v3 PLANMC+Armored CAF+Armored
+Logar_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
+Gorodok_AAS_v1 USMC+Armored PLA+Armored
+Mutaha_RAAS_v2 ADF+CombinedArms PLA+CombinedArms
+Yehorivka_Invasion_v2 USMC+CombinedArms PLA+Motorized
+Mestia_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
+Kohat_TC_v1 RGF+LightInfantry USMC+LightInfantry
+GooseBay_AAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Chora_RAAS_v1 MEA+CombinedArms INS+CombinedArms
+Tallil_RAAS_v2 USA+Support PLA+Support
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+FoolsRoad_Skirmish_v2 TLF+CombinedArms USA+CombinedArms
+Sanxian_RAAS_v2 USMC+CombinedArms WPMC+CombinedArms
+Gorodok_Invasion_v2 RGF+Support IMF+LightInfantry
+Sumari_AAS_v3 USMC+CombinedArms TLF+CombinedArms
+Yehorivka_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Lashkar_AAS_v1 TLF+CombinedArms ADF+CombinedArms
+Anvil_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 INS+Mechanized MEA+Mechanized
+Mestia_Invasion_v1 IMF+CombinedArms USA+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Tallil_TC_v1 TLF+Support WPMC+CombinedArms
+Logar_AAS_v1 USA+CombinedArms PLA+CombinedArms
+Fallujah_AAS_v1 TLF+Support BAF+Support
+Narva_RAAS_v1 RGF+LightInfantry IMF+LightInfantry
+Mutaha_Invasion_v1 INS+Mechanized BAF+Mechanized
+FoolsRoad_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Belaya_RAAS_v1 TLF+AirAssault WPMC+AirAssault
+Kohat_TC_v1 WPMC+LightInfantry BAF+Support
+Mestia_AAS_v1 CAF+CombinedArms TLF+CombinedArms
+Kamdesh_Invasion_v1 VDV+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 PLANMC+Armored MEA+Armored
+Sumari_AAS_v2 MEA+CombinedArms TLF+CombinedArms
+Lashkar_TC_v1 BAF+AirAssault RGF+Armored
+BlackCoast_RAAS_v2 PLA+Armored RGF+Armored
+Logar_RAAS_v1 RGF+CombinedArms MEA+CombinedArms
+Anvil_Invasion_v1 TLF+Motorized RGF+Motorized
+Gorodok_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Fallujah_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
+Harju_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Kohat_AAS_v1 INS+Support MEA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms USMC+CombinedArms
+FoolsRoad_Invasion_v1 CAF+CombinedArms VDV+CombinedArms
+Manicouagan_AAS_v1 PLANMC+AirAssault VDV+AirAssault
+Sanxian_AAS_v1 CAF+Support PLA+Support
+Mutaha_TC_v1 INS+CombinedArms VDV+CombinedArms
+GooseBay_AAS_v1 PLANMC+Armored USA+Armored
+Tallil_RAAS_v2 WPMC+CombinedArms MEA+AirAssault
+Yehorivka_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
+Fallujah_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Mestia_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+AlBasrah_TC_v1 WPMC+LightInfantry MEA+LightInfantry
+Anvil_RAAS_v1 MEA+CombinedArms TLF+AirAssault
+Logar_AAS_v1 USA+CombinedArms TLF+CombinedArms
+Narva_Invasion_v1 VDV+Support BAF+Support
+Manicouagan_AAS_v3 WPMC+AirAssault USA+AirAssault
+Kohat_RAAS_v1 TLF+Armored PLA+Armored
+Kokan_Skirmish_v1 USA+CombinedArms MEA+CombinedArms
+Gorodok_AAS_v1 CAF+AirAssault VDV+Mechanized
+Sanxian_RAAS_v2 USA+LightInfantry WPMC+LightInfantry
+Sumari_Insurgency_v1 USA+CombinedArms INS+CombinedArms
+BlackCoast_RAAS_v1 PLANMC+AirAssault BAF+AirAssault
+Tallil_AAS_v1 MEA+Mechanized BAF+Mechanized
+Mestia_RAAS_v1 USMC+CombinedArms RGF+CombinedArms
+Belaya_AAS_v2 TLF+Motorized IMF+Mechanized
+AlBasrah_AAS_v1 MEA+Armored BAF+Armored
+Chora_Invasion_v1 PLA+CombinedArms BAF+CombinedArms
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+GooseBay_AAS_v1 WPMC+AirAssault USA+AirAssault
+Fallujah_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Anvil_TC_v1 PLA+Support USMC+Support
+Lashkar_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
+Kokan_Invasion_v1 USA+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v2 BAF+AirAssault PLA+AirAssault
+Kamdesh_TC_v1 INS+Armored WPMC+AirAssault
+Sumari_AAS_v3 PLA+CombinedArms MEA+CombinedArms
+AlBasrah_AAS_v1 BAF+Armored INS+Armored
+Skorpo_RAAS_v1 USMC+LightInfantry IMF+LightInfantry
+FoolsRoad_AAS_v2 PLA+CombinedArms USA+CombinedArms
+Yehorivka_Destruction_v1 VDV+CombinedArms USMC+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Manicouagan_AAS_v3 PLA+Motorized CAF+Motorized
+Narva_AAS_v2 WPMC+CombinedArms IMF+Armored
+Mestia_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+GooseBay_RAAS_v2 VDV+CombinedArms USA+CombinedArms
+Tallil_Invasion_v1 PLA+CombinedArms USA+CombinedArms
+Gorodok_AAS_v1 TLF+Motorized PLA+Motorized
+Anvil_TC_v1 PLA+Support RGF+Motorized
+Logar_RAAS_v1 TLF+CombinedArms RGF+CombinedArms
+BlackCoast_RAAS_v2 VDV+Mechanized PLAAGF+Mechanized
+Sanxian_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Yehorivka_Destruction_v1 IMF+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Sumari_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Fallujah_AAS_v1 USMC+Armored INS+Armored
+Kamdesh_RAAS_v1 MEA+Mechanized USA+Mechanized
+GooseBay_Skirmish_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Tallil_RAAS_v1 TLF+Mechanized INS+Mechanized
+Lashkar_Invasion_v1 PLA+CombinedArms TLF+Armored
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Belaya_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kohat_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v1 INS+Mechanized BAF+Mechanized
+Sanxian_RAAS_v1 PLAAGF+Mechanized USA+Mechanized
+Gorodok_Invasion_v1 PLA+Armored USMC+Armored
+Mutaha_AAS_v1 USMC+Support TLF+CombinedArms
+Sumari_TC_v1 WPMC+CombinedArms MEA+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Fallujah_AAS_v1 VDV+Armored USMC+Armored
+Manicouagan_AAS_v1 USA+Motorized PLA+Motorized
+Harju_Invasion_v2 WPMC+AirAssault IMF+Support
+Kokan_AAS_v2 RGF+CombinedArms WPMC+CombinedArms
+Narva_AAS_v1 WPMC+AirAssault BAF+AirAssault
+Tallil_AAS_v1 TLF+Support MEA+Support
+Kamdesh_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 WPMC+LightInfantry PLAAGF+CombinedArms
+Belaya_Invasion_v1 IMF+Mechanized BAF+Mechanized
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Mutaha_AAS_v1 MEA+AirAssault WPMC+AirAssault
+FoolsRoad_TC_v1 WPMC+CombinedArms CAF+CombinedArms
+BlackCoast_RAAS_v1 PLAAGF+Mechanized CAF+Mechanized
+Yehorivka_RAAS_v2 TLF+CombinedArms IMF+CombinedArms
+Fallujah_Invasion_v1 PLA+Support USMC+Support
+Gorodok_AAS_v1 IMF+CombinedArms WPMC+LightInfantry
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Lashkar_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+Manicouagan_RAAS_v1 PLANMC+AirAssault WPMC+AirAssault
+Mestia_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
+Narva_Destruction_v1 WPMC+CombinedArms CAF+CombinedArms
+GooseBay_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Sumari_Skirmish_v1 ADF+CombinedArms RGF+CombinedArms
+BlackCoast_RAAS_v1 VDV+Mechanized USA+Mechanized
+Kohat_RAAS_v2 TLF+Mechanized MEA+Mechanized
+Fallujah_AAS_v1 PLA+LightInfantry RGF+LightInfantry
+Tallil_Invasion_v1 INS+Motorized CAF+Motorized
+Belaya_RAAS_v1 IMF+Armored TLF+Armored
+Gorodok_RAAS_v2 TLF+Motorized ADF+CombinedArms
+Anvil_Skirmish_v1 USMC+CombinedArms RGF+CombinedArms
+Lashkar_AAS_v1 PLA+Motorized TLF+Motorized
+Yehorivka_AAS_v2 USMC+Motorized PLA+Motorized
+Kokan_Invasion_v1 TLF+CombinedArms VDV+CombinedArms
+Manicouagan_AAS_v3 USA+AirAssault WPMC+AirAssault
+Mutaha_AAS_v1 USMC+LightInfantry TLF+Mechanized
+FoolsRoad_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
+GooseBay_AAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
+Kamdesh_RAAS_v1 TLF+AirAssault USA+AirAssault
+Harju_Invasion_v2 IMF+Motorized USMC+Motorized
+Mestia_AAS_v2 ADF+CombinedArms IMF+CombinedArms
+Kohat_TC_v1 INS+Mechanized VDV+Mechanized
+Gorodok_RAAS_v1 TLF+Mechanized VDV+Mechanized
+Logar_AAS_v1 CAF+CombinedArms PLA+CombinedArms
+Narva_AAS_v3 RGF+Support CAF+Support
+Lashkar_Invasion_v1 WPMC+CombinedArms USMC+Armored
+Fallujah_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Belaya_AAS_v2 IMF+CombinedArms USMC+CombinedArms
+Yehorivka_RAAS_v2 IMF+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 PLA+Support RGF+Support
+Tallil_TC_v1 MEA+Support RGF+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Kohat_Invasion_v2 BAF+Support INS+Support
+Gorodok_RAAS_v1 TLF+Armored PLA+Armored
+Anvil_RAAS_v1 PLA+AirAssault ADF+AirAssault
+Mutaha_RAAS_v1 ADF+Mechanized RGF+Mechanized
+Logar_TC_v1 WPMC+CombinedArms INS+CombinedArms
+Manicouagan_RAAS_v1 USA+CombinedArms VDV+CombinedArms
+Lashkar_Invasion_v1 INS+Mechanized CAF+Mechanized
+Kokan_AAS_v2 INS+CombinedArms TLF+CombinedArms
+Narva_AAS_v2 IMF+Motorized RGF+Motorized
+Fallujah_AAS_v1 MEA+LightInfantry BAF+CombinedArms
+Harju_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
+GooseBay_RAAS_v1 PLANMC+LightInfantry USA+LightInfantry
+Gorodok_Destruction_v1 WPMC+LightInfantry IMF+LightInfantry
+Sumari_AAS_v3 RGF+CombinedArms USMC+CombinedArms
+Kamdesh_RAAS_v1 WPMC+AirAssault MEA+Armored
+Yehorivka_AAS_v2 PLA+AirAssault WPMC+AirAssault
+AlBasrah_Skirmish_v2 MEA+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 CAF+CombinedArms IMF+CombinedArms
