--- a/Tools/Rotation/LayerRotation/LayerRotation_15.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_15.cfg
@@ -1,200 +1,200 @@
-Narva_Invasion_v1 WPMC+CombinedArms RGF+CombinedArms
-Lashkar_RAAS_v1 BAF+Mechanized INS+Mechanized
-Anvil_TC_v1 ADF+CombinedArms PLA+CombinedArms
-Mestia_AAS_v1 TLF+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v1 BAF+AirAssault PLA+Support
-Gorodok_AAS_v1 WPMC+AirAssault TLF+AirAssault
-Skorpo_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Kokan_Invasion_v1 PLA+CombinedArms USMC+CombinedArms
-Manicouagan_RAAS_v2 WPMC+CombinedArms VDV+CombinedArms
-Kamdesh_RAAS_v1 USA+CombinedArms PLA+CombinedArms
-Tallil_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
-GooseBay_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Sanxian_RAAS_v2 BAF+AirAssault WPMC+AirAssault
-Fallujah_Invasion_v2 MEA+Support INS+Motorized
-Chora_AAS_v2 PLA+CombinedArms VDV+CombinedArms
-AlBasrah_RAAS_v1 RGF+CombinedArms TLF+CombinedArms
-Yehorivka_RAAS_v1 PLA+Motorized IMF+Motorized
-Logar_TC_v1 PLA+CombinedArms ADF+CombinedArms
-Gorodok_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
-Belaya_Invasion_v2 TLF+Motorized USA+Motorized
-Sumari_AAS_v2 PLA+CombinedArms MEA+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 ADF+AirAssault VDV+AirAssault
-Manicouagan_RAAS_v2 USMC+CombinedArms VDV+CombinedArms
-Fallujah_RAAS_v1 USMC+LightInfantry RGF+Mechanized
-Kokan_Invasion_v1 PLA+CombinedArms VDV+CombinedArms
-Kohat_RAAS_v1 VDV+Support BAF+Support
-Anvil_AAS_v1 PLA+CombinedArms ADF+CombinedArms
-Lashkar_AAS_v1 TLF+Support MEA+Support
-Gorodok_TC_v1 WPMC+AirAssault ADF+AirAssault
-AlBasrah_AAS_v1 VDV+Support WPMC+AirAssault
-Mestia_Invasion_v1 USMC+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 USA+Support IMF+Support
-Mutaha_RAAS_v1 MEA+Armored TLF+Armored
-Kamdesh_TC_v1 PLA+Armored MEA+Armored
-Narva_AAS_v1 BAF+Support VDV+Mechanized
-Belaya_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Destruction_v1 PLA+CombinedArms IMF+CombinedArms
-Kohat_AAS_v1 MEA+Mechanized USA+Mechanized
-Tallil_AAS_v1 PLA+AirAssault BAF+AirAssault
-Anvil_RAAS_v1 VDV+CombinedArms INS+Mechanized
-Fallujah_RAAS_v1 INS+CombinedArms ADF+CombinedArms
-Gorodok_RAAS_v1 PLA+Support BAF+Support
-Yehorivka_Destruction_v1 PLA+LightInfantry WPMC+LightInfantry
-Chora_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
-Manicouagan_AAS_v2 PLA+LightInfantry WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Mestia_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 ADF+CombinedArms VDV+CombinedArms
-Sanxian_Invasion_v2 ADF+CombinedArms PLANMC+CombinedArms
-Kokan_RAAS_v1 ADF+CombinedArms MEA+CombinedArms
-Kohat_AAS_v1 PLA+Armored CAF+Armored
-Fallujah_TC_v1 PLA+Armored WPMC+CombinedArms
-Anvil_RAAS_v1 WPMC+AirAssault TLF+AirAssault
-Sumari_AAS_v1 PLA+CombinedArms TLF+CombinedArms
-Skorpo_Invasion_v1 USMC+Armored IMF+Armored
-GooseBay_RAAS_v2 WPMC+CombinedArms PLANMC+CombinedArms
+AlBasrah_RAAS_v1 INS+Armored PLA+Armored
+Logar_RAAS_v1 ADF+CombinedArms VDV+CombinedArms
+Manicouagan_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
+BlackCoast_Invasion_v2 USA+LightInfantry WPMC+LightInfantry
+Sanxian_AAS_v3 USMC+Support PLANMC+Support
+Chora_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
+Narva_AAS_v2 WPMC+AirAssault IMF+Armored
+Gorodok_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
+Mestia_RAAS_v1 TLF+CombinedArms IMF+CombinedArms
+Skorpo_Invasion_v1 IMF+CombinedArms USA+CombinedArms
+Anvil_RAAS_v2 MEA+Armored USA+Armored
+Lashkar_RAAS_v1 USMC+Motorized MEA+AirAssault
+Kohat_RAAS_v1 ADF+Mechanized VDV+Mechanized
+FoolsRoad_Skirmish_v1 USA+CombinedArms VDV+CombinedArms
+Mutaha_AAS_v1 ADF+CombinedArms TLF+CombinedArms
+Harju_Invasion_v3 IMF+LightInfantry WPMC+LightInfantry
+Logar_RAAS_v1 MEA+CombinedArms INS+CombinedArms
+GooseBay_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Gorodok_TC_v1 BAF+Mechanized RGF+Mechanized
+Mestia_AAS_v1 IMF+CombinedArms BAF+CombinedArms
+Manicouagan_RAAS_v2 WPMC+CombinedArms USMC+CombinedArms
+Yehorivka_Destruction_v1 TLF+Support IMF+Support
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Tallil_RAAS_v2 INS+Armored CAF+Armored
+Kokan_TC_v1 INS+CombinedArms TLF+CombinedArms
+AlBasrah_AAS_v1 TLF+AirAssault MEA+AirAssault
+Mutaha_RAAS_v1 WPMC+LightInfantry USA+Motorized
+Lashkar_Invasion_v1 BAF+Mechanized MEA+Mechanized
+Kamdesh_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Fallujah_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
+Kohat_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Gorodok_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 IMF+Support RGF+Support
+Narva_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Sanxian_Invasion_v2 USA+LightInfantry WPMC+LightInfantry
 PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-AlBasrah_AAS_v1 VDV+Armored PLA+Armored
-Chora_Skirmish_v1 INS+CombinedArms ADF+CombinedArms
-Lashkar_AAS_v2 MEA+LightInfantry INS+LightInfantry
-Manicouagan_Invasion_v2 WPMC+LightInfantry PLA+Support
-Logar_AAS_v1 RGF+CombinedArms USA+CombinedArms
-Kohat_RAAS_v2 BAF+CombinedArms PLA+CombinedArms
-Mutaha_TC_v1 USA+Support VDV+Support
-Mestia_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 RGF+CombinedArms WPMC+CombinedArms
-GooseBay_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 CAF+Support IMF+Motorized
-Yehorivka_RAAS_v2 CAF+Armored PLA+Armored
-AlBasrah_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Sumari_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
-Narva_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Gorodok_Invasion_v2 USA+LightInfantry PLA+LightInfantry
-Kohat_RAAS_v1 MEA+Mechanized PLA+CombinedArms
-Kamdesh_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v2 USMC+LightInfantry MEA+LightInfantry
-Sanxian_RAAS_v2 BAF+AirAssault WPMC+AirAssault
-Kokan_AAS_v1 PLA+CombinedArms USA+CombinedArms
-Lashkar_Invasion_v1 RGF+LightInfantry INS+LightInfantry
-Tallil_RAAS_v2 RGF+Motorized USMC+Motorized
-FoolsRoad_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
-Fallujah_TC_v1 PLA+Support ADF+CombinedArms
-Harju_RAAS_v2 USMC+Armored VDV+Armored
-Yehorivka_AAS_v2 RGF+CombinedArms ADF+CombinedArms
-Gorodok_Invasion_v1 CAF+Motorized PLA+Motorized
-Logar_RAAS_v1 TLF+CombinedArms USA+CombinedArms
-Belaya_AAS_v1 PLA+Armored TLF+Motorized
-Kohat_RAAS_v2 VDV+CombinedArms INS+CombinedArms
-Anvil_TC_v1 TLF+Motorized INS+Motorized
-Kamdesh_AAS_v1 VDV+Mechanized USA+Mechanized
-Mutaha_Invasion_v1 INS+Support VDV+Support
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Lashkar_RAAS_v1 PLA+AirAssault VDV+AirAssault
-AlBasrah_TC_v1 CAF+Motorized TLF+Motorized
-Tallil_AAS_v1 ADF+AirAssault PLA+AirAssault
-Gorodok_RAAS_v1 TLF+AirAssault WPMC+AirAssault
-Manicouagan_Invasion_v2 RGF+LightInfantry WPMC+CombinedArms
-Chora_AAS_v3 RGF+CombinedArms ADF+CombinedArms
-Kohat_RAAS_v2 PLA+Motorized USA+Motorized
-Yehorivka_RAAS_v2 CAF+CombinedArms IMF+CombinedArms
-Harju_AAS_v3 IMF+CombinedArms ADF+CombinedArms
-Fallujah_AAS_v1 PLA+Support INS+Support
-Narva_Invasion_v1 IMF+Armored WPMC+LightInfantry
-GooseBay_RAAS_v2 PLAAGF+Armored BAF+Armored
-Sumari_TC_v1 PLA+CombinedArms ADF+CombinedArms
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v2 USA+AirAssault WPMC+AirAssault
-AlBasrah_RAAS_v1 VDV+Mechanized INS+Mechanized
-Manicouagan_Invasion_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-FoolsRoad_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Anvil_AAS_v1 RGF+CombinedArms TLF+CombinedArms
-Kohat_AAS_v1 MEA+AirAssault TLF+AirAssault
-Kamdesh_AAS_v1 USMC+LightInfantry MEA+LightInfantry
-Tallil_RAAS_v2 WPMC+AirAssault ADF+CombinedArms
-Gorodok_Invasion_v1 PLA+Armored RGF+Armored
-Kokan_AAS_v1 VDV+CombinedArms TLF+CombinedArms
-Fallujah_TC_v1 USA+Armored PLA+Armored
-Yehorivka_AAS_v2 IMF+Motorized TLF+Motorized
-Sanxian_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
-Narva_RAAS_v1 RGF+Motorized CAF+Motorized
-AlBasrah_Invasion_v1 MEA+Support BAF+Support
-Logar_AAS_v1 RGF+CombinedArms BAF+CombinedArms
-Lashkar_AAS_v2 BAF+Armored VDV+Armored
-Kamdesh_AAS_v1 INS+Support WPMC+AirAssault
-Manicouagan_RAAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Kohat_TC_v1 BAF+Armored PLA+Armored
-Sumari_RAAS_v1 MEA+CombinedArms WPMC+CombinedArms
-Mutaha_Invasion_v1 BAF+Mechanized INS+Mechanized
-BlackCoast_RAAS_v1 IMF+Motorized TLF+Motorized
-Yehorivka_RAAS_v1 WPMC+CombinedArms IMF+Support
-Tallil_TC_v1 CAF+AirAssault WPMC+AirAssault
-FoolsRoad_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-GooseBay_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-AlBasrah_Invasion_v1 CAF+CombinedArms VDV+CombinedArms
-Anvil_AAS_v1 WPMC+CombinedArms MEA+CombinedArms
-Gorodok_RAAS_v2 RGF+Mechanized PLA+LightInfantry
-Kohat_TC_v1 TLF+Armored MEA+Armored
-Narva_RAAS_v1 IMF+CombinedArms USA+CombinedArms
-Mutaha_AAS_v2 TLF+AirAssault PLA+AirAssault
-Kokan_Invasion_v1 INS+CombinedArms ADF+CombinedArms
-Yehorivka_RAAS_v2 ADF+CombinedArms WPMC+CombinedArms
-Fallujah_AAS_v1 USMC+LightInfantry INS+Motorized
-Chora_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLANMC+CombinedArms
-Manicouagan_AAS_v2 CAF+AirAssault WPMC+AirAssault
-Kamdesh_Insurgency_v1 PLA+Motorized INS+Motorized
-Sanxian_AAS_v3 CAF+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 BAF+Mechanized TLF+CombinedArms
-Lashkar_AAS_v2 RGF+Motorized INS+Motorized
-Anvil_RAAS_v2 RGF+CombinedArms CAF+CombinedArms
-BlackCoast_RAAS_v1 VDV+Mechanized PLA+Mechanized
-FoolsRoad_Invasion_v1 IMF+CombinedArms USMC+CombinedArms
-GooseBay_AAS_v1 VDV+Mechanized PLAAGF+Mechanized
-Belaya_RAAS_v1 RGF+Armored ADF+CombinedArms
-Kohat_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
-Skorpo_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
-Kamdesh_RAAS_v1 MEA+AirAssault USA+AirAssault
-Yehorivka_Destruction_v1 RGF+Support PLA+Support
-Gorodok_RAAS_v2 PLA+AirAssault USA+Support
-Mestia_TC_v1 PLA+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v1 CAF+Armored PLA+Armored
-Fallujah_RAAS_v1 ADF+Mechanized RGF+Mechanized
-Sumari_AAS_v1 USMC+CombinedArms VDV+CombinedArms
-Lashkar_Insurgency_v1 VDV+AirAssault INS+Support
-BlackCoast_AAS_v2 WPMC+LightInfantry USA+LightInfantry
-Kohat_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v2 ADF+AirAssault TLF+AirAssault
-Harju_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Chora_TC_v1 RGF+CombinedArms TLF+CombinedArms
-GooseBay_RAAS_v1 RGF+Mechanized WPMC+LightInfantry
-Skorpo_Invasion_v1 USA+Armored VDV+Armored
-FoolsRoad_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v1 WPMC+AirAssault ADF+AirAssault
-Yehorivka_AAS_v2 PLA+AirAssault TLF+AirAssault
-Mutaha_RAAS_v1 RGF+Motorized USMC+Armored
-Manicouagan_Skirmish_v2 PLANMC+CombinedArms CAF+CombinedArms
-Gorodok_RAAS_v2 VDV+Armored USMC+Armored
-Lashkar_Invasion_v1 RGF+Support PLA+Support
-Logar_AAS_v1 MEA+CombinedArms USA+CombinedArms
-Fallujah_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
-GooseBay_RAAS_v2 RGF+LightInfantry WPMC+LightInfantry
-Kamdesh_AAS_v1 TLF+Motorized INS+Motorized
-Kokan_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Anvil_RAAS_v2 PLA+CombinedArms VDV+CombinedArms
-Narva_Destruction_v1 WPMC+CombinedArms IMF+Motorized
-Tallil_RAAS_v2 PLA+Motorized USMC+Motorized
-BlackCoast_RAAS_v1 PLA+LightInfantry WPMC+LightInfantry
-Sanxian_AAS_v3 PLA+LightInfantry WPMC+LightInfantry
-Chora_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
-Skorpo_RAAS_v1 IMF+Support RGF+CombinedArms
-Yehorivka_Invasion_v2 VDV+Armored CAF+Armored
-FoolsRoad_AAS_v1 VDV+CombinedArms CAF+CombinedArms
-Lashkar_AAS_v1 TLF+AirAssault PLA+AirAssault
-Kohat_RAAS_v1 PLA+AirAssault USA+AirAssault
-Sumari_TC_v1 PLA+CombinedArms INS+CombinedArms
-AlBasrah_AAS_v1 PLA+Armored MEA+Armored
+Kokan_AAS_v1 USA+CombinedArms INS+CombinedArms
+Manicouagan_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Anvil_TC_v1 PLA+Armored INS+Armored
+Logar_AAS_v1 PLA+CombinedArms USMC+CombinedArms
+Tallil_Invasion_v1 INS+Motorized RGF+Motorized
+Kamdesh_RAAS_v1 USMC+Motorized TLF+Motorized
+Kohat_AAS_v1 TLF+Mechanized MEA+Armored
+BlackCoast_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Sumari_TC_v1 INS+CombinedArms BAF+CombinedArms
+Yehorivka_RAAS_v2 IMF+CombinedArms TLF+CombinedArms
+Fallujah_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
+AlBasrah_AAS_v1 RGF+Motorized WPMC+LightInfantry
+Mestia_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 VDV+CombinedArms IMF+CombinedArms
+Narva_AAS_v1 BAF+CombinedArms IMF+CombinedArms
+Kokan_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
+Mutaha_Invasion_v1 BAF+Mechanized MEA+Mechanized
+GooseBay_AAS_v1 USA+AirAssault WPMC+LightInfantry
+Logar_RAAS_v1 RGF+CombinedArms MEA+CombinedArms
+Gorodok_RAAS_v2 TLF+CombinedArms RGF+CombinedArms
+BlackCoast_AAS_v2 PLAAGF+Armored TLF+Armored
+Tallil_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
+Sanxian_AAS_v3 WPMC+AirAssault PLA+AirAssault
 Manicouagan_Invasion_v1 RGF+Armored USA+Armored
-Tallil_AAS_v1 USMC+LightInfantry INS+Armored
-Fallujah_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+Fallujah_AAS_v1 PLA+Motorized INS+Motorized
+Kamdesh_RAAS_v1 ADF+AirAssault PLA+LightInfantry
+FoolsRoad_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Lashkar_RAAS_v1 USA+AirAssault MEA+AirAssault
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+AlBasrah_Invasion_v1 PLA+Support MEA+Support
+Sumari_AAS_v3 TLF+CombinedArms INS+CombinedArms
+Anvil_RAAS_v2 ADF+CombinedArms TLF+Mechanized
+Mutaha_TC_v1 USMC+Support PLA+Support
+Kokan_AAS_v2 WPMC+CombinedArms USMC+CombinedArms
+BlackCoast_RAAS_v2 PLA+Motorized TLF+Motorized
+Gorodok_Insurgency_v1 CAF+Motorized IMF+Motorized
+Harju_RAAS_v2 IMF+Mechanized WPMC+CombinedArms
+Sanxian_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Fallujah_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
+Manicouagan_RAAS_v1 CAF+Support RGF+Support
+AlBasrah_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
+Belaya_Invasion_v2 TLF+Armored RGF+Armored
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Mutaha_AAS_v1 ADF+AirAssault PLA+AirAssault
+Kohat_RAAS_v2 INS+Motorized TLF+CombinedArms
+BlackCoast_Skirmish_v1 PLAAGF+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Yehorivka_Destruction_v1 TLF+Support PLA+Support
+FoolsRoad_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Lashkar_AAS_v2 VDV+Armored TLF+Support
+Fallujah_RAAS_v1 PLA+CombinedArms INS+CombinedArms
+Chora_AAS_v3 MEA+CombinedArms PLA+CombinedArms
+Tallil_TC_v1 USMC+Armored VDV+Armored
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+AlBasrah_Invasion_v1 ADF+Mechanized PLA+Armored
+Belaya_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Mutaha_RAAS_v1 TLF+Motorized PLA+Motorized
+GooseBay_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
+Anvil_RAAS_v2 USMC+Motorized PLA+Motorized
+Narva_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
+BlackCoast_Invasion_v1 USMC+AmphibiousAssault PLANMC+LightInfantry
+Kohat_RAAS_v2 INS+Mechanized RGF+Mechanized
+Logar_TC_v1 PLA+CombinedArms BAF+CombinedArms
+Fallujah_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
+Gorodok_AAS_v1 IMF+Motorized TLF+Motorized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Tallil_Invasion_v1 PLA+Motorized CAF+Motorized
+Kamdesh_RAAS_v1 PLA+Armored VDV+Armored
+Mestia_TC_v1 TLF+CombinedArms IMF+CombinedArms
+Manicouagan_RAAS_v1 USMC+CombinedArms WPMC+LightInfantry
+Skorpo_RAAS_v1 IMF+Armored BAF+Armored
+Harju_RAAS_v1 ADF+Mechanized IMF+Mechanized
+Chora_Invasion_v1 INS+CombinedArms MEA+CombinedArms
+Lashkar_RAAS_v1 INS+Armored MEA+Armored
+Anvil_RAAS_v1 VDV+Mechanized TLF+Motorized
+FoolsRoad_TC_v1 TLF+CombinedArms ADF+CombinedArms
+Fallujah_RAAS_v1 TLF+Mechanized MEA+Mechanized
+AlBasrah_RAAS_v1 TLF+Motorized INS+Motorized
+Kamdesh_RAAS_v1 USMC+Motorized PLA+Motorized
+Yehorivka_Destruction_v1 TLF+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v1 BAF+CombinedArms PLA+Motorized
+Gorodok_RAAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Logar_AAS_v1 TLF+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 IMF+Support VDV+Support
+Lashkar_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
+Kohat_Invasion_v1 PLA+Armored CAF+Motorized
+Sumari_AAS_v3 WPMC+CombinedArms ADF+CombinedArms
+Fallujah_AAS_v1 TLF+Armored RGF+Armored
+Manicouagan_RAAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
+Kokan_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v1 BAF+AirAssault WPMC+AirAssault
+Belaya_Invasion_v1 CAF+AirAssault TLF+Motorized
+AlBasrah_AAS_v1 PLA+Support TLF+Support
+BlackCoast_AAS_v2 IMF+Mechanized TLF+Mechanized
+Yehorivka_TC_v1 WPMC+CombinedArms CAF+CombinedArms
+Anvil_RAAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Kamdesh_RAAS_v1 TLF+AirAssault ADF+AirAssault
+FoolsRoad_Destruction_v1 PLA+CombinedArms ADF+CombinedArms
+Mutaha_AAS_v2 INS+CombinedArms PLA+AirAssault
+Lashkar_TC_v1 CAF+CombinedArms VDV+CombinedArms
+Sumari_AAS_v3 WPMC+CombinedArms INS+CombinedArms
+Gorodok_RAAS_v2 TLF+Support IMF+Support
+Narva_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+Harju_Invasion_v3 VDV+AirAssault WPMC+CombinedArms
+Logar_RAAS_v1 TLF+CombinedArms VDV+CombinedArms
+Fallujah_RAAS_v2 CAF+Support VDV+Support
+Tallil_TC_v1 VDV+Mechanized ADF+Mechanized
+Sanxian_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
+GooseBay_AAS_v1 PLA+AirAssault USMC+Support
+FoolsRoad_Destruction_v1 VDV+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v2 TLF+Motorized USA+Motorized
+BlackCoast_AAS_v2 IMF+Armored TLF+Armored
+Sumari_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 MEA+AirAssault ADF+AirAssault
+Gorodok_AAS_v1 BAF+Armored PLA+Motorized
+Lashkar_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
+Kohat_AAS_v1 MEA+Mechanized CAF+Mechanized
+Yehorivka_Destruction_v1 PLA+CombinedArms IMF+CombinedArms
+Mestia_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+Skorpo_RAAS_v1 BAF+Mechanized IMF+Mechanized
+Anvil_TC_v1 VDV+CombinedArms CAF+CombinedArms
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Kokan_AAS_v2 INS+CombinedArms VDV+CombinedArms
+Kamdesh_Insurgency_v1 MEA+Support INS+Support
+Fallujah_RAAS_v1 INS+CombinedArms TLF+CombinedArms
+AlBasrah_TC_v1 ADF+CombinedArms MEA+AirAssault
+FoolsRoad_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Lashkar_RAAS_v1 PLA+Support CAF+Support
+Gorodok_RAAS_v1 USMC+Support TLF+Support
+Manicouagan_Invasion_v2 WPMC+CombinedArms PLAAGF+CombinedArms
+Belaya_AAS_v2 PLA+AirAssault WPMC+AirAssault
+Tallil_AAS_v1 PLA+Motorized VDV+AirAssault
+Logar_Skirmish_v1 MEA+CombinedArms INS+CombinedArms
+Anvil_RAAS_v1 TLF+CombinedArms VDV+CombinedArms
+Sanxian_AAS_v1 PLA+AirAssault WPMC+AirAssault
+Kohat_Invasion_v1 INS+Support VDV+Support
+Skorpo_RAAS_v1 ADF+Mechanized IMF+Mechanized
+Narva_RAAS_v1 IMF+LightInfantry VDV+AirAssault
+Mestia_TC_v1 TLF+CombinedArms CAF+CombinedArms
+Lashkar_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v2 WPMC+CombinedArms PLANMC+CombinedArms
+Mutaha_Invasion_v1 VDV+Armored BAF+Armored
+Fallujah_RAAS_v1 MEA+Support BAF+Support
+Tallil_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
+Yehorivka_AAS_v1 CAF+CombinedArms PLA+Armored
+Sanxian_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 INS+Armored USMC+Armored
+GooseBay_Invasion_v1 PLAAGF+Mechanized VDV+Mechanized
+Sumari_AAS_v2 USMC+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLANMC+CombinedArms
+AlBasrah_RAAS_v1 PLAAGF+Armored INS+Armored
+Chora_TC_v1 CAF+CombinedArms INS+CombinedArms
+Lashkar_AAS_v1 TLF+Armored INS+Armored
+Narva_Invasion_v1 USMC+Armored WPMC+LightInfantry
+Mestia_AAS_v1 IMF+CombinedArms USMC+CombinedArms
+Mutaha_RAAS_v1 TLF+Motorized PLA+Motorized
+Tallil_AAS_v1 BAF+Mechanized MEA+Mechanized
+Belaya_TC_v1 IMF+LightInfantry PLA+LightInfantry
+Anvil_RAAS_v1 WPMC+AirAssault USMC+CombinedArms
+FoolsRoad_Destruction_v1 VDV+CombinedArms PLA+CombinedArms
+Sanxian_AAS_v2 PLANMC+LightInfantry WPMC+LightInfantry
+Gorodok_AAS_v1 TLF+AirAssault WPMC+AirAssault
+Kamdesh_AAS_v1 INS+LightInfantry MEA+LightInfantry
+Kokan_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
