--- a/Tools/Rotation/LayerRotation/LayerRotation_17.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_17.cfg
@@ -1,200 +1,200 @@
-Manicouagan_AAS_v3 WPMC+AirAssault PLA+AirAssault
-Sumari_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Kamdesh_AAS_v1 PLA+Armored MEA+AirAssault
-Narva_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Gorodok_Destruction_v1 USMC+Motorized PLA+Motorized
-Lashkar_RAAS_v1 INS+LightInfantry MEA+LightInfantry
-Belaya_AAS_v3 USMC+LightInfantry PLA+LightInfantry
-Mestia_TC_v1 IMF+CombinedArms RGF+CombinedArms
-Kohat_RAAS_v2 PLA+Motorized VDV+AirAssault
-Tallil_AAS_v1 TLF+CombinedArms INS+CombinedArms
-BlackCoast_Invasion_v2 CAF+Motorized TLF+Motorized
-Logar_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
-Anvil_TC_v1 VDV+Armored PLA+Armored
-Kamdesh_AAS_v1 WPMC+CombinedArms MEA+Armored
-Manicouagan_AAS_v1 VDV+AirAssault USA+AirAssault
-Kokan_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
-Harju_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Lashkar_TC_v1 PLA+Support CAF+Support
-Mutaha_AAS_v2 INS+Mechanized RGF+Mechanized
-Fallujah_RAAS_v1 PLA+Support WPMC+CombinedArms
-Mestia_AAS_v1 TLF+CombinedArms RGF+CombinedArms
-Gorodok_Invasion_v1 IMF+LightInfantry PLA+LightInfantry
-Tallil_AAS_v1 BAF+CombinedArms MEA+CombinedArms
-Chora_Skirmish_v1 MEA+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 RGF+Mechanized BAF+Mechanized
-Belaya_AAS_v1 PLA+LightInfantry ADF+Mechanized
-Manicouagan_AAS_v2 USMC+CombinedArms WPMC+CombinedArms
-FoolsRoad_Destruction_v1 IMF+CombinedArms USMC+CombinedArms
-Anvil_AAS_v1 PLA+Support VDV+Support
-Kohat_TC_v1 PLA+CombinedArms MEA+CombinedArms
-Logar_AAS_v1 ADF+CombinedArms PLA+CombinedArms
-Mutaha_AAS_v2 INS+CombinedArms ADF+AirAssault
-Narva_RAAS_v1 RGF+Support BAF+Support
-Sumari_Invasion_v1 CAF+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v1 TLF+AirAssault WPMC+AirAssault
-AlBasrah_AAS_v1 VDV+CombinedArms USMC+CombinedArms
-Lashkar_TC_v1 INS+Support MEA+Support
-Mestia_AAS_v2 TLF+CombinedArms PLA+CombinedArms
-Sanxian_AAS_v1 WPMC+CombinedArms USMC+LightInfantry
-Belaya_Invasion_v1 ADF+Mechanized RGF+Mechanized
-Harju_AAS_v2 CAF+CombinedArms IMF+CombinedArms
-Anvil_TC_v1 CAF+Armored TLF+Armored
-Kohat_RAAS_v1 CAF+CombinedArms TLF+CombinedArms
-Kokan_AAS_v2 PLA+CombinedArms CAF+CombinedArms
-Kamdesh_AAS_v1 MEA+Mechanized VDV+Mechanized
-Manicouagan_Invasion_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Narva_RAAS_v1 IMF+CombinedArms ADF+CombinedArms
-Yehorivka_RAAS_v1 WPMC+CombinedArms RGF+Motorized
-Fallujah_Skirmish_v2 MEA+CombinedArms RGF+CombinedArms
-Tallil_RAAS_v2 VDV+Armored USMC+Armored
-Lashkar_AAS_v2 PLA+CombinedArms MEA+CombinedArms
-Harju_Invasion_v3 IMF+LightInfantry WPMC+LightInfantry
-FoolsRoad_AAS_v2 IMF+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 IMF+Motorized WPMC+CombinedArms
-Kohat_RAAS_v2 MEA+Support USA+Support
-GooseBay_RAAS_v2 WPMC+AirAssault BAF+AirAssault
-Kokan_AAS_v1 BAF+CombinedArms PLA+CombinedArms
-Narva_Invasion_v2 USA+Mechanized IMF+Mechanized
-Belaya_AAS_v2 VDV+CombinedArms CAF+CombinedArms
-AlBasrah_RAAS_v1 USA+LightInfantry INS+LightInfantry
-Tallil_TC_v1 VDV+CombinedArms TLF+CombinedArms
-Yehorivka_AAS_v2 VDV+CombinedArms TLF+AirAssault
-Sumari_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Manicouagan_AAS_v3 USA+Motorized RGF+Motorized
-Mutaha_Invasion_v1 CAF+Armored PLA+Armored
-Logar_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
-Sanxian_AAS_v2 USA+Armored PLAAGF+Armored
-BlackCoast_RAAS_v1 WPMC+AirAssault BAF+AirAssault
-Gorodok_RAAS_v2 PLA+Motorized BAF+Armored
-Kamdesh_RAAS_v1 TLF+Support INS+Support
-FoolsRoad_Invasion_v1 RGF+CombinedArms USA+CombinedArms
-Tallil_RAAS_v1 ADF+CombinedArms TLF+CombinedArms
-Anvil_TC_v1 WPMC+LightInfantry RGF+LightInfantry
-Yehorivka_AAS_v2 IMF+Motorized TLF+Motorized
-Kohat_AAS_v1 VDV+CombinedArms TLF+CombinedArms
-Skorpo_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
-AlBasrah_Invasion_v2 USA+Armored PLAAGF+Mechanized
-Fallujah_RAAS_v1 INS+CombinedArms CAF+CombinedArms
-Logar_AAS_v1 INS+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v1 WPMC+AirAssault BAF+AirAssault
-Lashkar_AAS_v1 RGF+Armored PLA+Armored
-FoolsRoad_TC_v1 IMF+CombinedArms USA+CombinedArms
-Harju_RAAS_v1 BAF+Armored IMF+Armored
-GooseBay_Invasion_v1 WPMC+CombinedArms USMC+LightInfantry
-Sumari_AAS_v3 ADF+CombinedArms PLA+CombinedArms
-Yehorivka_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Mutaha_TC_v1 WPMC+AirAssault BAF+AirAssault
-AlBasrah_RAAS_v1 MEA+CombinedArms WPMC+CombinedArms
-Kohat_AAS_v1 TLF+Support USMC+Support
-Tallil_Invasion_v1 TLF+Motorized PLA+Motorized
-Sanxian_RAAS_v1 ADF+CombinedArms PLA+Armored
-Kokan_Skirmish_v1 USMC+CombinedArms INS+CombinedArms
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Lashkar_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Logar_AAS_v1 TLF+CombinedArms INS+CombinedArms
-Manicouagan_AAS_v2 WPMC+LightInfantry PLANMC+LightInfantry
-BlackCoast_Invasion_v1 USMC+AmphibiousAssault PLAAGF+Armored
-FoolsRoad_AAS_v1 ADF+CombinedArms IMF+CombinedArms
-Anvil_TC_v1 USA+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v2 MEA+Mechanized INS+Mechanized
-AlBasrah_RAAS_v1 RGF+Mechanized PLA+Mechanized
-Kamdesh_AAS_v1 BAF+Support TLF+CombinedArms
-Mestia_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
-Mutaha_RAAS_v2 WPMC+LightInfantry INS+LightInfantry
-Lashkar_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
-Logar_TC_v1 CAF+CombinedArms VDV+CombinedArms
-Yehorivka_RAAS_v2 VDV+CombinedArms TLF+CombinedArms
-Harju_RAAS_v2 WPMC+LightInfantry USMC+CombinedArms
-Fallujah_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 USA+Armored PLAAGF+Armored
-Chora_AAS_v2 BAF+CombinedArms TLF+CombinedArms
-Anvil_RAAS_v2 RGF+Armored TLF+Armored
-Manicouagan_RAAS_v2 USA+Motorized RGF+Motorized
-Gorodok_TC_v1 WPMC+LightInfantry TLF+Armored
-Belaya_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 ADF+Mechanized MEA+Mechanized
-Lashkar_AAS_v1 TLF+Armored INS+Armored
-Skorpo_RAAS_v1 IMF+Support CAF+Support
-Mestia_TC_v1 ADF+CombinedArms IMF+CombinedArms
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Fallujah_RAAS_v2 VDV+CombinedArms BAF+CombinedArms
-Narva_Destruction_v1 CAF+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v1 TLF+AirAssault BAF+AirAssault
-AlBasrah_TC_v1 WPMC+AirAssault RGF+CombinedArms
-Harju_RAAS_v1 IMF+Motorized USMC+Motorized
-Anvil_RAAS_v2 USA+Motorized PLA+Motorized
-FoolsRoad_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Gorodok_Destruction_v1 IMF+LightInfantry WPMC+LightInfantry
-Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Yehorivka_AAS_v2 USMC+CombinedArms IMF+CombinedArms
-Mestia_AAS_v1 RGF+CombinedArms USMC+CombinedArms
-Lashkar_RAAS_v1 PLA+Motorized USA+Motorized
-Tallil_AAS_v1 MEA+CombinedArms WPMC+LightInfantry
-Narva_Destruction_v1 RGF+Armored IMF+Armored
-Fallujah_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 INS+CombinedArms MEA+CombinedArms
-Kamdesh_AAS_v1 VDV+Armored PLA+Armored
-Logar_AAS_v1 INS+CombinedArms ADF+CombinedArms
-Mutaha_AAS_v2 TLF+Mechanized VDV+Support
-Harju_Invasion_v2 RGF+CombinedArms USMC+CombinedArms
-Yehorivka_AAS_v1 ADF+CombinedArms TLF+CombinedArms
-Anvil_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-BlackCoast_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
-Tallil_RAAS_v1 TLF+Mechanized USA+Mechanized
-Lashkar_AAS_v1 INS+Mechanized TLF+Mechanized
-Mestia_Invasion_v1 ADF+CombinedArms IMF+CombinedArms
-Manicouagan_RAAS_v2 WPMC+LightInfantry USA+Mechanized
-AlBasrah_AAS_v1 INS+CombinedArms TLF+CombinedArms
-FoolsRoad_RAAS_v1 IMF+CombinedArms TLF+CombinedArms
-Gorodok_AAS_v1 PLA+AirAssault VDV+AirAssault
-Mutaha_TC_v1 MEA+AirAssault CAF+AirAssault
-Yehorivka_RAAS_v2 PLA+Armored VDV+CombinedArms
-GooseBay_Invasion_v1 BAF+CombinedArms RGF+CombinedArms
-Belaya_AAS_v2 TLF+Support BAF+Support
-Fallujah_RAAS_v1 PLA+Support MEA+Support
-BlackCoast_Skirmish_v1 RGF+CombinedArms PLANMC+CombinedArms
-Skorpo_RAAS_v1 ADF+AirAssault VDV+AirAssault
-Kamdesh_AAS_v1 TLF+Motorized MEA+Support
-AlBasrah_Invasion_v2 VDV+Armored USMC+Armored
-FoolsRoad_AAS_v1 IMF+CombinedArms RGF+CombinedArms
-Lashkar_AAS_v2 MEA+Armored VDV+Armored
-Anvil_RAAS_v2 USMC+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v2 VDV+AirAssault WPMC+AirAssault
-Manicouagan_AAS_v3 WPMC+CombinedArms USMC+CombinedArms
-Narva_AAS_v3 BAF+Armored RGF+CombinedArms
-Belaya_AAS_v2 PLA+Motorized TLF+Motorized
-Sanxian_Invasion_v2 USMC+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v1 INS+LightInfantry PLA+LightInfantry
-Mestia_RAAS_v1 USA+CombinedArms TLF+CombinedArms
-Harju_RAAS_v1 IMF+Mechanized WPMC+LightInfantry
-GooseBay_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
-FoolsRoad_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Anvil_Invasion_v1 PLA+Support USMC+Support
-Mutaha_AAS_v1 PLA+AirAssault BAF+AirAssault
-Fallujah_RAAS_v2 WPMC+LightInfantry TLF+Mechanized
-Kokan_TC_v1 BAF+CombinedArms INS+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Kamdesh_AAS_v1 INS+CombinedArms USMC+CombinedArms
-Sumari_Invasion_v1 RGF+CombinedArms MEA+CombinedArms
-Gorodok_RAAS_v2 USMC+Armored PLA+Armored
-Lashkar_AAS_v1 PLA+CombinedArms TLF+CombinedArms
-Chora_TC_v1 PLA+CombinedArms ADF+CombinedArms
-Belaya_AAS_v3 TLF+AirAssault CAF+AirAssault
-Narva_RAAS_v1 IMF+Motorized USA+Motorized
-Anvil_Invasion_v1 CAF+Support MEA+Mechanized
-Tallil_RAAS_v2 TLF+Support MEA+Support
-Mestia_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
-AlBasrah_AAS_v1 MEA+Support BAF+Support
-GooseBay_AAS_v1 VDV+AirAssault WPMC+AirAssault
-Sanxian_AAS_v3 WPMC+AirAssault USA+AirAssault
-Kohat_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v2 VDV+AirAssault TLF+Motorized
-BlackCoast_AAS_v2 RGF+LightInfantry WPMC+LightInfantry
-Belaya_Skirmish_v1 USA+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Yehorivka_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
-Fallujah_Invasion_v2 WPMC+CombinedArms TLF+CombinedArms
-Harju_AAS_v2 IMF+CombinedArms USMC+CombinedArms
-AlBasrah_TC_v1 PLANMC+CombinedArms MEA+CombinedArms
+Yehorivka_Destruction_v1 RGF+Armored IMF+Armored
+Mutaha_AAS_v2 MEA+Armored TLF+Armored
+Tallil_Skirmish_v3 BAF+CombinedArms TLF+CombinedArms
+AlBasrah_RAAS_v1 PLANMC+Armored USMC+Armored
+Gorodok_RAAS_v1 WPMC+CombinedArms RGF+LightInfantry
+FoolsRoad_RAAS_v1 RGF+CombinedArms IMF+CombinedArms
+Narva_Invasion_v1 ADF+CombinedArms IMF+CombinedArms
+Kamdesh_RAAS_v1 WPMC+AirAssault ADF+AirAssault
+Chora_AAS_v1 RGF+CombinedArms USA+CombinedArms
+Fallujah_RAAS_v2 RGF+CombinedArms USMC+CombinedArms
+Kohat_TC_v1 WPMC+LightInfantry RGF+LightInfantry
+Yehorivka_AAS_v1 CAF+Armored IMF+Armored
+Lashkar_Invasion_v1 WPMC+CombinedArms CAF+Mechanized
+Logar_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
+AlBasrah_AAS_v1 ADF+Mechanized VDV+Mechanized
+Sanxian_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 RGF+Mechanized CAF+CombinedArms
+Gorodok_Destruction_v1 WPMC+CombinedArms TLF+CombinedArms
+Mestia_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Mutaha_TC_v1 INS+Armored CAF+Armored
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Tallil_AAS_v1 TLF+Support VDV+Support
+Kohat_AAS_v1 RGF+Support PLA+Support
+Lashkar_Invasion_v1 USA+Support TLF+Support
+Kamdesh_AAS_v1 MEA+Support INS+Support
+AlBasrah_TC_v1 WPMC+CombinedArms MEA+Armored
+Sumari_AAS_v2 MEA+CombinedArms RGF+CombinedArms
+Yehorivka_RAAS_v1 IMF+Support TLF+Support
+Fallujah_RAAS_v2 RGF+Support CAF+Support
+Sanxian_Invasion_v2 PLA+LightInfantry WPMC+LightInfantry
+Belaya_AAS_v3 PLA+LightInfantry TLF+Mechanized
+Logar_TC_v1 PLA+CombinedArms CAF+CombinedArms
+BlackCoast_RAAS_v2 IMF+Armored USA+Armored
+Anvil_AAS_v1 ADF+AirAssault PLA+AirAssault
+Harju_RAAS_v2 IMF+Support VDV+Support
+Lashkar_Invasion_v1 MEA+Mechanized TLF+Mechanized
+Kamdesh_RAAS_v1 MEA+CombinedArms INS+CombinedArms
+Kokan_TC_v1 MEA+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+AirAssault
+Gorodok_RAAS_v1 TLF+Support IMF+Support
+Mutaha_AAS_v1 TLF+Mechanized MEA+Mechanized
+FoolsRoad_Destruction_v1 CAF+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v1 USMC+CombinedArms TLF+CombinedArms
+Manicouagan_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+BlackCoast_Skirmish_v1 USMC+CombinedArms TLF+CombinedArms
+Tallil_AAS_v1 USA+AirAssault PLA+AirAssault
+Lashkar_AAS_v2 INS+Motorized PLA+Motorized
+Sumari_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v2 IMF+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v2 BAF+CombinedArms PLA+CombinedArms
+Mestia_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v1 PLA+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 MEA+LightInfantry INS+Motorized
+FoolsRoad_Destruction_v1 PLA+CombinedArms USMC+CombinedArms
+Kohat_RAAS_v1 MEA+AirAssault WPMC+AirAssault
+Anvil_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
+Mutaha_Skirmish_v1 CAF+CombinedArms INS+CombinedArms
+Lashkar_AAS_v2 MEA+Mechanized WPMC+AirAssault
+Manicouagan_RAAS_v2 VDV+AirAssault WPMC+AirAssault
+Narva_Destruction_v1 WPMC+CombinedArms BAF+CombinedArms
+Chora_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
+Gorodok_TC_v1 IMF+CombinedArms WPMC+CombinedArms
+GooseBay_AAS_v1 CAF+AirAssault WPMC+AirAssault
+Kamdesh_AAS_v1 PLA+Armored VDV+Armored
+Logar_AAS_v1 USA+CombinedArms TLF+CombinedArms
+Yehorivka_Destruction_v1 CAF+Motorized RGF+Mechanized
+Anvil_AAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Kohat_TC_v1 VDV+CombinedArms CAF+CombinedArms
+FoolsRoad_RAAS_v1 TLF+CombinedArms IMF+CombinedArms
+Skorpo_RAAS_v1 IMF+Mechanized BAF+Mechanized
+Narva_AAS_v1 IMF+CombinedArms VDV+CombinedArms
+AlBasrah_Invasion_v2 PLA+Armored RGF+Armored
+Tallil_RAAS_v1 USMC+LightInfantry RGF+Motorized
+Sumari_AAS_v1 ADF+CombinedArms MEA+CombinedArms
+Kamdesh_AAS_v1 VDV+Support INS+Support
+Lashkar_AAS_v2 INS+Support VDV+Support
+Fallujah_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
+Sanxian_AAS_v3 USA+Motorized PLA+Motorized
+Manicouagan_RAAS_v2 WPMC+CombinedArms BAF+CombinedArms
+Logar_Insurgency_v1 MEA+CombinedArms INS+CombinedArms
+BlackCoast_RAAS_v1 IMF+Motorized CAF+Motorized
+Gorodok_TC_v1 TLF+AirAssault PLA+AirAssault
+Anvil_AAS_v1 MEA+CombinedArms USA+Armored
+Narva_AAS_v2 IMF+LightInfantry WPMC+LightInfantry
+Mestia_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Tallil_Invasion_v1 PLA+Armored VDV+Armored
+Yehorivka_AAS_v2 IMF+Armored TLF+Armored
+Kamdesh_TC_v1 WPMC+CombinedArms ADF+CombinedArms
+AlBasrah_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+CombinedArms
+Chora_AAS_v3 MEA+CombinedArms PLA+CombinedArms
+Lashkar_Invasion_v1 TLF+CombinedArms CAF+CombinedArms
+Sanxian_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Mutaha_TC_v1 TLF+CombinedArms MEA+CombinedArms
+Logar_AAS_v1 USMC+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 RGF+CombinedArms TLF+CombinedArms
+Sumari_Invasion_v1 RGF+CombinedArms BAF+CombinedArms
+Anvil_AAS_v1 TLF+AirAssault VDV+AirAssault
+Fallujah_AAS_v1 INS+LightInfantry WPMC+LightInfantry
+BlackCoast_RAAS_v1 USMC+Support VDV+Support
+Gorodok_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
+Lashkar_AAS_v1 RGF+Motorized MEA+CombinedArms
+AlBasrah_AAS_v1 INS+CombinedArms USMC+CombinedArms
+Kokan_Invasion_v1 PLA+CombinedArms CAF+CombinedArms
+Yehorivka_RAAS_v2 IMF+Motorized USMC+Motorized
+Belaya_TC_v1 USA+Motorized RGF+Motorized
+Kamdesh_AAS_v1 CAF+Armored MEA+Support
+FoolsRoad_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Mutaha_RAAS_v2 PLA+CombinedArms INS+CombinedArms
+Anvil_Invasion_v1 USA+Motorized PLA+Motorized
+BlackCoast_AAS_v2 VDV+CombinedArms PLANMC+CombinedArms
+Skorpo_RAAS_v1 IMF+Support ADF+CombinedArms
+Fallujah_RAAS_v2 ADF+Mechanized INS+Mechanized
+Lashkar_TC_v2 BAF+Mechanized INS+Mechanized
+Kohat_RAAS_v1 PLA+AirAssault MEA+AirAssault
+Tallil_Invasion_v1 TLF+Support USA+Support
+AlBasrah_RAAS_v1 WPMC+CombinedArms VDV+Armored
+GooseBay_AAS_v1 USMC+Support VDV+Support
+Belaya_AAS_v2 IMF+Motorized USMC+Motorized
+Kamdesh_RAAS_v1 PLA+LightInfantry MEA+LightInfantry
+Anvil_RAAS_v1 INS+Support VDV+Support
+Narva_Destruction_v1 CAF+CombinedArms IMF+LightInfantry
+Manicouagan_RAAS_v1 CAF+Support PLANMC+Support
+Logar_TC_v1 MEA+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v1 MEA+Armored PLA+Armored
+Fallujah_AAS_v1 BAF+CombinedArms RGF+CombinedArms
+Kokan_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
+Tallil_AAS_v1 PLA+Motorized INS+CombinedArms
+Kohat_Invasion_v2 INS+Motorized CAF+Motorized
+Skorpo_RAAS_v1 IMF+Support USA+Support
+GooseBay_AAS_v1 USMC+Armored VDV+Armored
+Sumari_AAS_v3 USMC+CombinedArms MEA+CombinedArms
+Kamdesh_RAAS_v1 BAF+Support MEA+Armored
+Lashkar_RAAS_v1 RGF+Armored TLF+Armored
+Gorodok_Destruction_v1 CAF+Armored IMF+Armored
+Logar_AAS_v1 INS+CombinedArms USA+CombinedArms
+Anvil_RAAS_v1 TLF+Mechanized VDV+Mechanized
+AlBasrah_TC_v1 TLF+Armored MEA+LightInfantry
+BlackCoast_AAS_v1 BAF+Mechanized IMF+Mechanized
+Chora_AAS_v2 ADF+CombinedArms MEA+CombinedArms
+Fallujah_Insurgency_v1 USA+Armored INS+Armored
+Kohat_RAAS_v2 PLA+Motorized TLF+Motorized
+FoolsRoad_TC_v1 VDV+CombinedArms PLA+CombinedArms
+Yehorivka_AAS_v1 TLF+Armored IMF+Armored
+Tallil_RAAS_v2 CAF+AirAssault TLF+AirAssault
+Mestia_AAS_v1 IMF+CombinedArms PLA+CombinedArms
+Mutaha_Invasion_v1 PLA+Armored CAF+CombinedArms
+Sanxian_RAAS_v2 PLANMC+Motorized CAF+Motorized
+Kamdesh_RAAS_v1 TLF+Support PLA+Support
+Lashkar_RAAS_v1 VDV+Mechanized MEA+Mechanized
+Anvil_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
+GooseBay_RAAS_v2 PLANMC+CombinedArms WPMC+CombinedArms
+Kohat_Invasion_v1 RGF+Support INS+Support
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Kokan_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 VDV+Mechanized ADF+AirAssault
+Belaya_AAS_v1 PLA+AirAssault WPMC+AirAssault
+Fallujah_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+Mutaha_Invasion_v1 USMC+Support VDV+Support
+Mestia_RAAS_v1 VDV+CombinedArms USMC+CombinedArms
+Yehorivka_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 TLF+CombinedArms WPMC+LightInfantry
+Chora_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+GooseBay_RAAS_v2 WPMC+AirAssault PLANMC+AirAssault
+Tallil_RAAS_v2 USMC+Armored MEA+Armored
+Sumari_Invasion_v1 USMC+CombinedArms INS+CombinedArms
+Sanxian_RAAS_v2 BAF+Support WPMC+LightInfantry
+Lashkar_TC_v1 USA+Mechanized RGF+Mechanized
+Logar_AAS_v1 MEA+CombinedArms TLF+CombinedArms
+AlBasrah_AAS_v1 MEA+Support VDV+Support
+Kohat_RAAS_v2 PLA+Motorized INS+Motorized
+FoolsRoad_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
+Yehorivka_RAAS_v1 BAF+AirAssault TLF+AirAssault
+Belaya_TC_v1 VDV+Armored WPMC+AirAssault
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v2 WPMC+LightInfantry USMC+LightInfantry
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Narva_Invasion_v2 WPMC+CombinedArms IMF+CombinedArms
+Lashkar_RAAS_v1 VDV+Armored BAF+Mechanized
+Chora_TC_v1 TLF+CombinedArms RGF+CombinedArms
+BlackCoast_AAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Kohat_AAS_v1 WPMC+LightInfantry INS+LightInfantry
+Kamdesh_RAAS_v1 TLF+Motorized CAF+Motorized
+Mutaha_RAAS_v1 WPMC+AirAssault VDV+AirAssault
+Yehorivka_Invasion_v2 PLA+CombinedArms USA+CombinedArms
+Mestia_AAS_v2 USA+CombinedArms VDV+CombinedArms
+Skorpo_RAAS_v1 CAF+Armored WPMC+CombinedArms
+Fallujah_TC_v1 ADF+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v1 RGF+LightInfantry WPMC+LightInfantry
+Logar_AAS_v1 PLA+CombinedArms INS+CombinedArms
+AlBasrah_Invasion_v2 TLF+Armored PLAAGF+Armored
+BlackCoast_AAS_v1 ADF+Mechanized TLF+AirAssault
+Kohat_TC_v1 CAF+CombinedArms PLA+CombinedArms
+Lashkar_RAAS_v1 MEA+Armored INS+Armored
+Kamdesh_AAS_v1 WPMC+AirAssault USA+AirAssault
+Gorodok_RAAS_v2 TLF+AirAssault WPMC+AirAssault
+Mestia_Invasion_v1 TLF+CombinedArms USMC+CombinedArms
+Narva_RAAS_v1 USA+CombinedArms RGF+CombinedArms
