--- a/Tools/Rotation/LayerRotation/LayerRotation_18.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_18.cfg
@@ -1,200 +1,200 @@
-Kamdesh_AAS_v1 WPMC+AirAssault CAF+AirAssault
-Tallil_RAAS_v1 TLF+CombinedArms RGF+CombinedArms
-Mestia_RAAS_v1 TLF+CombinedArms USA+CombinedArms
-Anvil_Invasion_v1 ADF+CombinedArms VDV+CombinedArms
-Gorodok_RAAS_v1 PLA+AirAssault WPMC+AirAssault
-Chora_TC_v1 WPMC+CombinedArms INS+CombinedArms
-Mutaha_AAS_v1 PLA+Motorized TLF+Motorized
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-FoolsRoad_AAS_v1 TLF+CombinedArms CAF+CombinedArms
-GooseBay_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
-AlBasrah_AAS_v1 PLAAGF+Mechanized MEA+AirAssault
-Yehorivka_RAAS_v2 PLA+Armored IMF+Armored
-Lashkar_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v2 INS+CombinedArms ADF+CombinedArms
-Manicouagan_RAAS_v2 WPMC+LightInfantry PLANMC+LightInfantry
-Kamdesh_Invasion_v1 USMC+LightInfantry PLA+LightInfantry
-Chora_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v3 ADF+AirAssault PLANMC+AirAssault
-Narva_AAS_v1 VDV+AirAssault IMF+LightInfantry
-FoolsRoad_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
-Gorodok_TC_v1 USMC+CombinedArms TLF+CombinedArms
-Skorpo_RAAS_v1 BAF+Mechanized RGF+Mechanized
-Fallujah_Invasion_v1 INS+LightInfantry PLA+LightInfantry
-Belaya_RAAS_v1 ADF+AirAssault WPMC+AirAssault
-Mestia_RAAS_v1 CAF+CombinedArms PLA+CombinedArms
-AlBasrah_TC_v1 ADF+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v1 MEA+LightInfantry USMC+LightInfantry
-Kokan_AAS_v1 INS+CombinedArms TLF+CombinedArms
-Harju_Invasion_v3 IMF+Motorized CAF+Motorized
-Yehorivka_AAS_v2 TLF+Mechanized IMF+Mechanized
-Kohat_RAAS_v2 MEA+Armored BAF+Armored
-Narva_TC_v1 RGF+Mechanized CAF+Mechanized
-Tallil_RAAS_v2 WPMC+AirAssault PLA+AirAssault
-Anvil_AAS_v1 RGF+Mechanized PLA+CombinedArms
-Gorodok_Invasion_v1 TLF+CombinedArms VDV+CombinedArms
-BlackCoast_RAAS_v1 TLF+AirAssault ADF+AirAssault
-Chora_TC_v1 BAF+CombinedArms TLF+CombinedArms
-Lashkar_AAS_v2 PLA+Motorized TLF+Motorized
-Manicouagan_AAS_v1 PLA+LightInfantry RGF+LightInfantry
-Belaya_AAS_v3 USMC+CombinedArms IMF+Support
-FoolsRoad_Invasion_v1 VDV+CombinedArms BAF+CombinedArms
-Kamdesh_AAS_v1 VDV+Support USMC+Support
-Yehorivka_AAS_v1 CAF+Armored PLA+Armored
-Mutaha_TC_v1 TLF+Armored MEA+Armored
-Kohat_RAAS_v2 INS+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v2 PLA+Motorized TLF+Armored
-Anvil_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Sumari_Skirmish_v1 VDV+CombinedArms USMC+CombinedArms
-Sanxian_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Gorodok_AAS_v1 PLA+Support VDV+Support
-Lashkar_AAS_v1 PLA+LightInfantry TLF+Mechanized
-Chora_Invasion_v1 WPMC+CombinedArms RGF+CombinedArms
-BlackCoast_AAS_v2 IMF+Armored CAF+Armored
-Kamdesh_TC_v1 RGF+CombinedArms USMC+CombinedArms
-Yehorivka_AAS_v1 IMF+Armored VDV+Armored
-Mestia_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
-AlBasrah_AAS_v1 USMC+CombinedArms VDV+CombinedArms
-Narva_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
-Fallujah_RAAS_v1 WPMC+LightInfantry INS+Motorized
-Kohat_AAS_v1 WPMC+CombinedArms MEA+CombinedArms
-Tallil_AAS_v1 PLA+LightInfantry INS+LightInfantry
-Skorpo_Skirmish_v1 VDV+CombinedArms CAF+CombinedArms
-Anvil_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
-BlackCoast_Invasion_v2 PLANMC+Motorized ADF+CombinedArms
-Lashkar_AAS_v2 VDV+Armored CAF+Armored
-Gorodok_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
-Mutaha_Skirmish_v1 TLF+CombinedArms CAF+CombinedArms
-Harju_AAS_v1 CAF+Support IMF+Support
-Yehorivka_RAAS_v1 BAF+CombinedArms VDV+Support
-Manicouagan_Invasion_v1 USMC+Armored VDV+Armored
-Sumari_RAAS_v1 BAF+CombinedArms VDV+CombinedArms
-Kohat_AAS_v1 MEA+Armored PLA+Armored
-AlBasrah_AAS_v1 PLA+AirAssault VDV+AirAssault
-Narva_AAS_v1 BAF+Mechanized IMF+Mechanized
-Tallil_RAAS_v1 VDV+Mechanized USA+Support
-Kamdesh_Insurgency_v1 WPMC+LightInfantry INS+LightInfantry
-Chora_AAS_v2 USMC+CombinedArms VDV+CombinedArms
-Lashkar_RAAS_v1 BAF+Support RGF+Support
-Gorodok_AAS_v1 VDV+CombinedArms ADF+CombinedArms
-Belaya_RAAS_v1 TLF+AirAssault BAF+AirAssault
-Logar_TC_v1 TLF+CombinedArms INS+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Mutaha_Invasion_v1 USA+LightInfantry RGF+LightInfantry
-Yehorivka_RAAS_v1 CAF+AirAssault TLF+Armored
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms ADF+CombinedArms
-FoolsRoad_Skirmish_v2 IMF+CombinedArms BAF+CombinedArms
-Kamdesh_AAS_v1 BAF+Support PLA+Support
-BlackCoast_RAAS_v2 VDV+CombinedArms BAF+CombinedArms
-AlBasrah_Invasion_v1 WPMC+AirAssault INS+LightInfantry
-Anvil_RAAS_v1 MEA+LightInfantry USMC+LightInfantry
-Fallujah_Skirmish_v1 RGF+CombinedArms INS+CombinedArms
-Tallil_RAAS_v1 VDV+CombinedArms TLF+CombinedArms
-Narva_AAS_v2 VDV+Mechanized IMF+Mechanized
-Kokan_RAAS_v1 PLA+CombinedArms USA+CombinedArms
-Mutaha_AAS_v1 MEA+Support WPMC+AirAssault
-Kohat_Invasion_v2 WPMC+CombinedArms USMC+CombinedArms
-Yehorivka_RAAS_v2 WPMC+AirAssault TLF+AirAssault
-Manicouagan_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Sumari_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-BlackCoast_AAS_v2 PLANMC+Support TLF+Support
-Anvil_TC_v1 TLF+Motorized PLA+Motorized
-Sanxian_AAS_v2 USMC+Armored WPMC+AirAssault
-Lashkar_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-Mestia_AAS_v2 IMF+CombinedArms ADF+CombinedArms
-Skorpo_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Kamdesh_TC_v1 PLA+AirAssault USA+AirAssault
-AlBasrah_RAAS_v1 INS+Support WPMC+AirAssault
-Mutaha_RAAS_v1 ADF+AirAssault WPMC+AirAssault
-Kohat_Invasion_v2 PLA+CombinedArms CAF+CombinedArms
-Chora_RAAS_v1 INS+CombinedArms TLF+CombinedArms
-GooseBay_AAS_v1 CAF+Support RGF+Support
-Belaya_TC_v1 WPMC+CombinedArms IMF+CombinedArms
-Sumari_AAS_v3 MEA+CombinedArms ADF+CombinedArms
-Sanxian_AAS_v3 PLANMC+CombinedArms BAF+AirAssault
-Gorodok_Invasion_v1 TLF+CombinedArms IMF+CombinedArms
-Manicouagan_RAAS_v2 PLANMC+AirAssault WPMC+AirAssault
-Lashkar_TC_v2 USMC+Motorized TLF+Motorized
-Tallil_AAS_v1 CAF+AirAssault TLF+AirAssault
-Fallujah_RAAS_v1 PLA+Armored CAF+CombinedArms
-Kamdesh_AAS_v1 ADF+Mechanized VDV+Mechanized
-Kokan_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v1 WPMC+LightInfantry INS+LightInfantry
-Mestia_AAS_v1 PLA+CombinedArms USA+CombinedArms
-AlBasrah_AAS_v1 PLAAGF+Armored VDV+Mechanized
-Gorodok_TC_v1 TLF+Mechanized IMF+Mechanized
-Chora_AAS_v1 PLA+CombinedArms ADF+CombinedArms
-Manicouagan_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
-Kohat_RAAS_v1 WPMC+AirAssault USA+AirAssault
-Narva_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 MEA+LightInfantry USMC+LightInfantry
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms ADF+CombinedArms
-Tallil_RAAS_v2 PLA+Motorized INS+LightInfantry
-FoolsRoad_Destruction_v1 WPMC+CombinedArms BAF+CombinedArms
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Mutaha_RAAS_v2 PLA+AirAssault WPMC+AirAssault
-Gorodok_RAAS_v2 ADF+AirAssault WPMC+AirAssault
-BlackCoast_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
-Sanxian_RAAS_v2 PLAAGF+Armored ADF+Mechanized
-AlBasrah_AAS_v1 BAF+AirAssault MEA+AirAssault
-Kamdesh_AAS_v1 BAF+AirAssault PLA+AirAssault
-Anvil_Invasion_v1 PLA+LightInfantry USA+LightInfantry
-Yehorivka_RAAS_v2 CAF+Motorized IMF+Motorized
-Harju_RAAS_v2 WPMC+LightInfantry IMF+Mechanized
-Logar_AAS_v1 USMC+CombinedArms INS+CombinedArms
-Fallujah_TC_v1 MEA+Support RGF+Support
-Belaya_AAS_v2 CAF+Armored TLF+Armored
-Mutaha_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
-Chora_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-AlBasrah_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Manicouagan_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v2 PLA+Support CAF+Support
-Sumari_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 TLF+Mechanized MEA+Mechanized
-Skorpo_RAAS_v1 USMC+LightInfantry IMF+LightInfantry
-Yehorivka_TC_v1 TLF+Support WPMC+AirAssault
-GooseBay_RAAS_v1 WPMC+LightInfantry PLANMC+LightInfantry
-Mutaha_RAAS_v1 USMC+CombinedArms PLA+CombinedArms
-FoolsRoad_Destruction_v1 WPMC+CombinedArms RGF+CombinedArms
-Anvil_RAAS_v1 TLF+AirAssault ADF+AirAssault
-Gorodok_TC_v1 BAF+Support RGF+Armored
-Sanxian_AAS_v3 BAF+AirAssault PLANMC+AirAssault
-Chora_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v1 BAF+AirAssault PLA+AirAssault
-Manicouagan_Invasion_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-AlBasrah_RAAS_v1 VDV+CombinedArms TLF+CombinedArms
-Fallujah_RAAS_v1 VDV+Armored INS+Armored
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Mutaha_TC_v1 USMC+LightInfantry PLA+LightInfantry
-Harju_RAAS_v1 IMF+Motorized WPMC+LightInfantry
-Yehorivka_Destruction_v1 WPMC+CombinedArms PLA+CombinedArms
-Mestia_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 CAF+AirAssault WPMC+AirAssault
-Narva_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Chora_TC_v1 BAF+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v2 WPMC+CombinedArms USA+CombinedArms
-Manicouagan_Invasion_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Logar_AAS_v1 TLF+CombinedArms USA+CombinedArms
-Tallil_AAS_v1 BAF+AirAssault PLA+AirAssault
-Anvil_TC_v1 USA+CombinedArms RGF+Mechanized
-Belaya_AAS_v1 USMC+Armored TLF+Armored
-FoolsRoad_AAS_v1 IMF+CombinedArms RGF+CombinedArms
-AlBasrah_Invasion_v2 INS+Support VDV+Support
-Kamdesh_RAAS_v1 PLA+Armored USMC+Armored
-Mutaha_TC_v1 TLF+CombinedArms VDV+CombinedArms
-Sanxian_RAAS_v2 ADF+AirAssault PLA+CombinedArms
+Yehorivka_AAS_v1 IMF+Mechanized CAF+Armored
+Tallil_TC_v1 ADF+CombinedArms PLA+CombinedArms
+Kokan_AAS_v1 INS+CombinedArms WPMC+CombinedArms
+Harju_AAS_v1 WPMC+AirAssault BAF+AirAssault
+Fallujah_Insurgency_v1 VDV+Support INS+Support
+Logar_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Kohat_AAS_v1 INS+LightInfantry WPMC+CombinedArms
+Mutaha_RAAS_v1 INS+CombinedArms TLF+CombinedArms
+Belaya_Skirmish_v1 IMF+CombinedArms RGF+CombinedArms
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Lashkar_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
+Sanxian_AAS_v3 BAF+Support WPMC+CombinedArms
+Mestia_RAAS_v1 BAF+CombinedArms IMF+CombinedArms
+Anvil_RAAS_v2 USMC+LightInfantry MEA+LightInfantry
+AlBasrah_TC_v1 USMC+CombinedArms PLANMC+CombinedArms
+Sumari_RAAS_v1 BAF+CombinedArms MEA+CombinedArms
+Narva_Invasion_v2 USMC+CombinedArms WPMC+CombinedArms
+Kohat_AAS_v1 MEA+CombinedArms WPMC+LightInfantry
+Skorpo_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+FoolsRoad_AAS_v2 ADF+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v1 INS+LightInfantry USMC+LightInfantry
+Tallil_RAAS_v2 WPMC+LightInfantry MEA+LightInfantry
+Sanxian_Invasion_v1 USMC+AmphibiousAssault WPMC+CombinedArms
+Logar_RAAS_v1 USA+CombinedArms PLA+CombinedArms
+Lashkar_TC_v1 TLF+Support MEA+Support
+AlBasrah_AAS_v1 RGF+Mechanized CAF+Mechanized
+BlackCoast_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v2 TLF+Support CAF+Support
+Kamdesh_Invasion_v1 VDV+CombinedArms WPMC+CombinedArms
+Kokan_AAS_v1 PLA+CombinedArms MEA+CombinedArms
+Kohat_AAS_v1 RGF+Motorized TLF+AirAssault
+Harju_AAS_v1 USMC+CombinedArms IMF+CombinedArms
+Yehorivka_TC_v1 USMC+Support VDV+Support
+Anvil_RAAS_v1 VDV+Mechanized INS+Mechanized
+Tallil_Invasion_v1 INS+Motorized PLA+Motorized
+Lashkar_AAS_v1 CAF+AirAssault PLA+AirAssault
+Fallujah_AAS_v1 MEA+Mechanized CAF+Armored
+BlackCoast_Skirmish_v1 TLF+CombinedArms USA+CombinedArms
+Narva_AAS_v1 WPMC+AirAssault VDV+AirAssault
+Belaya_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Chora_Invasion_v1 WPMC+CombinedArms CAF+CombinedArms
+Mutaha_RAAS_v2 PLA+Motorized RGF+Motorized
+GooseBay_AAS_v1 PLAAGF+Mechanized BAF+Mechanized
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Sumari_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
-Yehorivka_Invasion_v2 WPMC+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
-Skorpo_RAAS_v1 WPMC+LightInfantry USA+Mechanized
-Anvil_RAAS_v1 CAF+CombinedArms PLA+CombinedArms
-Mestia_AAS_v1 USMC+CombinedArms TLF+CombinedArms
-AlBasrah_AAS_v1 TLF+Motorized CAF+Motorized
-Lashkar_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
-Kamdesh_RAAS_v1 USMC+Armored PLA+Armored
-Mutaha_TC_v1 USA+Motorized PLA+Motorized
-BlackCoast_AAS_v2 VDV+Mechanized IMF+Mechanized
+Kohat_TC_v1 WPMC+CombinedArms USMC+Support
+Kokan_RAAS_v1 PLA+CombinedArms MEA+CombinedArms
+Kamdesh_Invasion_v1 ADF+Mechanized VDV+Mechanized
+Yehorivka_AAS_v1 PLA+Armored VDV+Armored
+Sanxian_AAS_v2 PLA+CombinedArms WPMC+CombinedArms
+Mestia_AAS_v2 IMF+CombinedArms TLF+CombinedArms
+Anvil_AAS_v1 MEA+LightInfantry INS+LightInfantry
+Tallil_TC_v1 PLA+AirAssault TLF+Armored
+Skorpo_RAAS_v1 WPMC+AirAssault VDV+AirAssault
+Belaya_Invasion_v2 TLF+Mechanized ADF+Mechanized
+FoolsRoad_AAS_v1 TLF+CombinedArms BAF+CombinedArms
+Kohat_RAAS_v1 INS+Armored MEA+Armored
+BlackCoast_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
+GooseBay_Skirmish_v1 BAF+CombinedArms RGF+CombinedArms
+Yehorivka_RAAS_v2 PLA+CombinedArms IMF+Mechanized
+Kamdesh_Invasion_v1 CAF+Motorized PLA+Motorized
+Sanxian_RAAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 RGF+Motorized PLA+Motorized
+Chora_RAAS_v1 MEA+CombinedArms CAF+CombinedArms
+Gorodok_RAAS_v2 CAF+AirAssault TLF+AirAssault
+Tallil_TC_v1 WPMC+AirAssault PLA+Motorized
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Sumari_Insurgency_v1 MEA+CombinedArms INS+CombinedArms
+Mutaha_AAS_v2 PLA+Support TLF+Support
+Anvil_RAAS_v2 USMC+CombinedArms VDV+CombinedArms
+Fallujah_AAS_v1 VDV+Support CAF+Support
+Yehorivka_Skirmish_v2 ADF+CombinedArms PLA+CombinedArms
+Belaya_RAAS_v1 ADF+AirAssault PLA+Support
+Narva_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
+Harju_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Chora_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
+AlBasrah_TC_v1 CAF+AirAssault VDV+AirAssault
+Kamdesh_AAS_v1 VDV+Support PLA+Support
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms BAF+CombinedArms
+Kohat_Invasion_v2 INS+Support MEA+CombinedArms
+FoolsRoad_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 CAF+Armored RGF+Armored
+Fallujah_TC_v1 INS+Motorized TLF+Motorized
+Lashkar_AAS_v1 MEA+AirAssault WPMC+AirAssault
+Sumari_AAS_v3 PLA+CombinedArms RGF+CombinedArms
+Narva_Invasion_v1 IMF+Mechanized BAF+Mechanized
+Manicouagan_AAS_v2 WPMC+AirAssault USA+AirAssault
+Tallil_TC_v1 TLF+Mechanized ADF+Mechanized
+Kamdesh_AAS_v1 BAF+Mechanized INS+LightInfantry
+Sanxian_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Kohat_RAAS_v2 TLF+AirAssault MEA+AirAssault
+FoolsRoad_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+AlBasrah_TC_v1 INS+Armored TLF+Armored
+Yehorivka_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Sumari_AAS_v2 INS+CombinedArms TLF+CombinedArms
+Skorpo_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
+Narva_AAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Gorodok_RAAS_v2 PLA+Armored WPMC+AirAssault
+BlackCoast_Skirmish_v1 CAF+CombinedArms TLF+CombinedArms
+GooseBay_RAAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
+Manicouagan_Invasion_v1 RGF+Support CAF+Support
+Kokan_AAS_v1 ADF+CombinedArms TLF+CombinedArms
+Anvil_AAS_v1 INS+Motorized RGF+Armored
+Kohat_TC_v1 WPMC+CombinedArms VDV+CombinedArms
+AlBasrah_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 ADF+CombinedArms INS+CombinedArms
+Yehorivka_Destruction_v1 IMF+Mechanized BAF+Mechanized
+Mutaha_AAS_v2 CAF+Armored MEA+LightInfantry
+Logar_AAS_v1 INS+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v2 RGF+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v2 CAF+CombinedArms RGF+CombinedArms
+Tallil_Skirmish_v1 USMC+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v1 PLANMC+AirAssault CAF+AirAssault
+Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v3 PLAAGF+Armored WPMC+LightInfantry
+Lashkar_AAS_v1 USA+Support TLF+Support
+Harju_TC_v1 IMF+CombinedArms BAF+CombinedArms
+Kohat_RAAS_v2 PLA+Support TLF+Support
+Gorodok_RAAS_v1 RGF+Armored USA+Armored
+Sumari_Invasion_v1 MEA+CombinedArms RGF+CombinedArms
+Mutaha_AAS_v2 BAF+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v2 INS+LightInfantry PLA+CombinedArms
+Kokan_TC_v1 MEA+CombinedArms INS+CombinedArms
+Yehorivka_RAAS_v2 RGF+Support PLA+Support
+Anvil_RAAS_v2 CAF+Motorized RGF+Motorized
+Chora_AAS_v1 MEA+CombinedArms BAF+CombinedArms
+Belaya_Invasion_v1 PLA+LightInfantry USMC+Motorized
+Lashkar_AAS_v2 CAF+Armored INS+Armored
+Sanxian_Skirmish_v1 ADF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 MEA+Mechanized TLF+Mechanized
+Harju_RAAS_v1 CAF+AirAssault WPMC+AirAssault
+Logar_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Gorodok_AAS_v1 TLF+CombinedArms IMF+LightInfantry
+Manicouagan_Invasion_v2 PLA+LightInfantry WPMC+LightInfantry
+Mestia_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Narva_AAS_v2 WPMC+LightInfantry RGF+LightInfantry
+Yehorivka_AAS_v1 PLA+LightInfantry IMF+LightInfantry
+Chora_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
+Lashkar_AAS_v2 MEA+CombinedArms USA+CombinedArms
+Fallujah_Invasion_v2 WPMC+LightInfantry MEA+Mechanized
+Kokan_AAS_v1 MEA+CombinedArms INS+CombinedArms
+Kamdesh_RAAS_v1 PLA+Motorized USMC+Motorized
+AlBasrah_TC_v1 INS+Mechanized VDV+Mechanized
+Tallil_RAAS_v1 TLF+Support USA+Support
+Anvil_RAAS_v2 INS+Mechanized PLA+CombinedArms
+FoolsRoad_Invasion_v1 TLF+CombinedArms CAF+CombinedArms
+Sanxian_AAS_v1 USA+LightInfantry WPMC+LightInfantry
+Gorodok_RAAS_v1 VDV+CombinedArms TLF+CombinedArms
+Chora_AAS_v3 CAF+CombinedArms RGF+CombinedArms
+BlackCoast_AAS_v1 WPMC+CombinedArms USMC+LightInfantry
+Belaya_AAS_v2 ADF+CombinedArms RGF+CombinedArms
+Narva_Destruction_v1 VDV+Support BAF+Support
+Kokan_AAS_v1 PLA+CombinedArms TLF+CombinedArms
+Kohat_TC_v1 WPMC+AirAssault ADF+AirAssault
+Mutaha_AAS_v2 INS+Motorized PLA+AirAssault
+Sumari_AAS_v3 TLF+CombinedArms BAF+CombinedArms
+Fallujah_RAAS_v1 BAF+Mechanized TLF+Mechanized
+Anvil_Invasion_v1 PLA+Support TLF+Support
+Logar_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
+Yehorivka_RAAS_v2 IMF+LightInfantry WPMC+AirAssault
+BlackCoast_RAAS_v1 PLANMC+CombinedArms BAF+CombinedArms
+Chora_AAS_v3 INS+CombinedArms TLF+CombinedArms
+AlBasrah_TC_v1 VDV+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms CAF+CombinedArms
+Tallil_Invasion_v1 USA+Mechanized PLA+Motorized
+Gorodok_RAAS_v1 TLF+Support CAF+Support
+Kohat_RAAS_v2 INS+Support PLA+Support
+GooseBay_AAS_v1 USA+Mechanized PLAAGF+Mechanized
+Sumari_TC_v1 ADF+CombinedArms VDV+CombinedArms
+Kamdesh_AAS_v1 INS+Armored PLA+Armored
+Fallujah_Insurgency_v1 ADF+CombinedArms INS+CombinedArms
+Yehorivka_AAS_v2 IMF+LightInfantry WPMC+LightInfantry
+Sanxian_RAAS_v2 BAF+CombinedArms PLA+Motorized
+Mestia_AAS_v2 ADF+CombinedArms RGF+CombinedArms
+Skorpo_RAAS_v1 ADF+CombinedArms IMF+CombinedArms
+AlBasrah_TC_v1 TLF+Support PLANMC+Support
+Mutaha_AAS_v1 RGF+Motorized TLF+Motorized
+FoolsRoad_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v1 PLANMC+LightInfantry BAF+Support
+BlackCoast_RAAS_v1 BAF+Armored VDV+Armored
+Kohat_RAAS_v2 INS+CombinedArms USA+CombinedArms
+Tallil_RAAS_v2 MEA+Armored BAF+Armored
+Kamdesh_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
+Narva_AAS_v2 VDV+CombinedArms WPMC+AirAssault
+Gorodok_Invasion_v1 TLF+Support VDV+Support
+Lashkar_AAS_v2 ADF+CombinedArms WPMC+CombinedArms
+Mestia_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Mutaha_TC_v1 ADF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v1 USA+LightInfantry PLA+Armored
+Sumari_AAS_v1 RGF+CombinedArms TLF+CombinedArms
+Yehorivka_Invasion_v2 TLF+CombinedArms WPMC+CombinedArms
+Fallujah_AAS_v1 PLA+Support VDV+Support
+Manicouagan_Skirmish_v3 WPMC+CombinedArms VDV+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+AirAssault
+Kamdesh_RAAS_v1 BAF+Support RGF+Support
+Kokan_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+AlBasrah_Invasion_v1 MEA+Support BAF+Support
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+FoolsRoad_AAS_v1 RGF+CombinedArms USMC+CombinedArms
+GooseBay_AAS_v1 CAF+Armored WPMC+CombinedArms
