--- a/Tools/Rotation/LayerRotation/LayerRotation_19.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_19.cfg
@@ -1,200 +1,200 @@
-Gorodok_AAS_v1 PLA+Motorized RGF+Motorized
-Manicouagan_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Kokan_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
-Tallil_AAS_v1 MEA+Armored TLF+Armored
-Fallujah_AAS_v1 CAF+Support INS+Armored
-Chora_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
-AlBasrah_RAAS_v1 USMC+Motorized INS+Motorized
-Sanxian_AAS_v3 WPMC+CombinedArms PLA+CombinedArms
-Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v1 USMC+LightInfantry WPMC+LightInfantry
-Logar_TC_v1 USA+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v2 ADF+Mechanized PLA+Armored
-Manicouagan_RAAS_v2 PLANMC+Support USA+Support
-Gorodok_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
-Tallil_Invasion_v1 RGF+LightInfantry PLA+LightInfantry
-Mutaha_AAS_v2 RGF+Motorized USMC+Motorized
-Kamdesh_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
-Skorpo_RAAS_v1 USMC+LightInfantry WPMC+LightInfantry
-AlBasrah_RAAS_v1 VDV+AirAssault WPMC+AirAssault
-Mestia_AAS_v1 TLF+CombinedArms IMF+CombinedArms
-Narva_Destruction_v1 IMF+Mechanized CAF+Mechanized
-Belaya_RAAS_v1 CAF+CombinedArms WPMC+LightInfantry
-Fallujah_TC_v1 PLA+CombinedArms TLF+CombinedArms
-Lashkar_AAS_v2 USMC+Armored VDV+Armored
-Sumari_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 USA+Armored PLANMC+Armored
-Anvil_Invasion_v1 BAF+Armored MEA+Support
-Chora_AAS_v3 TLF+CombinedArms WPMC+CombinedArms
-Tallil_TC_v1 RGF+Mechanized ADF+Mechanized
-Kohat_AAS_v1 CAF+Mechanized VDV+Mechanized
-Manicouagan_AAS_v3 BAF+Mechanized VDV+Mechanized
-Kamdesh_AAS_v1 ADF+Mechanized MEA+Armored
-Narva_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
-Sanxian_AAS_v2 PLANMC+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-GooseBay_Skirmish_v1 PLANMC+CombinedArms BAF+CombinedArms
-BlackCoast_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v2 IMF+Armored PLA+Armored
-Kokan_Invasion_v1 VDV+CombinedArms MEA+CombinedArms
-Fallujah_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 USMC+Armored VDV+Armored
-Sumari_AAS_v2 RGF+CombinedArms CAF+CombinedArms
-Anvil_AAS_v1 USA+Mechanized WPMC+CombinedArms
-Mutaha_RAAS_v2 PLA+LightInfantry USMC+LightInfantry
-FoolsRoad_Destruction_v1 TLF+CombinedArms VDV+CombinedArms
-AlBasrah_RAAS_v1 VDV+Armored TLF+Armored
-Kamdesh_RAAS_v1 USA+Armored PLA+Armored
-BlackCoast_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Gorodok_RAAS_v2 WPMC+AirAssault BAF+Support
-GooseBay_RAAS_v1 PLAAGF+CombinedArms RGF+CombinedArms
-Manicouagan_Invasion_v1 RGF+LightInfantry USMC+LightInfantry
-Harju_AAS_v1 VDV+AirAssault WPMC+AirAssault
-Chora_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Yehorivka_AAS_v1 WPMC+LightInfantry USA+LightInfantry
-Skorpo_RAAS_v1 WPMC+AirAssault CAF+Motorized
-Kohat_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
-FoolsRoad_Destruction_v1 IMF+CombinedArms TLF+CombinedArms
-Belaya_AAS_v2 BAF+Support TLF+Support
-AlBasrah_TC_v1 INS+LightInfantry MEA+LightInfantry
-Mutaha_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
-Tallil_AAS_v1 RGF+LightInfantry USMC+Motorized
-Gorodok_AAS_v1 PLA+Support USMC+Support
-Sumari_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Narva_RAAS_v1 VDV+Mechanized USA+Mechanized
-Anvil_RAAS_v1 MEA+Mechanized USA+Mechanized
-Mestia_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Fallujah_AAS_v1 RGF+Mechanized INS+Mechanized
-BlackCoast_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
-Kamdesh_AAS_v1 INS+LightInfantry MEA+AirAssault
-Kohat_AAS_v1 MEA+Support PLA+Support
-FoolsRoad_Skirmish_v2 TLF+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
-Manicouagan_RAAS_v1 RGF+CombinedArms USA+CombinedArms
-Yehorivka_Destruction_v1 TLF+Motorized IMF+Motorized
-Narva_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Sumari_Skirmish_v1 INS+CombinedArms WPMC+CombinedArms
-GooseBay_RAAS_v2 VDV+AirAssault WPMC+AirAssault
-AlBasrah_RAAS_v1 PLANMC+CombinedArms MEA+Support
-Chora_AAS_v2 ADF+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 IMF+CombinedArms TLF+CombinedArms
-Gorodok_Destruction_v1 WPMC+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v2 ADF+CombinedArms PLA+CombinedArms
-Lashkar_TC_v1 MEA+LightInfantry WPMC+LightInfantry
-Fallujah_AAS_v1 BAF+Mechanized MEA+Support
-Mutaha_RAAS_v1 BAF+Support TLF+Support
+Narva_AAS_v1 IMF+CombinedArms RGF+CombinedArms
+Sumari_Skirmish_v1 USA+CombinedArms TLF+CombinedArms
+Gorodok_RAAS_v1 CAF+Support RGF+Support
+Yehorivka_Destruction_v1 USMC+CombinedArms IMF+CombinedArms
+Logar_AAS_v1 WPMC+CombinedArms VDV+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Mutaha_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
+Tallil_TC_v1 PLA+Motorized VDV+AirAssault
+Kamdesh_AAS_v1 MEA+Support RGF+Support
+FoolsRoad_Invasion_v1 TLF+CombinedArms USMC+CombinedArms
+Belaya_AAS_v2 PLA+AirAssault BAF+AirAssault
+Sanxian_RAAS_v2 CAF+Motorized PLANMC+Motorized
+GooseBay_Skirmish_v1 WPMC+CombinedArms CAF+CombinedArms
+BlackCoast_AAS_v2 WPMC+LightInfantry USA+Armored
+Fallujah_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
+Mestia_Invasion_v1 VDV+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v1 PLA+AirAssault WPMC+AirAssault
+Kokan_TC_v1 MEA+CombinedArms RGF+CombinedArms
+Harju_RAAS_v2 IMF+Mechanized ADF+Mechanized
+Gorodok_AAS_v1 PLA+CombinedArms IMF+CombinedArms
+Belaya_Invasion_v1 TLF+Motorized USMC+Motorized
+Yehorivka_AAS_v2 USA+CombinedArms WPMC+LightInfantry
+Sumari_Skirmish_v1 PLA+CombinedArms RGF+CombinedArms
+Kamdesh_AAS_v1 INS+CombinedArms ADF+CombinedArms
+AlBasrah_RAAS_v1 PLANMC+AirAssault ADF+AirAssault
+Lashkar_RAAS_v1 PLA+Armored MEA+Armored
+FoolsRoad_Invasion_v1 VDV+CombinedArms IMF+CombinedArms
+BlackCoast_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Mutaha_TC_v1 PLA+AirAssault TLF+Motorized
+Manicouagan_AAS_v3 WPMC+LightInfantry PLANMC+LightInfantry
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Anvil_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
+Mestia_AAS_v2 USA+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v2 ADF+CombinedArms PLA+LightInfantry
+AlBasrah_RAAS_v1 BAF+Armored RGF+Armored
+Gorodok_TC_v1 VDV+Mechanized ADF+Mechanized
+Kamdesh_RAAS_v1 USMC+Armored PLA+Armored
+Narva_Destruction_v1 WPMC+CombinedArms CAF+CombinedArms
+Skorpo_RAAS_v1 IMF+Armored WPMC+CombinedArms
+Harju_RAAS_v1 USA+CombinedArms IMF+CombinedArms
+Sumari_AAS_v2 INS+CombinedArms TLF+CombinedArms
+Lashkar_AAS_v1 TLF+Support INS+Support
+Manicouagan_RAAS_v1 BAF+CombinedArms RGF+CombinedArms
+Yehorivka_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
+Logar_AAS_v1 WPMC+CombinedArms MEA+CombinedArms
+Fallujah_TC_v1 VDV+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v1 INS+Motorized BAF+AirAssault
+Kamdesh_AAS_v1 INS+Support TLF+Support
+BlackCoast_AAS_v2 WPMC+AirAssault VDV+AirAssault
+Anvil_AAS_v1 USMC+LightInfantry INS+LightInfantry
+AlBasrah_Invasion_v1 ADF+CombinedArms PLANMC+CombinedArms
+Belaya_AAS_v3 TLF+Motorized IMF+LightInfantry
+Kokan_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Narva_AAS_v1 RGF+CombinedArms IMF+CombinedArms
+Kohat_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
+Yehorivka_RAAS_v2 WPMC+LightInfantry PLA+Armored
+Chora_Skirmish_v1 VDV+CombinedArms MEA+CombinedArms
+Fallujah_AAS_v1 INS+LightInfantry USA+LightInfantry
+GooseBay_AAS_v1 VDV+AirAssault PLA+AirAssault
+Mestia_AAS_v2 RGF+CombinedArms IMF+CombinedArms
+Gorodok_Invasion_v1 IMF+CombinedArms ADF+CombinedArms
+Mutaha_AAS_v2 INS+CombinedArms RGF+CombinedArms
+AlBasrah_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 INS+Support PLA+CombinedArms
+Belaya_AAS_v2 BAF+Support RGF+Support
 Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Kamdesh_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Kokan_Invasion_v1 VDV+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v2 INS+Mechanized PLA+Armored
-Harju_AAS_v1 ADF+AirAssault WPMC+AirAssault
-BlackCoast_RAAS_v2 ADF+CombinedArms IMF+CombinedArms
-Belaya_Skirmish_v1 TLF+CombinedArms USMC+CombinedArms
-Manicouagan_AAS_v2 WPMC+AirAssault BAF+AirAssault
-Yehorivka_Invasion_v2 ADF+CombinedArms PLA+Motorized
-Lashkar_AAS_v1 TLF+Motorized PLA+Motorized
+Kohat_AAS_v1 PLA+CombinedArms BAF+CombinedArms
+Narva_Invasion_v1 RGF+Armored IMF+Armored
+BlackCoast_RAAS_v1 PLAAGF+CombinedArms USMC+CombinedArms
+Logar_AAS_v1 INS+CombinedArms TLF+CombinedArms
+Yehorivka_RAAS_v2 ADF+AirAssault RGF+Motorized
+Tallil_RAAS_v1 VDV+CombinedArms BAF+CombinedArms
+Gorodok_RAAS_v2 USA+Motorized IMF+Motorized
+Sanxian_Invasion_v2 CAF+Mechanized PLA+Mechanized
+Kamdesh_RAAS_v1 USA+Armored PLA+Armored
+Sumari_TC_v1 INS+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v1 USA+Support MEA+Support
+Kohat_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Mestia_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Fallujah_Invasion_v1 USMC+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v1 TLF+Armored INS+Motorized
+Manicouagan_AAS_v2 WPMC+LightInfantry USA+LightInfantry
+Chora_Skirmish_v1 TLF+CombinedArms ADF+CombinedArms
+AlBasrah_RAAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
 PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Chora_TC_v1 INS+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v1 BAF+Support PLA+Support
-Skorpo_RAAS_v1 ADF+Mechanized VDV+Armored
-Kokan_Invasion_v1 BAF+CombinedArms INS+CombinedArms
-Gorodok_RAAS_v2 TLF+Armored PLA+Armored
-Kamdesh_AAS_v1 INS+Mechanized TLF+Mechanized
-Mestia_TC_v1 RGF+CombinedArms USMC+CombinedArms
-Tallil_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
-Yehorivka_AAS_v1 USA+Support TLF+Support
-Fallujah_Invasion_v1 TLF+Motorized USA+LightInfantry
-BlackCoast_RAAS_v2 WPMC+CombinedArms TLF+CombinedArms
-Anvil_TC_v1 PLA+AirAssault TLF+AirAssault
-Lashkar_AAS_v2 MEA+AirAssault PLA+AirAssault
-FoolsRoad_AAS_v1 PLA+CombinedArms RGF+CombinedArms
-Belaya_AAS_v1 RGF+CombinedArms USA+CombinedArms
-Narva_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
-Kamdesh_RAAS_v1 CAF+Armored RGF+LightInfantry
-AlBasrah_TC_v1 USA+Motorized RGF+Motorized
-GooseBay_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
-Logar_AAS_v1 BAF+CombinedArms RGF+CombinedArms
-Fallujah_RAAS_v1 MEA+Armored USA+Armored
-Kohat_Invasion_v2 VDV+Support PLA+Motorized
-Harju_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
-Gorodok_TC_v1 USA+Armored TLF+Armored
+Narva_Destruction_v1 USMC+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 TLF+Mechanized USA+Mechanized
+Mutaha_RAAS_v2 WPMC+CombinedArms MEA+CombinedArms
+Logar_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v2 ADF+Mechanized PLA+Armored
+Fallujah_AAS_v1 VDV+Mechanized USA+Mechanized
+Mestia_Invasion_v1 TLF+CombinedArms IMF+CombinedArms
+BlackCoast_AAS_v2 BAF+CombinedArms PLAAGF+CombinedArms
+Kohat_TC_v1 VDV+Support PLA+Support
+Sumari_AAS_v1 RGF+CombinedArms ADF+CombinedArms
+Belaya_AAS_v2 ADF+Mechanized IMF+Mechanized
+GooseBay_RAAS_v2 USA+CombinedArms PLAAGF+CombinedArms
+Tallil_Invasion_v1 VDV+CombinedArms USA+Support
+Chora_AAS_v3 TLF+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 USA+Mechanized RGF+Mechanized
+Narva_AAS_v2 IMF+CombinedArms CAF+CombinedArms
+Kokan_AAS_v1 RGF+CombinedArms USA+CombinedArms
+Yehorivka_AAS_v1 RGF+CombinedArms PLA+CombinedArms
+Anvil_Invasion_v1 VDV+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 MEA+Mechanized TLF+Mechanized
+Kohat_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
+Mutaha_RAAS_v2 RGF+Mechanized ADF+Mechanized
+Manicouagan_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v2 WPMC+CombinedArms TLF+Motorized
+BlackCoast_RAAS_v2 USMC+Armored PLAAGF+Armored
+AlBasrah_Invasion_v1 PLA+CombinedArms USMC+CombinedArms
+Mestia_AAS_v2 VDV+CombinedArms USA+CombinedArms
+Tallil_TC_v1 USMC+CombinedArms TLF+CombinedArms
+Fallujah_AAS_v1 TLF+Support MEA+Support
+Lashkar_RAAS_v1 MEA+LightInfantry RGF+LightInfantry
+Chora_AAS_v2 USMC+CombinedArms VDV+CombinedArms
+Anvil_RAAS_v2 VDV+Support INS+Mechanized
+Yehorivka_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Kamdesh_AAS_v1 USMC+Armored INS+Armored
+Manicouagan_RAAS_v2 RGF+CombinedArms WPMC+CombinedArms
+Sumari_TC_v1 BAF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 VDV+CombinedArms INS+CombinedArms
+Tallil_Invasion_v1 PLA+Motorized CAF+Motorized
+Belaya_AAS_v2 BAF+Support IMF+Support
+AlBasrah_AAS_v1 USA+LightInfantry PLAAGF+Mechanized
+Mutaha_AAS_v1 RGF+Armored MEA+Armored
+FoolsRoad_TC_v1 TLF+CombinedArms ADF+CombinedArms
+Yehorivka_AAS_v1 BAF+Armored PLA+Armored
+BlackCoast_Invasion_v2 IMF+CombinedArms TLF+CombinedArms
+Logar_AAS_v1 INS+CombinedArms MEA+CombinedArms
+Manicouagan_AAS_v3 PLANMC+AirAssault WPMC+LightInfantry
+Fallujah_RAAS_v1 USA+Armored PLA+Armored
+Gorodok_AAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Lashkar_AAS_v2 INS+CombinedArms TLF+CombinedArms
+Anvil_Invasion_v1 RGF+Mechanized BAF+Mechanized
+Kamdesh_RAAS_v1 VDV+Support PLA+CombinedArms
+Narva_Skirmish_v1 RGF+CombinedArms USA+CombinedArms
+Sanxian_AAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v1 INS+CombinedArms VDV+CombinedArms
+FoolsRoad_AAS_v1 PLA+CombinedArms TLF+CombinedArms
+AlBasrah_Invasion_v2 MEA+Mechanized RGF+Mechanized
+BlackCoast_RAAS_v2 TLF+Support WPMC+LightInfantry
+Kohat_TC_v1 TLF+Mechanized INS+Mechanized
+Chora_RAAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v1 TLF+AirAssault BAF+AirAssault
+Manicouagan_AAS_v1 RGF+Mechanized CAF+Mechanized
+Tallil_Invasion_v1 PLA+LightInfantry USMC+LightInfantry
+Gorodok_AAS_v1 TLF+Armored BAF+AirAssault
+Kokan_AAS_v2 INS+CombinedArms RGF+CombinedArms
+Belaya_AAS_v3 CAF+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Yehorivka_Skirmish_v2 TLF+CombinedArms IMF+CombinedArms
+Anvil_AAS_v1 PLA+AirAssault ADF+AirAssault
+Fallujah_Invasion_v2 MEA+Support BAF+Support
+GooseBay_RAAS_v2 RGF+Mechanized CAF+CombinedArms
+Harju_RAAS_v2 RGF+CombinedArms ADF+CombinedArms
+Mestia_RAAS_v1 BAF+CombinedArms RGF+CombinedArms
+Manicouagan_AAS_v3 WPMC+CombinedArms BAF+CombinedArms
+Kohat_RAAS_v2 INS+Motorized PLA+Motorized
+Mutaha_RAAS_v2 INS+LightInfantry CAF+Support
+Kamdesh_Invasion_v1 WPMC+LightInfantry USA+LightInfantry
+Tallil_RAAS_v1 USA+AirAssault MEA+AirAssault
+AlBasrah_Skirmish_v2 RGF+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Yehorivka_RAAS_v2 TLF+Armored PLA+Armored
+Kokan_AAS_v1 INS+CombinedArms MEA+CombinedArms
+BlackCoast_Invasion_v2 BAF+Support IMF+Support
+Lashkar_AAS_v1 PLA+AirAssault ADF+AirAssault
+Fallujah_Skirmish_v1 WPMC+CombinedArms MEA+CombinedArms
 PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Anvil_AAS_v1 WPMC+LightInfantry RGF+Motorized
-Kokan_Invasion_v1 USMC+CombinedArms PLA+CombinedArms
-Narva_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Yehorivka_AAS_v2 WPMC+AirAssault BAF+AirAssault
-FoolsRoad_AAS_v2 TLF+CombinedArms IMF+CombinedArms
-Kamdesh_AAS_v1 WPMC+AirAssault USA+AirAssault
-AlBasrah_RAAS_v1 INS+CombinedArms VDV+CombinedArms
-Skorpo_Invasion_v1 USMC+LightInfantry WPMC+CombinedArms
-Chora_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
-Belaya_RAAS_v1 RGF+LightInfantry IMF+LightInfantry
-Mutaha_AAS_v1 BAF+Armored RGF+Armored
-Sanxian_AAS_v3 PLA+Mechanized ADF+Mechanized
-Tallil_TC_v1 PLA+CombinedArms MEA+AirAssault
-Anvil_RAAS_v2 MEA+Armored CAF+Armored
-Sumari_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
-Gorodok_Invasion_v1 VDV+Mechanized BAF+Mechanized
-Lashkar_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Harju_AAS_v2 VDV+CombinedArms USMC+CombinedArms
-AlBasrah_RAAS_v1 ADF+Mechanized PLAAGF+Mechanized
-Skorpo_RAAS_v1 USMC+Support WPMC+CombinedArms
-GooseBay_AAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
-Yehorivka_Destruction_v1 PLA+LightInfantry WPMC+LightInfantry
-Sanxian_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
-Kohat_RAAS_v1 USMC+Motorized PLA+Motorized
-Logar_AAS_v1 INS+CombinedArms WPMC+CombinedArms
-Manicouagan_AAS_v1 USA+LightInfantry WPMC+LightInfantry
-Gorodok_AAS_v1 CAF+Armored PLA+Armored
-Sumari_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v2 TLF+Mechanized MEA+AirAssault
-Belaya_RAAS_v1 IMF+CombinedArms BAF+CombinedArms
-Kokan_TC_v1 WPMC+CombinedArms INS+CombinedArms
-Kamdesh_AAS_v1 ADF+Mechanized INS+Mechanized
-Lashkar_AAS_v2 MEA+CombinedArms USA+CombinedArms
-FoolsRoad_Destruction_v1 USA+CombinedArms IMF+CombinedArms
-Anvil_AAS_v1 PLA+LightInfantry WPMC+CombinedArms
-Fallujah_RAAS_v1 USMC+Support MEA+Support
-Chora_Skirmish_v1 ADF+CombinedArms INS+CombinedArms
-Gorodok_RAAS_v2 WPMC+CombinedArms CAF+CombinedArms
-Mutaha_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Narva_Destruction_v1 IMF+Armored WPMC+LightInfantry
-Belaya_AAS_v2 IMF+Support USMC+Support
-AlBasrah_RAAS_v1 VDV+Mechanized USA+Mechanized
-Sumari_TC_v1 PLA+CombinedArms MEA+CombinedArms
-Tallil_RAAS_v2 RGF+CombinedArms PLA+CombinedArms
-Lashkar_AAS_v1 USMC+Support VDV+Support
-Manicouagan_Invasion_v2 CAF+CombinedArms PLANMC+CombinedArms
-Kokan_AAS_v1 PLA+CombinedArms RGF+CombinedArms
-BlackCoast_RAAS_v1 IMF+Motorized TLF+Motorized
-Kohat_TC_v1 TLF+Support PLA+Support
-Kamdesh_AAS_v1 USA+Mechanized TLF+Mechanized
-Mutaha_AAS_v1 PLA+Motorized RGF+Motorized
-Gorodok_Destruction_v1 TLF+Mechanized IMF+Mechanized
-Anvil_AAS_v1 PLA+AirAssault INS+Support
-Harju_AAS_v2 VDV+CombinedArms IMF+CombinedArms
-Tallil_RAAS_v1 TLF+Mechanized ADF+Mechanized
-Sanxian_AAS_v2 WPMC+CombinedArms CAF+CombinedArms
-Belaya_TC_v1 PLA+Motorized TLF+Motorized
-Mestia_AAS_v1 USA+CombinedArms PLA+CombinedArms
-Manicouagan_Invasion_v2 USA+Support WPMC+CombinedArms
-Lashkar_AAS_v2 USMC+CombinedArms INS+CombinedArms
-Kamdesh_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Logar_TC_v1 TLF+CombinedArms INS+CombinedArms
-Yehorivka_AAS_v2 CAF+Support PLA+Support
-GooseBay_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
-Fallujah_Invasion_v1 USMC+Armored PLA+CombinedArms
-Tallil_RAAS_v2 ADF+AirAssault PLA+AirAssault
-Sumari_AAS_v3 BAF+CombinedArms RGF+CombinedArms
-Anvil_AAS_v1 TLF+CombinedArms INS+CombinedArms
-AlBasrah_TC_v1 WPMC+LightInfantry MEA+LightInfantry
-Mutaha_AAS_v1 PLA+AirAssault VDV+AirAssault
-Manicouagan_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
-Kohat_AAS_v1 TLF+Support WPMC+AirAssault
-Narva_AAS_v1 IMF+CombinedArms USMC+CombinedArms
-Gorodok_RAAS_v2 PLA+CombinedArms IMF+CombinedArms
-Chora_TC_v1 VDV+CombinedArms TLF+CombinedArms
-Kamdesh_RAAS_v1 USA+LightInfantry WPMC+LightInfantry
-Belaya_Invasion_v1 IMF+Motorized USMC+CombinedArms
+Sanxian_AAS_v2 BAF+Support PLA+Support
+Narva_RAAS_v1 WPMC+LightInfantry IMF+CombinedArms
+Manicouagan_Invasion_v2 PLAAGF+CombinedArms WPMC+CombinedArms
+FoolsRoad_AAS_v2 TLF+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v2 TLF+CombinedArms MEA+CombinedArms
+AlBasrah_AAS_v1 TLF+CombinedArms VDV+CombinedArms
+Mestia_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+BlackCoast_RAAS_v2 VDV+CombinedArms ADF+AirAssault
+Yehorivka_Destruction_v1 TLF+Mechanized IMF+Mechanized
+Anvil_RAAS_v2 USA+Armored MEA+Armored
+GooseBay_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 TLF+Support WPMC+LightInfantry
+Sanxian_AAS_v3 PLA+CombinedArms ADF+CombinedArms
+Fallujah_Invasion_v2 TLF+Armored PLA+Armored
+PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Chora_AAS_v3 TLF+CombinedArms INS+CombinedArms
+Kohat_TC_v1 USA+Armored TLF+Armored
+Mutaha_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+AlBasrah_RAAS_v1 PLANMC+Motorized VDV+AirAssault
+Yehorivka_Destruction_v1 TLF+Motorized RGF+Motorized
+Anvil_RAAS_v1 PLA+Motorized CAF+Motorized
+BlackCoast_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Harju_RAAS_v1 VDV+Support IMF+Support
+Tallil_AAS_v1 WPMC+AirAssault PLA+AirAssault
