--- a/Tools/Rotation/LayerRotation/LayerRotation_20.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_20.cfg
@@ -1,200 +1,200 @@
-BlackCoast_AAS_v2 VDV+Armored USA+Armored
-Lashkar_AAS_v1 PLA+Motorized USMC+Motorized
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Logar_Skirmish_v1 INS+CombinedArms USA+CombinedArms
-Yehorivka_AAS_v1 PLA+LightInfantry WPMC+AirAssault
-Kohat_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Kokan_RAAS_v1 INS+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v1 PLA+Motorized INS+Motorized
-Anvil_TC_v1 TLF+Mechanized ADF+Mechanized
-Sanxian_RAAS_v2 WPMC+LightInfantry USMC+CombinedArms
-Mutaha_RAAS_v2 BAF+Mechanized RGF+Mechanized
-Manicouagan_Invasion_v1 PLA+Motorized RGF+Motorized
-Gorodok_RAAS_v2 USA+AirAssault VDV+AirAssault
-Mestia_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Belaya_TC_v1 PLA+Support BAF+AirAssault
-PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms USA+CombinedArms
-Tallil_RAAS_v1 BAF+Armored PLA+Armored
-Harju_Invasion_v3 USMC+Support IMF+Support
-FoolsRoad_AAS_v2 CAF+CombinedArms PLA+CombinedArms
-AlBasrah_TC_v1 INS+Mechanized TLF+Mechanized
-Anvil_RAAS_v1 PLA+Support USMC+Support
-Logar_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
-Fallujah_RAAS_v1 TLF+Armored PLA+CombinedArms
-Kohat_RAAS_v2 VDV+Armored CAF+Armored
-Narva_Destruction_v1 IMF+CombinedArms VDV+CombinedArms
-Mestia_RAAS_v1 TLF+CombinedArms IMF+CombinedArms
-Mutaha_TC_v1 PLA+LightInfantry WPMC+LightInfantry
-Sanxian_RAAS_v2 USA+AirAssault WPMC+AirAssault
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Harju_AAS_v1 BAF+AirAssault IMF+Armored
-Belaya_Invasion_v1 ADF+CombinedArms IMF+CombinedArms
-Gorodok_RAAS_v1 RGF+Support PLA+Support
-Chora_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
-Fallujah_RAAS_v1 TLF+Support INS+Support
-Kohat_RAAS_v2 VDV+Mechanized ADF+Mechanized
-Sumari_RAAS_v1 PLA+CombinedArms INS+CombinedArms
-Yehorivka_AAS_v1 WPMC+CombinedArms IMF+Armored
-Manicouagan_Invasion_v2 RGF+CombinedArms PLAAGF+CombinedArms
-Kamdesh_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
-Tallil_Skirmish_v3 PLA+CombinedArms BAF+CombinedArms
-BlackCoast_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
-AlBasrah_RAAS_v1 PLAAGF+Armored TLF+Motorized
-Belaya_AAS_v1 IMF+Motorized TLF+Motorized
-Gorodok_Destruction_v1 PLA+Support USMC+Support
-Mestia_AAS_v1 IMF+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v2 MEA+Mechanized ADF+Mechanized
-Mutaha_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
-Narva_AAS_v1 WPMC+CombinedArms IMF+Armored
-Logar_AAS_v1 INS+CombinedArms VDV+CombinedArms
-Lashkar_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
+Belaya_AAS_v3 IMF+Mechanized TLF+Mechanized
+Gorodok_Destruction_v1 WPMC+CombinedArms USMC+CombinedArms
+Fallujah_AAS_v1 PLA+Support BAF+Support
+Mestia_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
+Manicouagan_RAAS_v2 BAF+AirAssault PLANMC+AirAssault
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+AlBasrah_RAAS_v1 ADF+Mechanized MEA+Mechanized
+Lashkar_Invasion_v1 BAF+Armored RGF+CombinedArms
+Kokan_AAS_v1 USA+CombinedArms PLA+CombinedArms
+Kohat_AAS_v1 TLF+Mechanized INS+Mechanized
+Kamdesh_AAS_v1 USA+LightInfantry WPMC+LightInfantry
+Harju_Skirmish_v2 WPMC+CombinedArms CAF+CombinedArms
+Tallil_RAAS_v2 PLA+Support BAF+Support
+Belaya_Invasion_v1 USA+Mechanized IMF+Mechanized
+Logar_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
+Anvil_RAAS_v2 TLF+CombinedArms INS+Support
+Mutaha_TC_v1 RGF+CombinedArms CAF+CombinedArms
+Sumari_RAAS_v1 ADF+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 USA+Support IMF+Support
+Narva_AAS_v1 IMF+Mechanized ADF+Mechanized
+AlBasrah_AAS_v1 TLF+Support CAF+Armored
+Kokan_Invasion_v1 RGF+CombinedArms MEA+CombinedArms
+Gorodok_RAAS_v2 TLF+Mechanized IMF+Mechanized
+Kamdesh_RAAS_v1 PLA+Support BAF+Support
+FoolsRoad_TC_v1 IMF+CombinedArms WPMC+CombinedArms
+Belaya_RAAS_v1 IMF+CombinedArms TLF+Support
+GooseBay_AAS_v1 PLA+Support VDV+Support
+Lashkar_Invasion_v1 ADF+CombinedArms RGF+CombinedArms
+Chora_AAS_v2 MEA+CombinedArms TLF+CombinedArms
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 PLA+Armored USA+Armored
+Tallil_TC_v1 INS+Support TLF+Armored
+Sanxian_AAS_v3 WPMC+CombinedArms USMC+CombinedArms
+Fallujah_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 TLF+AirAssault PLA+AirAssault
+AlBasrah_RAAS_v1 BAF+AirAssault PLA+AirAssault
+FoolsRoad_Skirmish_v2 WPMC+CombinedArms IMF+CombinedArms
+Manicouagan_RAAS_v1 BAF+Mechanized WPMC+LightInfantry
+Lashkar_AAS_v2 INS+Mechanized VDV+Mechanized
+Gorodok_RAAS_v2 IMF+Support PLA+Support
+Yehorivka_AAS_v2 TLF+AirAssault WPMC+AirAssault
+Chora_Invasion_v2 BAF+CombinedArms RGF+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Anvil_RAAS_v2 RGF+Motorized PLA+Motorized
+Kohat_AAS_v1 CAF+Motorized TLF+Support
 Fallujah_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
-BlackCoast_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
-Yehorivka_RAAS_v2 PLA+CombinedArms USMC+CombinedArms
-Manicouagan_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v1 VDV+Mechanized ADF+Mechanized
-AlBasrah_Invasion_v2 TLF+Support RGF+Support
-Skorpo_RAAS_v1 CAF+Support VDV+Support
-Kokan_TC_v1 CAF+CombinedArms PLA+CombinedArms
-Tallil_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Narva_RAAS_v1 WPMC+AirAssault VDV+AirAssault
-Mestia_RAAS_v1 RGF+CombinedArms USA+CombinedArms
-Gorodok_Invasion_v1 ADF+Mechanized VDV+Armored
-Sanxian_RAAS_v2 PLAAGF+CombinedArms USMC+CombinedArms
-Kohat_RAAS_v1 TLF+AirAssault WPMC+AirAssault
-Chora_RAAS_v1 CAF+CombinedArms INS+CombinedArms
-GooseBay_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v1 PLA+AirAssault BAF+Mechanized
-Manicouagan_Invasion_v2 PLA+CombinedArms WPMC+CombinedArms
-Fallujah_RAAS_v2 CAF+Support PLA+Support
-FoolsRoad_TC_v1 CAF+CombinedArms VDV+CombinedArms
-AlBasrah_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
-BlackCoast_AAS_v2 PLA+CombinedArms IMF+CombinedArms
-Mutaha_AAS_v2 INS+Motorized VDV+Armored
-Harju_Invasion_v3 WPMC+CombinedArms USA+CombinedArms
-Tallil_RAAS_v1 RGF+Support MEA+Support
-Skorpo_RAAS_v1 RGF+CombinedArms BAF+CombinedArms
-Chora_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Kohat_RAAS_v1 TLF+Support VDV+Armored
-Yehorivka_Invasion_v2 CAF+Motorized PLA+Motorized
-Kokan_RAAS_v1 MEA+CombinedArms ADF+CombinedArms
-Gorodok_AAS_v1 USMC+Armored IMF+Armored
-BlackCoast_RAAS_v1 CAF+AirAssault VDV+AirAssault
-FoolsRoad_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Kamdesh_RAAS_v1 MEA+Support RGF+CombinedArms
-Manicouagan_AAS_v2 CAF+CombinedArms WPMC+CombinedArms
-Tallil_Invasion_v1 PLA+Armored TLF+Armored
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-AlBasrah_Skirmish_v2 INS+CombinedArms MEA+CombinedArms
-Kohat_RAAS_v2 PLA+Motorized MEA+AirAssault
-Fallujah_RAAS_v2 TLF+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v2 TLF+Support PLA+Support
-Gorodok_Destruction_v1 VDV+Armored PLA+Armored
-Narva_AAS_v2 WPMC+AirAssault VDV+AirAssault
-Sumari_TC_v1 PLA+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v2 BAF+Mechanized WPMC+LightInfantry
-Kamdesh_AAS_v1 INS+LightInfantry PLA+LightInfantry
-Tallil_RAAS_v2 INS+Support USA+Support
-GooseBay_Invasion_v1 USMC+Armored RGF+Armored
-Yehorivka_AAS_v1 PLA+Support IMF+Support
-Kohat_TC_v1 USA+AirAssault PLA+AirAssault
-Harju_RAAS_v2 USA+Armored WPMC+CombinedArms
-Kokan_AAS_v1 MEA+CombinedArms BAF+CombinedArms
-AlBasrah_RAAS_v1 PLANMC+CombinedArms USMC+CombinedArms
-Anvil_Invasion_v1 VDV+CombinedArms MEA+CombinedArms
-Mestia_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Narva_RAAS_v1 ADF+Mechanized IMF+Support
+Logar_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
+Narva_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
+Manicouagan_AAS_v2 PLANMC+CombinedArms USA+CombinedArms
+BlackCoast_RAAS_v2 WPMC+CombinedArms ADF+Mechanized
+AlBasrah_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
+Harju_TC_v1 IMF+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v1 CAF+Support PLA+Support
+Yehorivka_Destruction_v1 PLA+Armored BAF+Armored
+Sanxian_AAS_v2 WPMC+CombinedArms ADF+CombinedArms
+Kohat_AAS_v1 TLF+AirAssault RGF+Mechanized
+Kokan_RAAS_v1 INS+CombinedArms TLF+CombinedArms
+Kamdesh_TC_v1 TLF+AirAssault MEA+AirAssault
+Lashkar_AAS_v2 PLA+CombinedArms WPMC+CombinedArms
+Gorodok_Destruction_v1 WPMC+CombinedArms TLF+CombinedArms
+Manicouagan_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
+Anvil_AAS_v1 VDV+Support BAF+Armored
+Chora_TC_v1 TLF+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Yehorivka_RAAS_v1 TLF+Support RGF+Support
+Fallujah_Invasion_v2 USA+CombinedArms MEA+CombinedArms
+AlBasrah_AAS_v1 PLAAGF+Armored INS+Armored
+Tallil_AAS_v1 INS+Support WPMC+AirAssault
+Harju_Skirmish_v2 IMF+CombinedArms USA+CombinedArms
+Mutaha_AAS_v1 PLA+AirAssault MEA+AirAssault
+Kohat_RAAS_v2 TLF+AirAssault WPMC+AirAssault
+Lashkar_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
+Gorodok_AAS_v1 RGF+LightInfantry PLA+LightInfantry
+Anvil_Skirmish_v1 TLF+CombinedArms MEA+CombinedArms
+Narva_RAAS_v1 VDV+Armored WPMC+CombinedArms
+Yehorivka_AAS_v1 USMC+Motorized PLA+Motorized
+FoolsRoad_Destruction_v1 USMC+CombinedArms IMF+CombinedArms
+Fallujah_AAS_v1 PLA+Motorized CAF+Motorized
+BlackCoast_AAS_v2 USA+Support IMF+Support
+Manicouagan_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
+Tallil_RAAS_v2 PLA+AirAssault BAF+Mechanized
+Kokan_TC_v1 USA+CombinedArms PLA+CombinedArms
+Belaya_AAS_v1 ADF+AirAssault PLA+AirAssault
+Kohat_Invasion_v2 ADF+CombinedArms PLA+CombinedArms
+Gorodok_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 USMC+Motorized RGF+Motorized
+AlBasrah_TC_v1 TLF+AirAssault PLA+AirAssault
+Kamdesh_RAAS_v1 INS+Armored MEA+AirAssault
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms BAF+CombinedArms
+Fallujah_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
+Chora_AAS_v2 USA+CombinedArms INS+CombinedArms
+Anvil_TC_v1 RGF+LightInfantry USA+LightInfantry
+Tallil_RAAS_v2 TLF+Mechanized INS+Mechanized
+Skorpo_RAAS_v1 USA+LightInfantry RGF+LightInfantry
+Yehorivka_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Gorodok_Invasion_v1 BAF+CombinedArms WPMC+LightInfantry
+Narva_AAS_v2 WPMC+LightInfantry RGF+LightInfantry
+BlackCoast_AAS_v1 IMF+Mechanized USA+Mechanized
+Kokan_TC_v1 INS+CombinedArms VDV+CombinedArms
+Kohat_RAAS_v1 MEA+LightInfantry WPMC+LightInfantry
+Harju_RAAS_v2 IMF+Mechanized VDV+Armored
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Chora_RAAS_v1 USMC+CombinedArms MEA+CombinedArms
+Mutaha_Invasion_v1 PLA+Armored BAF+Armored
+Manicouagan_AAS_v2 WPMC+AirAssault VDV+AirAssault
+Sumari_Skirmish_v1 MEA+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v2 WPMC+LightInfantry USMC+Armored
+Skorpo_RAAS_v1 CAF+Armored IMF+Armored
+Fallujah_AAS_v1 INS+Mechanized TLF+Mechanized
+Narva_Destruction_v1 IMF+Mechanized RGF+Mechanized
+Kamdesh_AAS_v1 INS+CombinedArms USA+CombinedArms
+FoolsRoad_AAS_v1 RGF+CombinedArms BAF+CombinedArms
+Lashkar_AAS_v1 MEA+LightInfantry USA+LightInfantry
+Gorodok_RAAS_v2 PLA+CombinedArms IMF+Mechanized
+Kohat_TC_v1 VDV+Mechanized ADF+Mechanized
+Yehorivka_AAS_v2 PLA+Motorized IMF+Motorized
+Mestia_Invasion_v1 PLA+CombinedArms CAF+CombinedArms
+Mutaha_AAS_v2 PLA+Armored MEA+Armored
+Anvil_RAAS_v2 PLA+Motorized MEA+AirAssault
+AlBasrah_TC_v1 PLAAGF+Mechanized TLF+Mechanized
+Fallujah_RAAS_v1 USMC+CombinedArms TLF+CombinedArms
+Chora_RAAS_v1 TLF+CombinedArms CAF+CombinedArms
+Belaya_Invasion_v1 VDV+Armored IMF+Armored
+Manicouagan_AAS_v3 RGF+Mechanized PLAAGF+Mechanized
+Sumari_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+Kohat_RAAS_v2 WPMC+LightInfantry PLA+Support
+Narva_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Yehorivka_Skirmish_v2 USMC+CombinedArms PLA+CombinedArms
+Kamdesh_AAS_v1 CAF+Support MEA+Support
+Anvil_Invasion_v1 PLA+Armored VDV+Armored
+Kokan_AAS_v2 CAF+CombinedArms MEA+CombinedArms
+Fallujah_RAAS_v2 INS+Mechanized VDV+Mechanized
+AlBasrah_AAS_v1 PLAAGF+CombinedArms TLF+Motorized
+Chora_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
+Belaya_AAS_v3 IMF+Armored BAF+Armored
+Lashkar_Invasion_v1 PLA+Support MEA+Support
+Kohat_RAAS_v2 VDV+Support INS+Support
+Gorodok_AAS_v1 BAF+Mechanized IMF+Mechanized
+Harju_Skirmish_v1 IMF+CombinedArms ADF+CombinedArms
+Mutaha_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Yehorivka_RAAS_v2 PLA+CombinedArms USA+AirAssault
+Sumari_Invasion_v1 PLA+CombinedArms INS+CombinedArms
+Kamdesh_AAS_v1 USA+CombinedArms INS+CombinedArms
+Sanxian_AAS_v1 WPMC+LightInfantry USA+LightInfantry
+FoolsRoad_Skirmish_v2 CAF+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 VDV+CombinedArms IMF+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Lashkar_Invasion_v1 TLF+CombinedArms CAF+CombinedArms
+Logar_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Belaya_AAS_v1 USMC+Support IMF+Support
+Kohat_TC_v1 USMC+LightInfantry WPMC+CombinedArms
+BlackCoast_AAS_v2 TLF+Mechanized IMF+Mechanized
+Yehorivka_AAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Tallil_Invasion_v1 INS+Support PLA+Support
+GooseBay_AAS_v1 USMC+CombinedArms VDV+CombinedArms
+Narva_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v3 BAF+CombinedArms PLA+Armored
+Kamdesh_AAS_v1 PLA+Armored RGF+Armored
+Skorpo_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
+Gorodok_Invasion_v1 PLA+Motorized TLF+Motorized
 PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Gorodok_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-BlackCoast_Invasion_v2 WPMC+CombinedArms CAF+CombinedArms
-Yehorivka_RAAS_v1 ADF+AirAssault WPMC+CombinedArms
-Skorpo_RAAS_v1 USMC+CombinedArms IMF+CombinedArms
-Kokan_TC_v1 PLA+CombinedArms ADF+CombinedArms
-Fallujah_AAS_v1 PLA+CombinedArms VDV+CombinedArms
-Kohat_RAAS_v2 MEA+LightInfantry WPMC+LightInfantry
-Manicouagan_Invasion_v2 WPMC+LightInfantry PLA+LightInfantry
-Lashkar_AAS_v2 MEA+CombinedArms TLF+CombinedArms
-Kamdesh_Skirmish_v1 RGF+CombinedArms CAF+CombinedArms
-Narva_AAS_v1 USA+LightInfantry IMF+Mechanized
-Harju_RAAS_v1 ADF+AirAssault WPMC+AirAssault
-Mestia_AAS_v1 IMF+CombinedArms USA+CombinedArms
-Yehorivka_Invasion_v1 TLF+Mechanized USA+Mechanized
-Gorodok_AAS_v1 TLF+Motorized PLA+Motorized
-Anvil_AAS_v1 WPMC+CombinedArms PLA+AirAssault
-Mutaha_Skirmish_v1 CAF+CombinedArms VDV+CombinedArms
-Fallujah_AAS_v1 BAF+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Logar_AAS_v1 TLF+CombinedArms RGF+CombinedArms
-AlBasrah_Invasion_v1 PLA+Armored CAF+Motorized
-Skorpo_RAAS_v1 VDV+Support IMF+Support
-Tallil_Skirmish_v3 PLA+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v2 CAF+Motorized TLF+Motorized
-GooseBay_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
-Sumari_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v2 ADF+CombinedArms VDV+Armored
-Gorodok_Invasion_v1 USA+CombinedArms TLF+CombinedArms
-FoolsRoad_AAS_v1 USMC+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Manicouagan_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v2 PLA+AirAssault WPMC+CombinedArms
-Kokan_TC_v1 PLA+CombinedArms USMC+CombinedArms
-Lashkar_RAAS_v1 RGF+LightInfantry PLA+LightInfantry
-AlBasrah_Insurgency_v1 CAF+Mechanized INS+Mechanized
-Kamdesh_RAAS_v1 VDV+Mechanized BAF+Mechanized
-Chora_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v1 CAF+Mechanized PLA+Armored
-Kohat_TC_v1 WPMC+CombinedArms MEA+CombinedArms
-Narva_AAS_v1 USMC+CombinedArms VDV+CombinedArms
-GooseBay_Invasion_v1 PLA+LightInfantry USA+LightInfantry
-FoolsRoad_AAS_v1 CAF+CombinedArms VDV+CombinedArms
-Manicouagan_RAAS_v2 PLAAGF+Mechanized USA+Mechanized
-Anvil_RAAS_v2 USA+Armored INS+Armored
-Gorodok_RAAS_v1 IMF+Motorized TLF+CombinedArms
-AlBasrah_Skirmish_v2 TLF+CombinedArms ADF+CombinedArms
-Sanxian_AAS_v3 ADF+CombinedArms PLANMC+CombinedArms
-Fallujah_Invasion_v1 RGF+CombinedArms USMC+CombinedArms
-Kokan_AAS_v2 MEA+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-BlackCoast_RAAS_v2 WPMC+CombinedArms PLAAGF+CombinedArms
-Lashkar_TC_v1 VDV+Support PLA+CombinedArms
-Tallil_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Yehorivka_Destruction_v1 TLF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
-FoolsRoad_AAS_v1 USA+CombinedArms VDV+CombinedArms
-Mutaha_RAAS_v1 RGF+CombinedArms PLA+Support
-Narva_AAS_v1 ADF+AirAssault WPMC+AirAssault
-Kamdesh_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
-Kohat_AAS_v1 INS+Motorized PLA+Motorized
-Harju_Invasion_v2 USA+CombinedArms WPMC+CombinedArms
-Mestia_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Manicouagan_RAAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 RGF+Mechanized IMF+Mechanized
-Sanxian_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Kokan_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Lashkar_Invasion_v1 TLF+CombinedArms INS+CombinedArms
-Skorpo_RAAS_v1 VDV+AirAssault USMC+Support
-Sumari_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
-Mutaha_AAS_v2 VDV+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 VDV+Armored PLA+Armored
-Logar_AAS_v1 VDV+CombinedArms TLF+CombinedArms
-Anvil_Invasion_v1 VDV+CombinedArms BAF+CombinedArms
-Kohat_RAAS_v1 WPMC+AirAssault MEA+AirAssault
-Tallil_RAAS_v2 PLA+Support INS+Support
-Mestia_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
-Narva_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v1 ADF+CombinedArms TLF+CombinedArms
-Kamdesh_Invasion_v1 USA+CombinedArms PLA+CombinedArms
-Sanxian_AAS_v3 PLA+CombinedArms WPMC+CombinedArms
-Sumari_TC_v1 TLF+CombinedArms INS+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-BlackCoast_RAAS_v2 USA+AirAssault WPMC+AirAssault
-Manicouagan_AAS_v1 WPMC+LightInfantry BAF+Armored
-Lashkar_Invasion_v1 TLF+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v1 PLA+Armored MEA+Armored
-Harju_AAS_v3 VDV+CombinedArms USA+CombinedArms
-Anvil_AAS_v1 BAF+AirAssault PLA+AirAssault
-Belaya_TC_v1 PLA+AirAssault BAF+CombinedArms
-Gorodok_RAAS_v2 VDV+Support IMF+Support
-FoolsRoad_Destruction_v1 VDV+CombinedArms WPMC+CombinedArms
+Fallujah_AAS_v1 TLF+CombinedArms BAF+CombinedArms
+AlBasrah_AAS_v1 ADF+Mechanized PLAAGF+Mechanized
+Kohat_RAAS_v1 WPMC+LightInfantry TLF+Motorized
+Logar_AAS_v1 PLA+CombinedArms MEA+CombinedArms
+Lashkar_Invasion_v1 RGF+Mechanized INS+Mechanized
+Narva_AAS_v3 WPMC+LightInfantry IMF+LightInfantry
+Anvil_RAAS_v2 CAF+Support TLF+Support
+Kokan_TC_v1 INS+CombinedArms MEA+CombinedArms
+Kamdesh_RAAS_v1 RGF+CombinedArms ADF+CombinedArms
+Yehorivka_AAS_v1 VDV+Armored USMC+Armored
+Tallil_Invasion_v1 BAF+Mechanized RGF+Mechanized
+Sanxian_RAAS_v2 PLANMC+LightInfantry USA+LightInfantry
+Belaya_TC_v1 RGF+LightInfantry BAF+CombinedArms
+Sumari_AAS_v2 INS+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 RGF+Motorized INS+Motorized
+Manicouagan_RAAS_v2 PLA+Support BAF+Support
+Mutaha_Invasion_v1 TLF+Mechanized MEA+Mechanized
+BlackCoast_RAAS_v2 WPMC+AirAssault PLA+AirAssault
+Lashkar_AAS_v2 TLF+Support ADF+Mechanized
+Narva_TC_v1 ADF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v1 USA+CombinedArms TLF+CombinedArms
+Gorodok_RAAS_v1 TLF+Mechanized ADF+Mechanized
+Kokan_Invasion_v1 INS+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
+AlBasrah_RAAS_v1 VDV+CombinedArms CAF+CombinedArms
+Tallil_RAAS_v2 PLA+Support TLF+Support
+Harju_Skirmish_v1 USA+CombinedArms RGF+CombinedArms
+Manicouagan_RAAS_v1 PLA+Motorized VDV+Armored
+Kohat_Insurgency_v1 VDV+Mechanized INS+Mechanized
+Mestia_RAAS_v1 BAF+CombinedArms TLF+CombinedArms
+Narva_RAAS_v1 VDV+Armored IMF+Armored
+BlackCoast_RAAS_v1 WPMC+AirAssault BAF+AirAssault
+Sanxian_RAAS_v2 PLA+AirAssault BAF+Armored
+Kamdesh_TC_v1 RGF+CombinedArms WPMC+CombinedArms
+Sumari_AAS_v2 PLA+CombinedArms ADF+CombinedArms
+Fallujah_Invasion_v2 PLA+Armored MEA+Armored
+Mutaha_RAAS_v2 WPMC+LightInfantry INS+LightInfantry
+Yehorivka_RAAS_v1 USMC+Motorized TLF+Mechanized
