--- a/Tools/Rotation/LayerRotation/LayerRotation_21.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_21.cfg
@@ -1,200 +1,200 @@
-Sanxian_AAS_v1 CAF+Mechanized PLAAGF+Mechanized
-Mutaha_AAS_v1 WPMC+CombinedArms RGF+CombinedArms
-Chora_Skirmish_v1 INS+CombinedArms WPMC+CombinedArms
-Kamdesh_RAAS_v1 PLA+LightInfantry USA+LightInfantry
-Kohat_RAAS_v2 PLA+CombinedArms RGF+CombinedArms
-Lashkar_Invasion_v1 USMC+Motorized RGF+Motorized
-BlackCoast_RAAS_v2 WPMC+AirAssault TLF+AirAssault
-Fallujah_AAS_v1 RGF+LightInfantry WPMC+LightInfantry
-Manicouagan_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
-Yehorivka_Skirmish_v2 ADF+CombinedArms TLF+CombinedArms
-Tallil_RAAS_v1 TLF+CombinedArms VDV+Armored
-Harju_RAAS_v2 WPMC+AirAssault CAF+AirAssault
-Sumari_Invasion_v1 BAF+CombinedArms INS+CombinedArms
+Kokan_TC_v1 PLA+CombinedArms USMC+CombinedArms
+AlBasrah_AAS_v1 MEA+CombinedArms USMC+CombinedArms
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Narva_TC_v1 IMF+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 CAF+CombinedArms PLAAGF+Mechanized
-Sanxian_AAS_v1 CAF+AirAssault PLANMC+AirAssault
-Logar_RAAS_v1 PLA+CombinedArms MEA+CombinedArms
-Kamdesh_Invasion_v1 PLA+Motorized RGF+Motorized
-GooseBay_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Kohat_TC_v1 USMC+Armored TLF+Armored
-Lashkar_AAS_v1 BAF+Support WPMC+LightInfantry
+FoolsRoad_Invasion_v1 IMF+CombinedArms RGF+CombinedArms
+GooseBay_RAAS_v2 WPMC+AirAssault USA+Motorized
+Manicouagan_AAS_v1 CAF+AirAssault WPMC+AirAssault
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Logar_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
+Tallil_TC_v1 MEA+AirAssault WPMC+AirAssault
+Mutaha_RAAS_v2 TLF+Armored PLA+CombinedArms
+Kamdesh_Invasion_v1 TLF+Support INS+Support
+Chora_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
+Harju_RAAS_v2 WPMC+LightInfantry RGF+LightInfantry
+Gorodok_RAAS_v1 USMC+Support VDV+Support
+Lashkar_TC_v1 WPMC+AirAssault INS+LightInfantry
+Sumari_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
+Fallujah_Invasion_v1 PLA+LightInfantry INS+LightInfantry
+Sanxian_AAS_v1 PLA+Mechanized ADF+Mechanized
+Belaya_AAS_v1 USMC+Motorized IMF+Motorized
+AlBasrah_RAAS_v1 INS+Armored TLF+Motorized
+GooseBay_Skirmish_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 USMC+CombinedArms PLA+CombinedArms
+BlackCoast_Invasion_v2 VDV+CombinedArms IMF+CombinedArms
+Kokan_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
+Anvil_RAAS_v1 INS+Mechanized MEA+CombinedArms
+Yehorivka_RAAS_v2 ADF+CombinedArms RGF+CombinedArms
+Kohat_RAAS_v2 PLA+CombinedArms USA+CombinedArms
+Lashkar_TC_v1 WPMC+AirAssault MEA+AirAssault
+Sumari_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Kamdesh_Insurgency_v1 USA+Motorized INS+Support
+Narva_AAS_v3 IMF+LightInfantry WPMC+LightInfantry
+Gorodok_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Manicouagan_Skirmish_v3 VDV+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v2 RGF+CombinedArms MEA+CombinedArms
+AlBasrah_AAS_v1 WPMC+LightInfantry VDV+Support
+BlackCoast_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms CAF+CombinedArms
+Harju_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
+Kohat_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 INS+Motorized USMC+CombinedArms
+Mutaha_AAS_v2 CAF+Armored MEA+Armored
+Belaya_Invasion_v1 USMC+CombinedArms TLF+CombinedArms
+Yehorivka_RAAS_v1 PLA+Support RGF+Support
+Kokan_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
+Gorodok_RAAS_v2 WPMC+AirAssault IMF+LightInfantry
+Kamdesh_AAS_v1 PLA+Support TLF+Support
+GooseBay_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Mestia_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
+Manicouagan_RAAS_v2 USA+CombinedArms PLAAGF+CombinedArms
+AlBasrah_RAAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Logar_TC_v1 PLA+CombinedArms VDV+CombinedArms
+Anvil_RAAS_v1 WPMC+CombinedArms PLA+Support
+Harju_AAS_v1 RGF+Motorized IMF+Motorized
+FoolsRoad_Invasion_v1 ADF+CombinedArms IMF+CombinedArms
+Yehorivka_RAAS_v2 PLA+CombinedArms VDV+CombinedArms
+Lashkar_TC_v2 WPMC+AirAssault VDV+AirAssault
+Chora_AAS_v3 USA+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 INS+Motorized PLA+AirAssault
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms PLANMC+CombinedArms
+Fallujah_AAS_v1 WPMC+LightInfantry MEA+LightInfantry
+Tallil_Skirmish_v2 USMC+CombinedArms INS+CombinedArms
+Narva_RAAS_v1 ADF+Mechanized RGF+Mechanized
+Mutaha_Invasion_v1 CAF+Motorized RGF+Motorized
+Logar_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Gorodok_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 PLA+Motorized TLF+Motorized
+Mestia_TC_v1 PLA+CombinedArms IMF+CombinedArms
+Harju_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Yehorivka_Destruction_v1 PLA+Support RGF+LightInfantry
+Belaya_RAAS_v1 PLA+Armored CAF+Armored
+Sanxian_RAAS_v1 PLANMC+Armored CAF+Armored
+Lashkar_Skirmish_v1 RGF+CombinedArms CAF+CombinedArms
+Manicouagan_AAS_v1 PLANMC+Support USMC+Support
+Narva_RAAS_v1 USMC+Armored VDV+Armored
+AlBasrah_Invasion_v2 WPMC+AirAssault TLF+Support
+Fallujah_AAS_v1 TLF+Armored INS+Armored
+Skorpo_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 INS+Motorized TLF+Motorized
+Kamdesh_RAAS_v1 PLA+Armored INS+Armored
+BlackCoast_RAAS_v1 BAF+Mechanized RGF+Mechanized
+Mestia_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Mutaha_AAS_v2 USA+Motorized MEA+Mechanized
 Kokan_AAS_v2 TLF+CombinedArms INS+CombinedArms
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Yehorivka_Invasion_v2 PLA+Support USA+Support
-Manicouagan_AAS_v3 VDV+AirAssault WPMC+AirAssault
-Chora_RAAS_v1 USA+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v2 PLA+Motorized RGF+Motorized
-Narva_AAS_v3 WPMC+CombinedArms IMF+CombinedArms
-Kamdesh_AAS_v1 WPMC+AirAssault USA+AirAssault
-Tallil_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Lashkar_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
-Anvil_RAAS_v2 USA+LightInfantry PLA+LightInfantry
-BlackCoast_RAAS_v2 ADF+AirAssault TLF+Motorized
+Kohat_RAAS_v1 TLF+CombinedArms RGF+CombinedArms
+Narva_AAS_v2 BAF+Armored RGF+Armored
+Sumari_Invasion_v1 PLA+CombinedArms USA+CombinedArms
+Fallujah_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 ADF+CombinedArms WPMC+LightInfantry
+Tallil_RAAS_v2 INS+LightInfantry MEA+LightInfantry
+Sanxian_RAAS_v2 PLANMC+Support USA+Support
+BlackCoast_RAAS_v2 TLF+Support USA+Support
+FoolsRoad_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
+GooseBay_AAS_v1 WPMC+AirAssault VDV+AirAssault
+Gorodok_TC_v1 BAF+AirAssault PLA+AirAssault
+AlBasrah_RAAS_v1 MEA+LightInfantry PLANMC+LightInfantry
+Kohat_AAS_v1 MEA+Support PLA+Motorized
+Belaya_AAS_v1 TLF+AirAssault CAF+AirAssault
+Mestia_Invasion_v1 TLF+CombinedArms USMC+CombinedArms
+Fallujah_RAAS_v1 USA+LightInfantry PLA+LightInfantry
+Yehorivka_RAAS_v2 TLF+CombinedArms IMF+CombinedArms
+Chora_TC_v1 INS+CombinedArms WPMC+CombinedArms
 Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Kokan_AAS_v1 MEA+CombinedArms TLF+CombinedArms
-Gorodok_Invasion_v1 IMF+Mechanized TLF+Mechanized
-Mutaha_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
-Sanxian_RAAS_v2 USA+Support WPMC+AirAssault
-Logar_RAAS_v1 TLF+CombinedArms INS+CombinedArms
-GooseBay_RAAS_v2 PLA+Mechanized BAF+Mechanized
-Fallujah_RAAS_v2 RGF+LightInfantry MEA+LightInfantry
-Chora_TC_v1 PLA+CombinedArms MEA+CombinedArms
-Anvil_RAAS_v1 MEA+Mechanized TLF+Mechanized
-Yehorivka_Invasion_v2 PLA+Support IMF+Support
-Tallil_AAS_v1 PLA+LightInfantry USA+Mechanized
-FoolsRoad_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v1 IMF+Armored USMC+Armored
-Narva_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Kokan_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v2 VDV+Mechanized TLF+Mechanized
-Belaya_Invasion_v1 TLF+Motorized PLA+Support
-Sumari_RAAS_v1 WPMC+CombinedArms MEA+CombinedArms
-GooseBay_AAS_v1 WPMC+AirAssault CAF+AirAssault
-AlBasrah_RAAS_v1 TLF+Armored CAF+Armored
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Tallil_TC_v1 CAF+Armored RGF+Armored
-Chora_AAS_v1 MEA+CombinedArms PLA+CombinedArms
-Gorodok_Invasion_v1 WPMC+LightInfantry ADF+CombinedArms
-Kohat_AAS_v1 INS+CombinedArms MEA+CombinedArms
-BlackCoast_RAAS_v1 ADF+CombinedArms PLAAGF+CombinedArms
-Lashkar_AAS_v1 INS+Support CAF+Support
-Kokan_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v1 TLF+AirAssault IMF+Motorized
-Anvil_TC_v1 MEA+Support VDV+Support
-Belaya_AAS_v2 IMF+CombinedArms BAF+CombinedArms
-Harju_AAS_v2 CAF+CombinedArms IMF+CombinedArms
-Tallil_Invasion_v1 MEA+Mechanized USA+Mechanized
-Kamdesh_RAAS_v1 ADF+Mechanized TLF+CombinedArms
-Chora_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
-Gorodok_RAAS_v1 TLF+CombinedArms IMF+CombinedArms
-Sanxian_RAAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Sumari_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
-Lashkar_Invasion_v1 USA+Motorized WPMC+LightInfantry
-Skorpo_RAAS_v1 IMF+LightInfantry RGF+LightInfantry
-Logar_AAS_v1 INS+CombinedArms PLA+CombinedArms
-Yehorivka_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
-Narva_TC_v1 USA+Motorized IMF+Motorized
-Manicouagan_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Belaya_Invasion_v1 IMF+CombinedArms ADF+CombinedArms
-Mutaha_AAS_v2 INS+Armored TLF+Armored
-FoolsRoad_RAAS_v1 IMF+CombinedArms PLA+CombinedArms
-Tallil_TC_v1 TLF+Motorized CAF+Motorized
-Kamdesh_RAAS_v1 USA+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 BAF+AirAssault VDV+Mechanized
-Mestia_Invasion_v1 IMF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v1 IMF+Support PLA+Support
-Lashkar_TC_v2 ADF+AirAssault WPMC+AirAssault
-Sumari_AAS_v1 TLF+CombinedArms MEA+CombinedArms
-Skorpo_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Kohat_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Kokan_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Fallujah_AAS_v1 BAF+Support WPMC+CombinedArms
-Mutaha_Skirmish_v1 VDV+CombinedArms CAF+CombinedArms
-Narva_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
-Yehorivka_RAAS_v1 IMF+Armored PLA+Armored
-Gorodok_Destruction_v1 WPMC+CombinedArms TLF+CombinedArms
-Kamdesh_AAS_v1 PLA+AirAssault TLF+AirAssault
-Logar_TC_v1 PLA+CombinedArms MEA+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms BAF+CombinedArms
-GooseBay_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Chora_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Anvil_Invasion_v1 MEA+Armored WPMC+CombinedArms
-Sanxian_RAAS_v2 USA+LightInfantry WPMC+LightInfantry
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Fallujah_RAAS_v2 MEA+LightInfantry WPMC+LightInfantry
-Yehorivka_TC_v2 TLF+Armored USMC+Armored
-Tallil_AAS_v1 USA+Support VDV+AirAssault
-Gorodok_Invasion_v2 RGF+Motorized USA+Motorized
-Logar_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
-BlackCoast_RAAS_v1 USMC+LightInfantry WPMC+LightInfantry
-Lashkar_TC_v1 TLF+AirAssault USA+AirAssault
-GooseBay_AAS_v1 BAF+CombinedArms WPMC+AirAssault
-Mestia_RAAS_v1 USMC+CombinedArms RGF+CombinedArms
-Kamdesh_AAS_v1 MEA+CombinedArms TLF+CombinedArms
-Manicouagan_Invasion_v2 PLA+Motorized USMC+Motorized
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms PLANMC+CombinedArms
-Yehorivka_Skirmish_v2 USA+CombinedArms VDV+CombinedArms
-Kohat_RAAS_v2 WPMC+AirAssault USA+Mechanized
-Fallujah_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Logar_AAS_v1 INS+CombinedArms USMC+CombinedArms
-Narva_Invasion_v1 IMF+Support RGF+Support
-Anvil_RAAS_v1 TLF+Armored INS+Armored
-Mutaha_AAS_v1 TLF+Support INS+Support
-Sumari_Skirmish_v1 USA+CombinedArms PLA+CombinedArms
-Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-GooseBay_AAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
-Manicouagan_Invasion_v1 PLANMC+LightInfantry WPMC+LightInfantry
+Kamdesh_RAAS_v1 RGF+Support TLF+Support
+Narva_Destruction_v1 IMF+Armored VDV+Armored
+Lashkar_AAS_v1 TLF+Mechanized INS+Mechanized
+Tallil_RAAS_v1 WPMC+LightInfantry TLF+Armored
+Mutaha_Skirmish_v1 ADF+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 INS+Mechanized CAF+Mechanized
+Sanxian_AAS_v2 WPMC+CombinedArms USA+CombinedArms
+FoolsRoad_Destruction_v1 CAF+CombinedArms RGF+CombinedArms
+Kohat_AAS_v1 ADF+CombinedArms PLA+LightInfantry
+Fallujah_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
+BlackCoast_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v1 CAF+AirAssault WPMC+AirAssault
+Gorodok_Invasion_v1 VDV+Support USA+Support
+Sumari_AAS_v3 PLA+CombinedArms INS+CombinedArms
+Kamdesh_AAS_v1 MEA+Support INS+Support
+Yehorivka_RAAS_v2 CAF+Support VDV+Armored
+Narva_AAS_v2 IMF+LightInfantry WPMC+LightInfantry
+Harju_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
+Lashkar_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
+Belaya_Invasion_v2 RGF+Motorized USA+Motorized
+Fallujah_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Anvil_AAS_v1 TLF+CombinedArms MEA+Armored
+Mutaha_AAS_v2 TLF+CombinedArms USMC+CombinedArms
+Tallil_AAS_v1 PLA+CombinedArms USMC+CombinedArms
+Kokan_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Manicouagan_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
+Sanxian_RAAS_v1 WPMC+CombinedArms PLANMC+Motorized
+Kohat_RAAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Mestia_TC_v1 TLF+CombinedArms IMF+CombinedArms
+GooseBay_AAS_v1 PLA+Support VDV+Support
+Harju_AAS_v1 IMF+Armored CAF+Armored
+Yehorivka_Destruction_v1 ADF+Mechanized WPMC+LightInfantry
+BlackCoast_RAAS_v2 TLF+Mechanized BAF+Mechanized
+FoolsRoad_Skirmish_v2 IMF+CombinedArms USA+CombinedArms
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v1 RGF+CombinedArms CAF+CombinedArms
+Tallil_AAS_v1 PLA+Motorized BAF+Support
+Kokan_Invasion_v1 PLA+CombinedArms USA+CombinedArms
+Sanxian_RAAS_v2 PLANMC+AirAssault USA+AirAssault
+Anvil_RAAS_v1 PLA+Support RGF+Support
+Mestia_Skirmish_v1 IMF+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v2 IMF+Armored TLF+Armored
+Lashkar_RAAS_v1 USMC+LightInfantry PLA+AirAssault
+Kohat_Invasion_v2 WPMC+LightInfantry RGF+LightInfantry
+Harju_AAS_v1 WPMC+AirAssault VDV+AirAssault
+BlackCoast_Skirmish_v1 IMF+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v2 MEA+Armored RGF+Armored
+GooseBay_RAAS_v2 PLANMC+CombinedArms VDV+CombinedArms
+Tallil_AAS_v1 USMC+Support VDV+Support
+Fallujah_Invasion_v1 CAF+Mechanized RGF+Mechanized
+Belaya_AAS_v2 PLA+CombinedArms USMC+LightInfantry
+Sumari_AAS_v1 PLA+CombinedArms RGF+CombinedArms
+Anvil_AAS_v1 WPMC+LightInfantry INS+LightInfantry
+Lashkar_TC_v2 MEA+Support USMC+Support
+Kokan_RAAS_v1 ADF+CombinedArms MEA+CombinedArms
+Yehorivka_Invasion_v2 TLF+Support IMF+Support
+Kamdesh_AAS_v1 TLF+AirAssault PLA+AirAssault
+AlBasrah_AAS_v1 VDV+Support TLF+AirAssault
+Mestia_AAS_v2 VDV+CombinedArms IMF+CombinedArms
+Manicouagan_RAAS_v1 USA+Armored VDV+Armored
+Narva_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Tallil_Invasion_v1 INS+Armored TLF+Armored
+Sumari_AAS_v2 USMC+CombinedArms INS+CombinedArms
+Anvil_TC_v1 MEA+Mechanized INS+Mechanized
+Skorpo_RAAS_v1 IMF+Mechanized VDV+Mechanized
+Sanxian_RAAS_v1 WPMC+LightInfantry USMC+Support
+Chora_AAS_v1 RGF+CombinedArms USMC+CombinedArms
+Kamdesh_Invasion_v1 MEA+LightInfantry PLA+LightInfantry
+Yehorivka_RAAS_v1 IMF+Support CAF+Support
+BlackCoast_RAAS_v1 PLAAGF+Armored USMC+Armored
+Mutaha_AAS_v2 RGF+Armored WPMC+LightInfantry
+Logar_AAS_v1 TLF+CombinedArms INS+CombinedArms
+Gorodok_RAAS_v1 USA+CombinedArms RGF+CombinedArms
+Tallil_Invasion_v1 VDV+Armored PLA+Armored
+Sumari_AAS_v3 INS+CombinedArms WPMC+CombinedArms
+Narva_TC_v1 WPMC+LightInfantry IMF+LightInfantry
+Lashkar_AAS_v2 USA+AirAssault WPMC+AirAssault
+AlBasrah_RAAS_v1 INS+Motorized PLAAGF+CombinedArms
+Belaya_AAS_v2 PLA+CombinedArms RGF+CombinedArms
+Yehorivka_Invasion_v2 VDV+Armored PLA+Armored
+Kokan_RAAS_v1 TLF+CombinedArms USA+CombinedArms
+Kamdesh_AAS_v1 USA+Armored TLF+Armored
+Skorpo_RAAS_v1 IMF+Support USMC+Support
 PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
-Chora_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Tallil_RAAS_v2 ADF+CombinedArms MEA+Support
-Sanxian_RAAS_v2 PLANMC+LightInfantry WPMC+LightInfantry
-AlBasrah_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
-Kokan_AAS_v1 PLA+CombinedArms BAF+CombinedArms
-Kohat_TC_v1 PLA+CombinedArms INS+CombinedArms
-Lashkar_AAS_v2 PLA+LightInfantry VDV+AirAssault
-Kamdesh_AAS_v1 TLF+Support USA+Support
-FoolsRoad_AAS_v1 IMF+CombinedArms USA+CombinedArms
-Narva_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
-Belaya_AAS_v2 IMF+Armored BAF+Armored
-Fallujah_TC_v1 MEA+LightInfantry PLA+LightInfantry
-Harju_AAS_v1 USA+AirAssault WPMC+AirAssault
-Mutaha_RAAS_v1 PLA+Support INS+Support
-Anvil_RAAS_v2 INS+CombinedArms MEA+CombinedArms
-Tallil_Invasion_v1 USA+CombinedArms PLA+CombinedArms
-Chora_AAS_v2 USA+CombinedArms VDV+CombinedArms
-Gorodok_TC_v1 IMF+CombinedArms PLA+CombinedArms
-AlBasrah_RAAS_v1 PLA+Support INS+Support
-Yehorivka_RAAS_v2 PLA+Armored USMC+Armored
-Kamdesh_AAS_v1 TLF+Support RGF+Support
-Narva_Destruction_v1 WPMC+AirAssault IMF+Motorized
-Kokan_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Lashkar_TC_v2 CAF+CombinedArms MEA+CombinedArms
-Mutaha_RAAS_v1 INS+Mechanized TLF+Mechanized
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Fallujah_RAAS_v1 USA+LightInfantry PLA+CombinedArms
-Belaya_Invasion_v1 RGF+CombinedArms USA+CombinedArms
-Manicouagan_RAAS_v2 PLANMC+LightInfantry WPMC+LightInfantry
-Anvil_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
-GooseBay_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Kamdesh_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Mestia_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
-Harju_Invasion_v3 WPMC+LightInfantry IMF+Mechanized
-BlackCoast_RAAS_v1 PLANMC+Motorized IMF+Motorized
-Chora_Skirmish_v1 VDV+CombinedArms BAF+CombinedArms
-Kohat_RAAS_v1 MEA+Armored INS+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Fallujah_RAAS_v1 USMC+Support WPMC+CombinedArms
-Tallil_Invasion_v1 RGF+Mechanized ADF+Mechanized
-Logar_AAS_v1 INS+CombinedArms ADF+CombinedArms
-Gorodok_TC_v1 PLA+CombinedArms WPMC+CombinedArms
-Kamdesh_RAAS_v1 MEA+Armored PLA+Armored
-Skorpo_RAAS_v1 WPMC+CombinedArms IMF+LightInfantry
-Mestia_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
-Lashkar_Invasion_v1 PLA+LightInfantry INS+LightInfantry
-Manicouagan_RAAS_v1 USA+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 MEA+Mechanized BAF+Mechanized
-Sanxian_RAAS_v1 WPMC+LightInfantry USA+Mechanized
-Narva_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
-Sumari_AAS_v3 INS+CombinedArms VDV+CombinedArms
-Fallujah_AAS_v1 PLA+CombinedArms BAF+CombinedArms
-BlackCoast_Invasion_v2 PLA+Motorized TLF+Motorized
-Kamdesh_RAAS_v1 USMC+Motorized TLF+AirAssault
-Chora_AAS_v1 TLF+CombinedArms USMC+CombinedArms
-Yehorivka_AAS_v1 TLF+Support IMF+Support
-Lashkar_TC_v1 TLF+AirAssault WPMC+AirAssault
-Kohat_RAAS_v2 PLA+Support TLF+Support
-Mutaha_Invasion_v1 TLF+CombinedArms RGF+CombinedArms
-Gorodok_RAAS_v2 TLF+AirAssault WPMC+AirAssault
-Tallil_RAAS_v1 VDV+Armored CAF+Mechanized
-Kokan_TC_v1 INS+CombinedArms RGF+CombinedArms
-Harju_RAAS_v1 USA+Support IMF+Support
-Manicouagan_RAAS_v1 PLA+LightInfantry WPMC+LightInfantry
-Fallujah_Insurgency_v1 ADF+CombinedArms INS+CombinedArms
-Chora_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-AlBasrah_RAAS_v1 PLAAGF+Mechanized USMC+Armored
+BlackCoast_RAAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Tallil_Invasion_v1 MEA+LightInfantry WPMC+LightInfantry
+Mestia_AAS_v1 VDV+CombinedArms TLF+CombinedArms
+Gorodok_AAS_v1 BAF+CombinedArms VDV+CombinedArms
+Anvil_TC_v1 BAF+Armored PLA+Armored
+AlBasrah_RAAS_v1 ADF+Mechanized MEA+Mechanized
+Belaya_RAAS_v1 PLA+LightInfantry IMF+LightInfantry
+Fallujah_Invasion_v2 INS+LightInfantry USA+CombinedArms
+Kokan_AAS_v2 WPMC+CombinedArms USMC+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Mutaha_TC_v1 PLA+Armored USMC+Armored
+Chora_RAAS_v1 INS+CombinedArms MEA+CombinedArms
