--- a/Tools/Rotation/LayerRotation/LayerRotation_22.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_22.cfg
@@ -1,200 +1,200 @@
-Sanxian_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Sumari_AAS_v1 MEA+CombinedArms INS+CombinedArms
-Yehorivka_Destruction_v1 IMF+CombinedArms USMC+CombinedArms
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-FoolsRoad_AAS_v2 TLF+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v1 MEA+AirAssault WPMC+AirAssault
-Kohat_TC_v1 USA+Support TLF+CombinedArms
-Kamdesh_AAS_v1 VDV+Armored PLA+Armored
-Tallil_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
-Mestia_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 ADF+AirAssault WPMC+AirAssault
-Fallujah_TC_v1 PLA+Armored VDV+Armored
-Manicouagan_AAS_v3 WPMC+CombinedArms USA+Armored
-BlackCoast_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Narva_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Mutaha_Invasion_v1 CAF+Mechanized TLF+Mechanized
-Yehorivka_AAS_v2 ADF+AirAssault TLF+AirAssault
-Chora_AAS_v3 VDV+CombinedArms USMC+CombinedArms
-Kamdesh_RAAS_v1 CAF+Mechanized INS+Mechanized
-Lashkar_AAS_v2 BAF+Armored PLA+AirAssault
-Sumari_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
-GooseBay_RAAS_v2 WPMC+CombinedArms PLANMC+CombinedArms
-Belaya_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Mestia_AAS_v1 VDV+CombinedArms ADF+CombinedArms
-Anvil_RAAS_v1 INS+LightInfantry PLA+LightInfantry
-Gorodok_TC_v1 PLA+Armored VDV+Armored
-Fallujah_AAS_v1 VDV+Support INS+Support
-Kohat_RAAS_v1 CAF+CombinedArms MEA+CombinedArms
-Yehorivka_Invasion_v2 WPMC+AirAssault IMF+Motorized
-Manicouagan_AAS_v2 USA+AirAssault VDV+AirAssault
-Kokan_AAS_v1 INS+CombinedArms TLF+CombinedArms
-AlBasrah_TC_v1 PLAAGF+CombinedArms RGF+CombinedArms
-Skorpo_RAAS_v1 IMF+Support VDV+Support
-Tallil_RAAS_v2 WPMC+CombinedArms PLA+Motorized
-Kamdesh_Invasion_v1 USMC+Motorized TLF+Motorized
-Sanxian_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Sumari_Skirmish_v1 USA+CombinedArms MEA+CombinedArms
-Lashkar_RAAS_v1 USA+Motorized PLA+Motorized
-Gorodok_RAAS_v2 TLF+Armored IMF+Armored
-BlackCoast_RAAS_v1 IMF+Support PLANMC+Support
-Harju_Invasion_v3 ADF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Mutaha_TC_v1 USMC+Support TLF+Mechanized
-Kohat_RAAS_v1 TLF+Mechanized VDV+Mechanized
-Anvil_AAS_v1 INS+CombinedArms MEA+CombinedArms
-Manicouagan_AAS_v3 USA+Mechanized PLAAGF+Mechanized
-Tallil_AAS_v1 VDV+Support PLA+Support
-Sanxian_Invasion_v1 USMC+AmphibiousAssault WPMC+LightInfantry
-Sumari_AAS_v2 VDV+CombinedArms MEA+CombinedArms
-Fallujah_RAAS_v2 TLF+CombinedArms VDV+CombinedArms
-GooseBay_AAS_v1 VDV+CombinedArms BAF+CombinedArms
-Kamdesh_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
-Yehorivka_RAAS_v1 PLA+Support IMF+Support
-Skorpo_Invasion_v1 VDV+Mechanized IMF+LightInfantry
-Kohat_AAS_v1 USMC+Armored MEA+Armored
-Belaya_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
-Gorodok_Skirmish_v1 VDV+CombinedArms IMF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Lashkar_AAS_v2 RGF+Motorized CAF+Motorized
-Sumari_Invasion_v1 USMC+CombinedArms RGF+CombinedArms
-Sanxian_RAAS_v1 USMC+CombinedArms PLAAGF+CombinedArms
-Anvil_TC_v1 PLA+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
-Yehorivka_AAS_v2 ADF+AirAssault TLF+Motorized
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Mestia_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
-Fallujah_RAAS_v2 PLA+CombinedArms BAF+CombinedArms
-Tallil_TC_v1 INS+LightInfantry WPMC+LightInfantry
-Mutaha_RAAS_v1 BAF+AirAssault PLA+AirAssault
-Lashkar_RAAS_v1 VDV+AirAssault PLA+AirAssault
-Kamdesh_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Gorodok_Invasion_v1 IMF+Motorized CAF+Motorized
-Chora_AAS_v3 MEA+CombinedArms INS+CombinedArms
-Kohat_AAS_v1 RGF+LightInfantry USMC+LightInfantry
-BlackCoast_RAAS_v2 IMF+CombinedArms CAF+CombinedArms
-Logar_TC_v1 CAF+CombinedArms VDV+CombinedArms
-AlBasrah_RAAS_v1 MEA+Mechanized TLF+AirAssault
-Narva_Invasion_v2 WPMC+CombinedArms IMF+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v2 INS+Support USMC+Support
-Anvil_Skirmish_v1 CAF+CombinedArms RGF+CombinedArms
-Kamdesh_AAS_v1 PLA+CombinedArms VDV+CombinedArms
-GooseBay_RAAS_v1 BAF+Support WPMC+AirAssault
-Kokan_Invasion_v1 WPMC+CombinedArms ADF+CombinedArms
-Gorodok_RAAS_v1 IMF+Support USA+Support
-Manicouagan_AAS_v2 VDV+AirAssault WPMC+AirAssault
+Yehorivka_AAS_v1 TLF+Support CAF+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Kamdesh_Invasion_v1 USMC+Motorized INS+Motorized
+GooseBay_AAS_v1 CAF+Support PLANMC+Support
+AlBasrah_TC_v1 INS+LightInfantry PLANMC+LightInfantry
+Narva_AAS_v1 VDV+Mechanized CAF+Mechanized
+Belaya_AAS_v2 BAF+Armored VDV+Mechanized
+Kohat_RAAS_v1 MEA+LightInfantry INS+LightInfantry
+Gorodok_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v1 MEA+Support PLA+Support
+Kokan_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
+Fallujah_TC_v1 MEA+Support INS+Support
+Lashkar_RAAS_v1 TLF+Motorized PLA+AirAssault
+Yehorivka_RAAS_v1 TLF+Motorized IMF+Motorized
+BlackCoast_Invasion_v2 IMF+CombinedArms WPMC+CombinedArms
+FoolsRoad_AAS_v2 TLF+CombinedArms IMF+CombinedArms
+Anvil_RAAS_v2 RGF+CombinedArms PLA+CombinedArms
+AlBasrah_TC_v1 WPMC+AirAssault MEA+AirAssault
+Sanxian_AAS_v1 WPMC+CombinedArms ADF+Mechanized
+Sumari_AAS_v1 INS+CombinedArms CAF+CombinedArms
+Kohat_Invasion_v1 WPMC+LightInfantry MEA+LightInfantry
+Harju_AAS_v1 CAF+Support VDV+Support
+Gorodok_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
+Tallil_RAAS_v2 RGF+CombinedArms BAF+CombinedArms
+Chora_Skirmish_v1 TLF+CombinedArms MEA+CombinedArms
+BlackCoast_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Skorpo_Invasion_v1 IMF+Support WPMC+CombinedArms
+Manicouagan_AAS_v1 USA+Mechanized PLAAGF+Mechanized
+AlBasrah_RAAS_v1 PLA+Support INS+Support
+Yehorivka_Skirmish_v2 BAF+CombinedArms PLA+CombinedArms
+Fallujah_AAS_v1 WPMC+LightInfantry USA+LightInfantry
+Anvil_RAAS_v2 INS+CombinedArms USMC+Support
+Narva_Destruction_v1 USA+CombinedArms WPMC+CombinedArms
+Sumari_AAS_v3 PLA+CombinedArms CAF+CombinedArms
+Sanxian_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
+Mutaha_RAAS_v1 PLA+LightInfantry USMC+LightInfantry
+FoolsRoad_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 RGF+Armored IMF+Armored
+Manicouagan_Invasion_v1 CAF+CombinedArms PLAAGF+CombinedArms
+Lashkar_AAS_v2 RGF+Armored MEA+Armored
+Kamdesh_AAS_v1 RGF+Support USA+Support
+Tallil_AAS_v1 BAF+Mechanized PLA+LightInfantry
+Mestia_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
+AlBasrah_RAAS_v1 PLAAGF+Mechanized TLF+Mechanized
+Kohat_Invasion_v1 CAF+Support PLA+Support
+Sumari_AAS_v2 TLF+CombinedArms INS+CombinedArms
+BlackCoast_RAAS_v2 IMF+Armored PLANMC+Armored
+Fallujah_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Anvil_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 USA+Armored IMF+Armored
+Lashkar_Insurgency_v1 TLF+Motorized INS+Mechanized
 Logar_RAAS_v1 TLF+CombinedArms INS+CombinedArms
-Sanxian_AAS_v1 ADF+Mechanized WPMC+AirAssault
-Narva_AAS_v1 USA+LightInfantry WPMC+LightInfantry
-Skorpo_Invasion_v1 IMF+LightInfantry WPMC+LightInfantry
-Fallujah_AAS_v1 ADF+Mechanized TLF+Mechanized
-Mestia_TC_v1 IMF+CombinedArms VDV+CombinedArms
-Lashkar_RAAS_v1 CAF+AirAssault VDV+CombinedArms
-PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v1 ADF+Mechanized TLF+Mechanized
-FoolsRoad_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 INS+LightInfantry WPMC+LightInfantry
-Tallil_RAAS_v2 TLF+Support USA+Support
-Anvil_TC_v1 CAF+Motorized RGF+CombinedArms
-BlackCoast_AAS_v1 WPMC+LightInfantry USA+LightInfantry
-Narva_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Gorodok_Destruction_v1 USA+Mechanized IMF+Mechanized
-GooseBay_AAS_v1 CAF+AirAssault WPMC+AirAssault
-Fallujah_RAAS_v2 RGF+Support PLA+CombinedArms
-Manicouagan_Skirmish_v2 USA+CombinedArms VDV+CombinedArms
-AlBasrah_RAAS_v1 TLF+CombinedArms INS+CombinedArms
-Lashkar_AAS_v1 INS+LightInfantry MEA+LightInfantry
-Chora_Invasion_v1 VDV+CombinedArms PLA+CombinedArms
-Yehorivka_AAS_v1 RGF+Motorized USMC+Armored
-Tallil_AAS_v1 VDV+Armored PLA+Armored
-Logar_Skirmish_v1 INS+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Gorodok_AAS_v1 TLF+CombinedArms PLA+CombinedArms
-FoolsRoad_Destruction_v1 PLA+CombinedArms BAF+CombinedArms
-Kohat_RAAS_v2 WPMC+LightInfantry RGF+CombinedArms
-Belaya_AAS_v1 VDV+Armored TLF+Armored
-Anvil_TC_v1 MEA+CombinedArms ADF+CombinedArms
-Kamdesh_AAS_v1 CAF+AirAssault MEA+AirAssault
-Narva_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Fallujah_Invasion_v1 PLA+Motorized USA+Motorized
-Mestia_RAAS_v1 USMC+CombinedArms TLF+CombinedArms
-Tallil_RAAS_v1 RGF+CombinedArms INS+Armored
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
-Chora_AAS_v2 ADF+CombinedArms TLF+CombinedArms
-Yehorivka_Invasion_v1 PLA+CombinedArms CAF+CombinedArms
-BlackCoast_AAS_v2 PLAAGF+Mechanized TLF+Motorized
-Anvil_AAS_v1 VDV+CombinedArms CAF+CombinedArms
-Kokan_AAS_v2 MEA+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 MEA+AirAssault TLF+AirAssault
-Kamdesh_AAS_v1 MEA+Support PLA+Support
-Fallujah_Invasion_v2 MEA+LightInfantry VDV+Armored
-Narva_RAAS_v1 IMF+Mechanized BAF+Mechanized
-Logar_AAS_v1 MEA+CombinedArms RGF+CombinedArms
-Gorodok_TC_v1 PLA+Armored USMC+Armored
-Sanxian_RAAS_v2 WPMC+CombinedArms USMC+CombinedArms
-Mutaha_AAS_v2 TLF+AirAssault WPMC+AirAssault
-BlackCoast_AAS_v2 RGF+LightInfantry USMC+LightInfantry
-FoolsRoad_Destruction_v1 IMF+CombinedArms USA+CombinedArms
-Yehorivka_AAS_v2 RGF+CombinedArms PLA+Motorized
-GooseBay_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 TLF+CombinedArms USA+CombinedArms
-AlBasrah_TC_v1 INS+Armored MEA+Armored
-Belaya_AAS_v2 WPMC+AirAssault ADF+AirAssault
-Lashkar_Invasion_v1 PLA+Support TLF+Support
-Tallil_AAS_v1 RGF+Armored PLA+Armored
-Manicouagan_AAS_v1 WPMC+AirAssault PLA+AirAssault
-Sanxian_AAS_v2 CAF+AirAssault WPMC+LightInfantry
-Anvil_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-Mutaha_RAAS_v2 WPMC+LightInfantry USMC+LightInfantry
-Fallujah_Invasion_v1 VDV+Support USMC+Support
-FoolsRoad_RAAS_v1 TLF+CombinedArms RGF+CombinedArms
-Gorodok_AAS_v1 WPMC+AirAssault PLA+CombinedArms
-Skorpo_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
-AlBasrah_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v2 RGF+CombinedArms PLA+CombinedArms
-Logar_Insurgency_v1 VDV+CombinedArms INS+CombinedArms
-Lashkar_RAAS_v1 TLF+CombinedArms MEA+AirAssault
-Tallil_RAAS_v2 INS+Armored BAF+Armored
-Manicouagan_Skirmish_v2 BAF+CombinedArms WPMC+CombinedArms
-Anvil_AAS_v1 BAF+AirAssault PLA+AirAssault
-Belaya_AAS_v2 PLA+Support IMF+Support
-Harju_Invasion_v3 IMF+Armored RGF+Motorized
-Mestia_AAS_v2 PLA+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v2 PLA+AirAssault MEA+AirAssault
-Fallujah_RAAS_v2 CAF+Armored RGF+Armored
-Sanxian_AAS_v2 USMC+CombinedArms WPMC+CombinedArms
-GooseBay_RAAS_v2 CAF+Motorized WPMC+LightInfantry
-FoolsRoad_Destruction_v1 WPMC+CombinedArms PLA+CombinedArms
+GooseBay_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
+Yehorivka_AAS_v1 USMC+CombinedArms VDV+CombinedArms
+Tallil_TC_v1 VDV+AirAssault TLF+AirAssault
+Belaya_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Kamdesh_Invasion_v1 USMC+Support PLA+Support
+Chora_RAAS_v1 VDV+CombinedArms TLF+CombinedArms
+AlBasrah_AAS_v1 TLF+AirAssault VDV+AirAssault
+Gorodok_TC_v1 TLF+Support WPMC+AirAssault
+Mutaha_RAAS_v2 PLA+Support TLF+Support
+Kokan_AAS_v2 PLA+CombinedArms VDV+CombinedArms
+Fallujah_Invasion_v1 TLF+Motorized USA+Motorized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Manicouagan_AAS_v2 PLA+CombinedArms USMC+CombinedArms
+Harju_Skirmish_v1 ADF+CombinedArms IMF+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+Mechanized
+GooseBay_AAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
+Sanxian_Invasion_v2 PLANMC+Support USMC+Support
+AlBasrah_AAS_v1 WPMC+AirAssault CAF+AirAssault
+Anvil_RAAS_v1 PLA+AirAssault ADF+AirAssault
+Gorodok_TC_v1 USMC+LightInfantry PLA+AirAssault
+Mestia_AAS_v2 PLA+CombinedArms ADF+CombinedArms
+Belaya_AAS_v1 TLF+CombinedArms IMF+CombinedArms
+Mutaha_Invasion_v1 MEA+LightInfantry PLA+LightInfantry
+FoolsRoad_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Kamdesh_RAAS_v1 USMC+LightInfantry INS+LightInfantry
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Sumari_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
+Fallujah_RAAS_v1 TLF+CombinedArms PLA+Motorized
+Manicouagan_AAS_v2 PLANMC+Armored VDV+Armored
+AlBasrah_Invasion_v1 TLF+Support INS+Support
+Harju_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
+Tallil_TC_v1 INS+CombinedArms ADF+CombinedArms
+Gorodok_AAS_v1 USA+CombinedArms PLA+LightInfantry
+BlackCoast_AAS_v2 BAF+Mechanized TLF+Mechanized
+FoolsRoad_AAS_v1 PLA+CombinedArms IMF+CombinedArms
+Kamdesh_Insurgency_v1 PLA+CombinedArms INS+CombinedArms
+Yehorivka_RAAS_v2 IMF+Armored TLF+Armored
+Mutaha_AAS_v2 TLF+Motorized CAF+Motorized
+Kohat_RAAS_v2 TLF+AirAssault WPMC+AirAssault
+Chora_TC_v1 USMC+CombinedArms VDV+CombinedArms
+Anvil_AAS_v1 WPMC+CombinedArms PLA+LightInfantry
+Narva_Invasion_v1 IMF+CombinedArms ADF+CombinedArms
+Fallujah_RAAS_v1 MEA+Armored PLA+Armored
+Gorodok_RAAS_v2 IMF+LightInfantry WPMC+LightInfantry
+Kokan_AAS_v1 WPMC+CombinedArms VDV+CombinedArms
+Belaya_TC_v1 TLF+Armored BAF+Armored
+Lashkar_AAS_v2 INS+CombinedArms WPMC+AirAssault
+FoolsRoad_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 PLAAGF+CombinedArms CAF+CombinedArms
+Kamdesh_AAS_v1 PLA+Armored USA+Armored
+Logar_TC_v1 PLA+CombinedArms USA+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+Support
+BlackCoast_AAS_v2 IMF+Motorized USA+Motorized
+Fallujah_Invasion_v1 INS+Armored MEA+Armored
 PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Kamdesh_RAAS_v1 INS+LightInfantry WPMC+LightInfantry
-Anvil_TC_v1 WPMC+AirAssault PLA+AirAssault
-AlBasrah_AAS_v1 BAF+Armored RGF+Armored
-Tallil_RAAS_v2 ADF+AirAssault INS+CombinedArms
-Gorodok_AAS_v1 CAF+Mechanized IMF+Mechanized
-Kohat_AAS_v1 CAF+CombinedArms RGF+CombinedArms
-Yehorivka_Invasion_v2 WPMC+CombinedArms BAF+CombinedArms
-Sumari_AAS_v1 VDV+CombinedArms PLA+CombinedArms
+Mestia_AAS_v1 IMF+CombinedArms RGF+CombinedArms
+GooseBay_AAS_v1 RGF+Support PLA+Support
+Mutaha_RAAS_v2 MEA+Armored TLF+AirAssault
+Kokan_TC_v1 WPMC+CombinedArms INS+CombinedArms
+Anvil_RAAS_v2 WPMC+CombinedArms INS+CombinedArms
+AlBasrah_Invasion_v2 WPMC+CombinedArms BAF+CombinedArms
+Lashkar_AAS_v2 ADF+AirAssault PLA+AirAssault
+Sumari_AAS_v1 USMC+CombinedArms MEA+CombinedArms
+Kohat_AAS_v1 PLA+Armored RGF+Armored
+BlackCoast_RAAS_v2 WPMC+AirAssault PLA+CombinedArms
+FoolsRoad_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Fallujah_Invasion_v1 WPMC+CombinedArms CAF+CombinedArms
+Yehorivka_RAAS_v1 PLA+Motorized TLF+Motorized
+Skorpo_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
+Manicouagan_AAS_v1 PLA+LightInfantry WPMC+LightInfantry
+Anvil_AAS_v1 WPMC+CombinedArms INS+CombinedArms
+Sanxian_AAS_v2 PLAAGF+Mechanized WPMC+AirAssault
+Kokan_Invasion_v1 USMC+CombinedArms MEA+CombinedArms
+Mutaha_RAAS_v2 PLA+CombinedArms CAF+CombinedArms
+Belaya_AAS_v1 TLF+Armored USA+Armored
+Kohat_RAAS_v2 TLF+Armored CAF+Armored
+Mestia_TC_v1 USA+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
+Tallil_Invasion_v1 MEA+LightInfantry PLA+LightInfantry
+Kamdesh_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Narva_AAS_v1 USA+Support VDV+AirAssault
+Chora_Skirmish_v1 WPMC+CombinedArms CAF+CombinedArms
+Lashkar_RAAS_v1 MEA+Support PLA+Support
+BlackCoast_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Manicouagan_Invasion_v1 WPMC+LightInfantry USA+LightInfantry
+Sanxian_AAS_v2 WPMC+AirAssault BAF+AirAssault
+Gorodok_AAS_v1 PLA+AirAssault TLF+AirAssault
+Mutaha_RAAS_v1 INS+Mechanized TLF+Mechanized
+Anvil_TC_v1 WPMC+LightInfantry USMC+CombinedArms
+Logar_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
+Kamdesh_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 MEA+CombinedArms USMC+CombinedArms
+GooseBay_AAS_v1 CAF+AirAssault WPMC+AirAssault
+Kokan_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
+Fallujah_TC_v1 INS+Armored ADF+CombinedArms
+Skorpo_RAAS_v1 WPMC+AirAssault VDV+AirAssault
+Belaya_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v2 INS+CombinedArms WPMC+CombinedArms
+Mestia_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Sanxian_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Lashkar_TC_v1 WPMC+CombinedArms TLF+Armored
+Sumari_AAS_v3 VDV+CombinedArms TLF+CombinedArms
+Gorodok_Destruction_v1 USMC+CombinedArms TLF+CombinedArms
+Anvil_AAS_v1 VDV+CombinedArms USA+CombinedArms
+Kamdesh_RAAS_v1 PLA+Support INS+Support
+Fallujah_Skirmish_v2 MEA+CombinedArms RGF+CombinedArms
+AlBasrah_AAS_v1 MEA+Armored RGF+Armored
+Tallil_RAAS_v1 MEA+Support TLF+Motorized
+Mutaha_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v2 PLANMC+CombinedArms WPMC+CombinedArms
+Kokan_Skirmish_v1 CAF+CombinedArms VDV+CombinedArms
+Kohat_RAAS_v1 INS+CombinedArms ADF+CombinedArms
+Lashkar_AAS_v1 TLF+Armored MEA+Mechanized
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Anvil_Invasion_v1 WPMC+CombinedArms CAF+CombinedArms
+FoolsRoad_RAAS_v1 VDV+CombinedArms USMC+CombinedArms
+Fallujah_AAS_v1 MEA+Armored TLF+Armored
+AlBasrah_TC_v1 PLANMC+CombinedArms VDV+Mechanized
+Kamdesh_AAS_v1 MEA+AirAssault PLA+AirAssault
+Tallil_RAAS_v1 PLA+Armored BAF+Armored
+Belaya_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
+Kokan_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v2 PLANMC+Motorized CAF+Motorized
+Mutaha_TC_v1 MEA+CombinedArms INS+Motorized
+Sumari_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
 Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Mutaha_TC_v1 TLF+Support USA+Support
-FoolsRoad_AAS_v2 TLF+CombinedArms BAF+CombinedArms
-Lashkar_RAAS_v1 PLA+Motorized USMC+Support
-BlackCoast_Invasion_v2 PLA+CombinedArms IMF+CombinedArms
-Anvil_AAS_v1 USA+LightInfantry RGF+LightInfantry
-Fallujah_TC_v1 PLA+Support VDV+Support
-Mestia_AAS_v1 RGF+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v2 USMC+Armored TLF+Armored
-Yehorivka_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Sumari_Invasion_v1 ADF+CombinedArms TLF+CombinedArms
-AlBasrah_RAAS_v1 USMC+Armored TLF+AirAssault
-Narva_TC_v1 BAF+Mechanized IMF+Mechanized
-Mutaha_AAS_v1 ADF+Mechanized VDV+Mechanized
-Manicouagan_AAS_v2 WPMC+AirAssault PLA+AirAssault
-GooseBay_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-FoolsRoad_Invasion_v1 IMF+CombinedArms TLF+CombinedArms
-Kohat_RAAS_v2 PLA+LightInfantry USA+LightInfantry
-Tallil_RAAS_v2 USA+AirAssault PLA+AirAssault
-Lashkar_RAAS_v1 PLA+LightInfantry RGF+LightInfantry
-Kamdesh_AAS_v1 PLA+CombinedArms RGF+Armored
-Yehorivka_TC_v2 TLF+Armored CAF+Armored
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLANMC+CombinedArms
+Kohat_Invasion_v1 PLA+Motorized CAF+Motorized
+Logar_RAAS_v1 USMC+CombinedArms INS+CombinedArms
+Lashkar_AAS_v2 TLF+AirAssault WPMC+AirAssault
+Fallujah_AAS_v1 MEA+LightInfantry USMC+LightInfantry
+AlBasrah_AAS_v1 PLANMC+Support TLF+Armored
+Gorodok_RAAS_v2 IMF+CombinedArms PLA+CombinedArms
+Tallil_Skirmish_v2 PLA+CombinedArms CAF+CombinedArms
+Belaya_AAS_v2 TLF+Support VDV+Support
+Sanxian_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 RGF+LightInfantry IMF+Motorized
+Kamdesh_AAS_v1 MEA+CombinedArms USA+CombinedArms
+Mutaha_RAAS_v2 VDV+Support CAF+Support
+Logar_RAAS_v1 USA+CombinedArms PLA+CombinedArms
+Manicouagan_RAAS_v2 WPMC+CombinedArms VDV+CombinedArms
+Kohat_Insurgency_v1 MEA+LightInfantry INS+LightInfantry
+GooseBay_AAS_v1 PLA+LightInfantry VDV+Mechanized
+Skorpo_RAAS_v1 WPMC+AirAssault USA+AirAssault
+Sumari_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
+Anvil_RAAS_v2 RGF+CombinedArms PLA+CombinedArms
+Lashkar_RAAS_v1 MEA+Support PLA+Support
+Fallujah_Invasion_v1 VDV+Support WPMC+LightInfantry
