--- a/Tools/Rotation/LayerRotation/LayerRotation_23.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_23.cfg
@@ -1,200 +1,200 @@
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Belaya_Invasion_v2 IMF+Armored CAF+Armored
-Harju_AAS_v2 ADF+CombinedArms IMF+CombinedArms
-Mutaha_AAS_v2 WPMC+AirAssault MEA+CombinedArms
-Gorodok_TC_v1 BAF+Mechanized IMF+Mechanized
-AlBasrah_RAAS_v1 INS+LightInfantry PLANMC+LightInfantry
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Logar_Insurgency_v1 MEA+CombinedArms INS+CombinedArms
-Kohat_RAAS_v1 ADF+CombinedArms TLF+CombinedArms
-BlackCoast_RAAS_v2 CAF+Armored WPMC+CombinedArms
-Lashkar_Skirmish_v1 MEA+CombinedArms VDV+CombinedArms
-Tallil_AAS_v1 USMC+Armored TLF+Armored
-Anvil_AAS_v1 TLF+Motorized PLA+Motorized
-Chora_Invasion_v1 CAF+CombinedArms VDV+CombinedArms
-Harju_RAAS_v1 USA+Mechanized VDV+Mechanized
-Kamdesh_AAS_v1 WPMC+LightInfantry USA+LightInfantry
-Fallujah_TC_v1 TLF+Support USA+Support
-Mutaha_RAAS_v1 INS+Motorized CAF+Motorized
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Destruction_v1 PLA+CombinedArms CAF+CombinedArms
-Gorodok_RAAS_v2 BAF+Support IMF+LightInfantry
-Manicouagan_RAAS_v2 RGF+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v1 MEA+Support PLA+Support
-Sumari_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
-Lashkar_AAS_v2 USA+AirAssault PLA+AirAssault
-Yehorivka_Invasion_v2 WPMC+CombinedArms PLA+CombinedArms
-Sanxian_AAS_v1 BAF+Support WPMC+CombinedArms
-BlackCoast_RAAS_v2 USA+Armored PLAAGF+Armored
-Mutaha_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
-Kamdesh_AAS_v1 MEA+AirAssault WPMC+AirAssault
-GooseBay_AAS_v1 PLAAGF+CombinedArms RGF+CombinedArms
-Belaya_Invasion_v1 IMF+Motorized TLF+Motorized
-Fallujah_RAAS_v1 MEA+CombinedArms USMC+Support
-FoolsRoad_Skirmish_v2 PLA+CombinedArms BAF+CombinedArms
-Manicouagan_AAS_v3 BAF+Support PLANMC+Support
-Anvil_AAS_v1 TLF+Mechanized INS+Mechanized
-Logar_AAS_v1 PLA+CombinedArms MEA+CombinedArms
-Tallil_Invasion_v1 RGF+Armored WPMC+LightInfantry
-Skorpo_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Sumari_AAS_v3 CAF+CombinedArms RGF+CombinedArms
-Lashkar_TC_v2 PLA+Support BAF+Support
-BlackCoast_RAAS_v1 ADF+CombinedArms PLAAGF+CombinedArms
-Mutaha_RAAS_v2 PLA+Armored TLF+Armored
-Gorodok_Invasion_v1 PLA+Motorized TLF+Motorized
-Yehorivka_AAS_v1 WPMC+AirAssault TLF+AirAssault
-AlBasrah_TC_v1 WPMC+LightInfantry INS+LightInfantry
-Anvil_RAAS_v1 CAF+CombinedArms TLF+CombinedArms
-Logar_RAAS_v1 PLA+CombinedArms VDV+CombinedArms
-GooseBay_AAS_v1 WPMC+LightInfantry VDV+Mechanized
-Belaya_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
-Manicouagan_AAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
-Mestia_TC_v1 PLA+CombinedArms VDV+CombinedArms
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms PLA+CombinedArms
-Sanxian_AAS_v1 PLAAGF+Mechanized BAF+Mechanized
-Tallil_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
-Yehorivka_Invasion_v2 USA+Armored TLF+Armored
-Skorpo_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Anvil_Skirmish_v1 VDV+CombinedArms TLF+CombinedArms
-Fallujah_RAAS_v2 ADF+Mechanized PLA+CombinedArms
-Kohat_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
-Lashkar_RAAS_v1 PLA+Armored BAF+Armored
-Gorodok_Destruction_v1 PLA+Armored VDV+Armored
-AlBasrah_RAAS_v1 USA+Mechanized INS+Mechanized
-Mutaha_AAS_v1 VDV+Support PLA+Support
-Belaya_TC_v1 PLA+AirAssault ADF+AirAssault
-Sumari_AAS_v1 VDV+CombinedArms USA+CombinedArms
-Kamdesh_RAAS_v1 MEA+Armored TLF+Armored
-BlackCoast_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Kokan_Invasion_v1 PLA+CombinedArms MEA+CombinedArms
-Anvil_AAS_v1 TLF+Motorized USA+Support
-Kohat_AAS_v1 MEA+AirAssault CAF+AirAssault
-Chora_Skirmish_v1 PLA+CombinedArms USA+CombinedArms
-Sanxian_AAS_v2 ADF+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v2 TLF+Support BAF+Support
-Skorpo_Invasion_v1 IMF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 TLF+CombinedArms MEA+CombinedArms
-Manicouagan_AAS_v2 USA+AirAssault PLANMC+AirAssault
-AlBasrah_TC_v1 VDV+Armored BAF+Support
-FoolsRoad_AAS_v2 TLF+CombinedArms PLA+CombinedArms
-Fallujah_AAS_v1 BAF+Mechanized VDV+Mechanized
-Anvil_Invasion_v1 INS+Mechanized ADF+Mechanized
-Logar_AAS_v1 INS+CombinedArms WPMC+CombinedArms
-Gorodok_AAS_v1 USMC+Support PLA+Motorized
-Tallil_TC_v1 TLF+AirAssault WPMC+AirAssault
-Kokan_AAS_v1 PLA+CombinedArms MEA+CombinedArms
-Sanxian_AAS_v1 PLAAGF+Mechanized ADF+Mechanized
-Kamdesh_Invasion_v1 USA+CombinedArms RGF+CombinedArms
-Belaya_AAS_v1 USA+Motorized WPMC+AirAssault
-GooseBay_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v1 USA+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v1 INS+Support PLA+Support
-Mestia_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Fallujah_Invasion_v1 MEA+Armored PLA+Armored
-BlackCoast_AAS_v2 ADF+Mechanized PLA+Mechanized
-Harju_Skirmish_v1 RGF+CombinedArms CAF+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms ADF+CombinedArms
-AlBasrah_RAAS_v1 ADF+CombinedArms PLANMC+CombinedArms
-Manicouagan_AAS_v1 WPMC+AirAssault VDV+AirAssault
-FoolsRoad_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
-GooseBay_AAS_v1 WPMC+LightInfantry USA+LightInfantry
-Mutaha_AAS_v2 MEA+Armored USMC+Motorized
-Anvil_RAAS_v1 TLF+AirAssault PLA+AirAssault
-Kokan_TC_v1 TLF+CombinedArms RGF+CombinedArms
-Kohat_RAAS_v2 USMC+CombinedArms RGF+CombinedArms
-Sanxian_Invasion_v2 WPMC+CombinedArms ADF+CombinedArms
-Lashkar_RAAS_v1 USA+Armored PLA+LightInfantry
-Gorodok_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
-Harju_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
-Tallil_AAS_v1 USA+LightInfantry WPMC+LightInfantry
-Fallujah_AAS_v1 BAF+Armored RGF+Armored
-Sumari_AAS_v1 VDV+CombinedArms PLA+CombinedArms
-Mutaha_Invasion_v1 BAF+CombinedArms RGF+CombinedArms
-Anvil_RAAS_v1 RGF+Mechanized CAF+Support
-FoolsRoad_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v2 TLF+Support MEA+Support
-Skorpo_RAAS_v1 BAF+AirAssault WPMC+AirAssault
-GooseBay_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
-AlBasrah_AAS_v1 MEA+CombinedArms TLF+Mechanized
-Lashkar_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 WPMC+LightInfantry INS+LightInfantry
-Harju_AAS_v2 CAF+CombinedArms IMF+CombinedArms
-Tallil_RAAS_v2 WPMC+AirAssault BAF+AirAssault
+Mestia_AAS_v2 IMF+CombinedArms CAF+CombinedArms
+Mutaha_TC_v1 INS+LightInfantry WPMC+LightInfantry
+Sanxian_RAAS_v2 WPMC+CombinedArms PLAAGF+CombinedArms
+Kokan_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
+Kohat_RAAS_v2 WPMC+CombinedArms MEA+Mechanized
+BlackCoast_Invasion_v2 CAF+Armored TLF+Armored
+Yehorivka_AAS_v2 RGF+CombinedArms PLA+CombinedArms
+Tallil_TC_v1 TLF+Armored PLA+Armored
+Logar_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+AlBasrah_RAAS_v1 INS+Motorized PLA+CombinedArms
+FoolsRoad_Destruction_v1 BAF+CombinedArms IMF+CombinedArms
+Manicouagan_RAAS_v1 USA+Support VDV+Support
+Gorodok_RAAS_v2 IMF+Armored RGF+Armored
+Kokan_TC_v1 INS+CombinedArms USMC+CombinedArms
+Skorpo_RAAS_v1 BAF+CombinedArms IMF+CombinedArms
+Anvil_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Kohat_Insurgency_v1 PLA+CombinedArms INS+Support
+Kamdesh_RAAS_v1 RGF+Mechanized INS+Mechanized
+BlackCoast_Skirmish_v1 WPMC+CombinedArms ADF+CombinedArms
+Mutaha_RAAS_v1 USA+LightInfantry WPMC+LightInfantry
+Narva_AAS_v3 IMF+Armored BAF+Armored
+Logar_AAS_v1 ADF+CombinedArms TLF+CombinedArms
+AlBasrah_Invasion_v1 PLA+Support CAF+Support
+Tallil_RAAS_v2 TLF+CombinedArms USMC+CombinedArms
+Mestia_Skirmish_v1 BAF+CombinedArms TLF+CombinedArms
+Gorodok_AAS_v1 PLA+Motorized ADF+AirAssault
+Harju_RAAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Manicouagan_AAS_v3 WPMC+CombinedArms BAF+CombinedArms
+Kokan_Invasion_v1 WPMC+CombinedArms MEA+CombinedArms
+BlackCoast_RAAS_v1 PLA+AirAssault WPMC+AirAssault
+Kohat_RAAS_v2 INS+Armored PLA+Armored
+Lashkar_RAAS_v1 BAF+Support PLA+Support
+Logar_RAAS_v1 RGF+CombinedArms INS+CombinedArms
+AlBasrah_AAS_v1 INS+LightInfantry MEA+LightInfantry
+Belaya_Invasion_v1 PLA+Armored BAF+Support
 PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Yehorivka_TC_v1 VDV+Armored PLA+Support
-Mutaha_AAS_v2 PLA+CombinedArms ADF+CombinedArms
-Belaya_Invasion_v1 IMF+Motorized TLF+Motorized
-Manicouagan_RAAS_v2 USMC+CombinedArms PLAAGF+CombinedArms
-Logar_RAAS_v1 RGF+CombinedArms TLF+CombinedArms
-Sanxian_RAAS_v1 WPMC+AirAssault CAF+Motorized
-AlBasrah_RAAS_v1 INS+Support PLANMC+Support
-Lashkar_Skirmish_v1 BAF+CombinedArms TLF+CombinedArms
-Anvil_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
-Narva_Destruction_v1 IMF+Mechanized ADF+Mechanized
-Kohat_AAS_v1 INS+LightInfantry MEA+AirAssault
-GooseBay_AAS_v1 WPMC+AirAssault CAF+AirAssault
-Chora_Skirmish_v1 VDV+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v3 WPMC+CombinedArms TLF+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Gorodok_Invasion_v1 PLA+AirAssault IMF+Motorized
+Chora_TC_v1 RGF+CombinedArms USA+CombinedArms
+GooseBay_AAS_v1 VDV+AirAssault WPMC+AirAssault
+Narva_AAS_v3 BAF+AirAssault VDV+AirAssault
+Manicouagan_AAS_v2 WPMC+CombinedArms USMC+LightInfantry
+FoolsRoad_Invasion_v1 PLA+CombinedArms TLF+CombinedArms
+Sanxian_AAS_v3 USA+CombinedArms WPMC+CombinedArms
+Gorodok_AAS_v1 TLF+Armored USMC+Armored
+Mutaha_TC_v1 TLF+CombinedArms BAF+CombinedArms
+Kohat_AAS_v1 INS+Support TLF+Armored
+Kokan_AAS_v1 VDV+CombinedArms BAF+CombinedArms
+Belaya_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 TLF+Support BAF+Support
+Logar_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
+Narva_RAAS_v1 CAF+Mechanized WPMC+CombinedArms
+Yehorivka_RAAS_v1 IMF+CombinedArms TLF+CombinedArms
+Sumari_AAS_v2 PLA+CombinedArms MEA+CombinedArms
+Anvil_Invasion_v1 VDV+Mechanized TLF+Mechanized
+AlBasrah_AAS_v1 PLANMC+Motorized USA+Motorized
+Mutaha_RAAS_v2 BAF+AirAssault PLA+AirAssault
+Tallil_Skirmish_v2 PLA+CombinedArms MEA+CombinedArms
+Manicouagan_AAS_v3 USMC+LightInfantry WPMC+LightInfantry
+Skorpo_RAAS_v1 RGF+LightInfantry IMF+Mechanized
+FoolsRoad_Invasion_v1 PLA+CombinedArms RGF+CombinedArms
+BlackCoast_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v1 MEA+Mechanized RGF+Mechanized
+Mestia_RAAS_v1 VDV+CombinedArms TLF+CombinedArms
+GooseBay_AAS_v1 WPMC+AirAssault VDV+AirAssault
+Fallujah_TC_v1 USMC+Armored PLA+Armored
+AlBasrah_AAS_v1 TLF+Armored PLA+Motorized
+Kokan_Invasion_v1 BAF+CombinedArms RGF+CombinedArms
+Tallil_RAAS_v2 WPMC+AirAssault CAF+AirAssault
+Yehorivka_RAAS_v1 CAF+AirAssault TLF+AirAssault
+Logar_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
+Kamdesh_AAS_v1 INS+Support BAF+CombinedArms
+Gorodok_AAS_v1 RGF+Support PLA+Support
+Chora_AAS_v2 INS+CombinedArms RGF+CombinedArms
+Anvil_Invasion_v1 WPMC+LightInfantry MEA+LightInfantry
+Sanxian_RAAS_v1 BAF+AirAssault WPMC+AirAssault
+Belaya_AAS_v3 RGF+Mechanized WPMC+LightInfantry
+Mestia_TC_v1 ADF+CombinedArms PLA+CombinedArms
+Lashkar_AAS_v1 TLF+Motorized RGF+Motorized
+Mutaha_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Yehorivka_Destruction_v1 IMF+Mechanized TLF+Mechanized
+AlBasrah_AAS_v1 PLAAGF+Armored MEA+Mechanized
+Kohat_AAS_v1 PLA+Armored USMC+Armored
+Sumari_TC_v1 WPMC+CombinedArms MEA+CombinedArms
+Tallil_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Anvil_RAAS_v2 WPMC+AirAssault ADF+AirAssault
+Manicouagan_Invasion_v2 PLANMC+Armored RGF+Armored
+Belaya_RAAS_v1 CAF+CombinedArms PLA+Armored
+Mestia_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms PLANMC+CombinedArms
+Skorpo_RAAS_v1 IMF+Mechanized BAF+Mechanized
+Logar_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Gorodok_Invasion_v1 IMF+LightInfantry USMC+LightInfantry
+Fallujah_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kohat_TC_v1 WPMC+LightInfantry VDV+Support
+Mutaha_AAS_v2 ADF+Mechanized INS+Mechanized
+Lashkar_RAAS_v1 PLA+Armored INS+Armored
+Kamdesh_AAS_v1 WPMC+AirAssault TLF+AirAssault
+Anvil_Invasion_v1 VDV+Mechanized BAF+Mechanized
+Yehorivka_RAAS_v1 RGF+Mechanized ADF+Mechanized
+Kokan_AAS_v2 INS+CombinedArms ADF+CombinedArms
+GooseBay_AAS_v1 RGF+CombinedArms PLANMC+CombinedArms
+BlackCoast_AAS_v2 WPMC+CombinedArms TLF+Support
+Harju_Skirmish_v1 CAF+CombinedArms RGF+CombinedArms
+Belaya_AAS_v1 PLA+Armored BAF+Armored
+Manicouagan_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Chora_Insurgency_v1 MEA+CombinedArms INS+CombinedArms
+Gorodok_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Narva_RAAS_v1 ADF+CombinedArms VDV+CombinedArms
+FoolsRoad_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v2 PLA+Armored VDV+CombinedArms
+Lashkar_RAAS_v1 TLF+Armored INS+Armored
+Tallil_Invasion_v1 PLA+CombinedArms MEA+CombinedArms
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Yehorivka_TC_v1 PLA+CombinedArms TLF+CombinedArms
+GooseBay_RAAS_v2 WPMC+CombinedArms PLANMC+CombinedArms
+Harju_RAAS_v1 WPMC+CombinedArms IMF+Armored
+Kamdesh_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Chora_Invasion_v1 INS+CombinedArms RGF+CombinedArms
+BlackCoast_RAAS_v2 USMC+Support RGF+Support
+Narva_AAS_v2 RGF+Mechanized IMF+Mechanized
+AlBasrah_RAAS_v1 USMC+Support TLF+Support
+Fallujah_TC_v1 WPMC+LightInfantry TLF+Mechanized
+Logar_AAS_v1 RGF+CombinedArms PLA+CombinedArms
+Kohat_Invasion_v2 RGF+Armored MEA+Armored
+Belaya_AAS_v2 RGF+Armored IMF+Armored
+FoolsRoad_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
+Mutaha_RAAS_v2 USMC+CombinedArms RGF+CombinedArms
+GooseBay_RAAS_v1 USMC+Support PLAAGF+CombinedArms
+Sumari_Skirmish_v1 INS+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v1 PLA+CombinedArms MEA+CombinedArms
+Lashkar_Invasion_v1 INS+Mechanized RGF+Mechanized
+Gorodok_RAAS_v1 PLA+AirAssault WPMC+AirAssault
+Kokan_AAS_v2 MEA+CombinedArms USA+CombinedArms
+Narva_AAS_v1 IMF+LightInfantry WPMC+AirAssault
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Kohat_TC_v1 RGF+Motorized PLA+Motorized
+AlBasrah_RAAS_v1 PLANMC+AirAssault ADF+AirAssault
+Yehorivka_Destruction_v1 TLF+Armored IMF+Armored
+GooseBay_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+BlackCoast_AAS_v2 PLAAGF+CombinedArms IMF+CombinedArms
+Anvil_RAAS_v1 TLF+Armored BAF+Armored
+Mestia_AAS_v1 USMC+CombinedArms IMF+CombinedArms
+Fallujah_TC_v1 MEA+Armored PLA+Armored
+Kamdesh_RAAS_v1 MEA+CombinedArms PLA+Motorized
+Manicouagan_Invasion_v1 USA+CombinedArms PLA+CombinedArms
+Kokan_AAS_v2 WPMC+CombinedArms MEA+CombinedArms
+Gorodok_AAS_v1 RGF+Motorized CAF+Motorized
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Mutaha_RAAS_v1 ADF+Mechanized INS+Mechanized
-FoolsRoad_AAS_v1 PLA+CombinedArms TLF+CombinedArms
-Tallil_TC_v1 USMC+Armored PLA+Armored
-Lashkar_AAS_v2 TLF+Motorized PLA+CombinedArms
-Manicouagan_Invasion_v1 VDV+CombinedArms PLAAGF+CombinedArms
-Anvil_RAAS_v2 CAF+AirAssault PLA+AirAssault
-Sanxian_AAS_v1 CAF+Support PLA+Support
-Yehorivka_AAS_v2 IMF+Mechanized ADF+Mechanized
-Skorpo_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Gorodok_RAAS_v1 VDV+AirAssault WPMC+AirAssault
-Logar_AAS_v1 WPMC+CombinedArms INS+CombinedArms
-BlackCoast_Invasion_v1 USMC+AmphibiousAssault VDV+Mechanized
-Kohat_RAAS_v2 VDV+Mechanized INS+Mechanized
-FoolsRoad_Skirmish_v1 PLA+CombinedArms IMF+CombinedArms
-AlBasrah_AAS_v1 MEA+AirAssault TLF+AirAssault
-Tallil_RAAS_v1 RGF+Motorized TLF+Motorized
-Fallujah_AAS_v1 PLA+Armored VDV+Armored
-Sumari_AAS_v3 TLF+CombinedArms VDV+CombinedArms
-GooseBay_Invasion_v1 WPMC+AirAssault BAF+CombinedArms
-Yehorivka_AAS_v2 WPMC+AirAssault ADF+AirAssault
-Gorodok_RAAS_v1 USMC+Armored PLA+Armored
-Anvil_Skirmish_v1 CAF+CombinedArms MEA+CombinedArms
-Sanxian_AAS_v1 WPMC+AirAssault ADF+AirAssault
-Skorpo_RAAS_v1 IMF+LightInfantry USA+AirAssault
-Narva_Destruction_v1 IMF+LightInfantry WPMC+LightInfantry
-Logar_RAAS_v1 RGF+CombinedArms USMC+CombinedArms
-Belaya_TC_v1 IMF+Support PLA+Support
-Manicouagan_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-FoolsRoad_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
-AlBasrah_AAS_v1 MEA+Support PLA+Support
-Kamdesh_Invasion_v1 VDV+AirAssault PLA+Support
-Fallujah_RAAS_v1 PLA+Support USA+Support
-BlackCoast_Skirmish_v1 PLANMC+CombinedArms USA+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Yehorivka_AAS_v1 WPMC+AirAssault PLA+AirAssault
-Tallil_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
-Chora_AAS_v1 INS+CombinedArms TLF+CombinedArms
-Mutaha_TC_v1 ADF+Mechanized MEA+Mechanized
-Lashkar_AAS_v2 TLF+AirAssault WPMC+AirAssault
-FoolsRoad_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Anvil_AAS_v1 INS+Motorized MEA+LightInfantry
-Manicouagan_Invasion_v2 PLANMC+CombinedArms VDV+CombinedArms
-Kamdesh_RAAS_v1 USA+AirAssault PLA+AirAssault
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Sumari_TC_v1 TLF+CombinedArms INS+CombinedArms
-BlackCoast_AAS_v1 VDV+Support USA+Motorized
-Tallil_RAAS_v1 PLA+Support USMC+Support
-Narva_Invasion_v2 WPMC+CombinedArms IMF+CombinedArms
-Logar_RAAS_v1 PLA+CombinedArms USA+CombinedArms
-Kohat_TC_v1 INS+CombinedArms VDV+CombinedArms
-Lashkar_AAS_v1 MEA+LightInfantry WPMC+LightInfantry
-FoolsRoad_AAS_v1 PLA+CombinedArms RGF+CombinedArms
-AlBasrah_AAS_v1 WPMC+CombinedArms INS+Support
-Sanxian_Invasion_v2 BAF+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
-Chora_AAS_v2 PLA+CombinedArms RGF+CombinedArms
-Anvil_TC_v1 INS+CombinedArms RGF+CombinedArms
-Kamdesh_AAS_v1 TLF+Motorized USA+Motorized
-Gorodok_AAS_v1 PLA+Armored IMF+Armored
+Kohat_RAAS_v2 TLF+AirAssault INS+CombinedArms
+Belaya_AAS_v1 PLA+LightInfantry USMC+LightInfantry
+Harju_Invasion_v3 ADF+CombinedArms VDV+CombinedArms
+Sumari_AAS_v3 RGF+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v2 RGF+LightInfantry WPMC+LightInfantry
+Skorpo_RAAS_v1 ADF+CombinedArms IMF+CombinedArms
+FoolsRoad_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
+Manicouagan_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Narva_Destruction_v1 WPMC+LightInfantry IMF+LightInfantry
+Kokan_AAS_v1 TLF+CombinedArms INS+CombinedArms
+Tallil_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Fallujah_AAS_v1 RGF+Support BAF+Support
+Lashkar_TC_v1 TLF+Support PLA+Support
+Harju_RAAS_v2 IMF+Armored CAF+Armored
+AlBasrah_Invasion_v2 PLANMC+LightInfantry INS+LightInfantry
+Mutaha_AAS_v2 INS+Motorized PLA+Motorized
+Yehorivka_RAAS_v1 IMF+Mechanized VDV+Mechanized
+Anvil_TC_v1 TLF+CombinedArms CAF+CombinedArms
+Sumari_AAS_v2 INS+CombinedArms PLA+CombinedArms
+BlackCoast_AAS_v2 WPMC+AirAssault CAF+AirAssault
+Narva_Invasion_v1 IMF+Mechanized WPMC+CombinedArms
+Kokan_AAS_v2 INS+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Lashkar_RAAS_v1 CAF+Motorized PLA+Motorized
+Kamdesh_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 PLA+Armored USMC+Motorized
+Gorodok_Destruction_v1 IMF+Mechanized TLF+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Fallujah_RAAS_v2 RGF+Armored USMC+Armored
+Belaya_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 WPMC+LightInfantry PLA+Armored
+GooseBay_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Mestia_Invasion_v1 IMF+CombinedArms USMC+CombinedArms
+Anvil_AAS_v1 VDV+Armored USMC+Armored
+BlackCoast_AAS_v2 RGF+LightInfantry PLA+LightInfantry
+Kamdesh_Skirmish_v1 ADF+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 VDV+CombinedArms ADF+CombinedArms
+AlBasrah_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+Chora_Invasion_v1 VDV+CombinedArms USMC+CombinedArms
+Gorodok_RAAS_v1 BAF+Mechanized VDV+Mechanized
+Narva_TC_v1 VDV+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v2 RGF+LightInfantry WPMC+LightInfantry
+Fallujah_AAS_v1 VDV+CombinedArms MEA+CombinedArms
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms PLA+CombinedArms
+Kokan_Invasion_v1 USMC+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v2 VDV+Support BAF+Armored
+Kohat_TC_v1 PLA+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v2 WPMC+CombinedArms USMC+CombinedArms
+GooseBay_AAS_v1 CAF+CombinedArms RGF+CombinedArms
+Yehorivka_RAAS_v1 PLA+CombinedArms USA+CombinedArms
+BlackCoast_Invasion_v2 IMF+Armored USMC+LightInfantry
+Mutaha_RAAS_v2 BAF+Armored INS+Armored
