--- a/Tools/Rotation/LayerRotation/LayerRotation_24.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_24.cfg
@@ -1,200 +1,200 @@
-Sumari_Invasion_v1 TLF+CombinedArms INS+CombinedArms
-Tallil_RAAS_v1 ADF+AirAssault PLA+LightInfantry
-Kohat_TC_v1 INS+Armored CAF+Armored
-Fallujah_RAAS_v1 USA+Armored INS+Armored
-FoolsRoad_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Manicouagan_AAS_v1 PLANMC+Armored CAF+Armored
-Lashkar_Invasion_v1 WPMC+CombinedArms USMC+CombinedArms
-Yehorivka_AAS_v2 USA+AirAssault WPMC+AirAssault
-AlBasrah_TC_v1 MEA+LightInfantry PLAAGF+Mechanized
-Logar_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v2 IMF+Armored CAF+Armored
-Narva_Destruction_v1 WPMC+LightInfantry RGF+LightInfantry
-BlackCoast_AAS_v1 PLANMC+CombinedArms VDV+Support
-Kokan_Skirmish_v1 TLF+CombinedArms USA+CombinedArms
-Fallujah_RAAS_v2 ADF+CombinedArms TLF+CombinedArms
-Kamdesh_AAS_v1 RGF+Armored TLF+Armored
-Chora_RAAS_v1 PLA+CombinedArms INS+CombinedArms
-Kohat_Invasion_v2 PLA+CombinedArms VDV+CombinedArms
-Yehorivka_AAS_v1 WPMC+AirAssault BAF+AirAssault
-Anvil_RAAS_v2 WPMC+LightInfantry PLA+Armored
-Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Mestia_TC_v1 BAF+CombinedArms PLA+CombinedArms
-GooseBay_RAAS_v1 USMC+CombinedArms PLA+CombinedArms
-AlBasrah_Invasion_v2 BAF+Mechanized PLAAGF+Mechanized
-Lashkar_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
-Belaya_AAS_v2 WPMC+AirAssault CAF+CombinedArms
-Kokan_RAAS_v1 CAF+CombinedArms INS+CombinedArms
-Manicouagan_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v2 PLA+LightInfantry INS+LightInfantry
-Harju_Invasion_v3 IMF+Mechanized USA+Mechanized
-Chora_AAS_v2 TLF+CombinedArms BAF+CombinedArms
-Yehorivka_AAS_v1 IMF+Motorized USMC+Motorized
-Kamdesh_RAAS_v1 WPMC+LightInfantry RGF+LightInfantry
-Kohat_RAAS_v2 INS+Support USA+Support
-Fallujah_RAAS_v2 CAF+CombinedArms TLF+CombinedArms
-Mestia_Invasion_v1 PLA+CombinedArms IMF+CombinedArms
-Anvil_AAS_v1 TLF+Armored MEA+Armored
-AlBasrah_AAS_v1 INS+CombinedArms USMC+CombinedArms
-Tallil_RAAS_v2 BAF+Support WPMC+CombinedArms
-FoolsRoad_Skirmish_v2 VDV+CombinedArms TLF+CombinedArms
-Lashkar_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
-BlackCoast_Invasion_v2 ADF+CombinedArms PLA+CombinedArms
-Sumari_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Belaya_RAAS_v1 TLF+Mechanized IMF+Mechanized
-Harju_RAAS_v1 WPMC+AirAssault IMF+LightInfantry
-Fallujah_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
-Yehorivka_RAAS_v2 TLF+Mechanized IMF+Mechanized
-Manicouagan_Invasion_v1 PLANMC+Support CAF+Support
-Anvil_RAAS_v2 USA+Motorized RGF+Motorized
-Tallil_AAS_v1 VDV+CombinedArms PLA+CombinedArms
-Sanxian_RAAS_v1 ADF+AirAssault PLAAGF+Armored
-FoolsRoad_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
-BlackCoast_AAS_v2 USA+CombinedArms PLAAGF+CombinedArms
-Narva_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
-Skorpo_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
-Mestia_AAS_v1 ADF+CombinedArms IMF+CombinedArms
-Fallujah_TC_v1 CAF+CombinedArms RGF+CombinedArms
-AlBasrah_AAS_v1 MEA+AirAssault TLF+Mechanized
-Harju_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Kamdesh_Invasion_v1 WPMC+LightInfantry RGF+LightInfantry
-Mutaha_AAS_v2 TLF+Support USMC+Support
-Kokan_AAS_v1 USMC+CombinedArms RGF+CombinedArms
-Lashkar_AAS_v1 RGF+Support TLF+Armored
-GooseBay_RAAS_v1 VDV+AirAssault WPMC+AirAssault
-Anvil_RAAS_v1 INS+Armored VDV+Armored
-Tallil_Invasion_v1 RGF+Motorized INS+Motorized
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v2 PLA+LightInfantry USA+LightInfantry
-Chora_TC_v1 USMC+CombinedArms INS+CombinedArms
-Sanxian_AAS_v1 ADF+Mechanized WPMC+AirAssault
-Narva_RAAS_v1 VDV+CombinedArms USMC+CombinedArms
-FoolsRoad_Invasion_v1 PLA+CombinedArms USMC+CombinedArms
-Manicouagan_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v1 IMF+Mechanized ADF+Mechanized
-Lashkar_TC_v2 CAF+Mechanized TLF+Support
-Gorodok_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Fallujah_RAAS_v1 BAF+Support RGF+Support
-Anvil_Invasion_v1 INS+Motorized PLA+Motorized
-Mestia_AAS_v2 PLA+CombinedArms USMC+CombinedArms
-Mutaha_AAS_v1 VDV+Armored ADF+CombinedArms
-Kohat_RAAS_v2 BAF+AirAssault TLF+AirAssault
-Kokan_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
-AlBasrah_AAS_v1 PLA+Support VDV+Support
-Tallil_Invasion_v1 VDV+Mechanized USA+Mechanized
-Yehorivka_RAAS_v1 TLF+AirAssault WPMC+AirAssault
-Kamdesh_AAS_v1 ADF+AirAssault PLA+AirAssault
-Lashkar_AAS_v2 RGF+Motorized TLF+Motorized
-FoolsRoad_AAS_v1 USMC+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v2 USA+Support PLA+Armored
-Skorpo_Invasion_v1 IMF+Armored VDV+Armored
-Gorodok_AAS_v1 VDV+Support BAF+Support
-Fallujah_TC_v1 MEA+Support PLA+Support
-Mestia_AAS_v1 PLA+CombinedArms USA+CombinedArms
-Manicouagan_RAAS_v1 USMC+LightInfantry PLA+CombinedArms
-Harju_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Kohat_Invasion_v2 TLF+Motorized PLA+Motorized
-Logar_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v1 CAF+Support VDV+Support
-Kamdesh_RAAS_v1 USA+AirAssault PLA+AirAssault
-FoolsRoad_AAS_v1 RGF+CombinedArms PLA+CombinedArms
-Anvil_AAS_v1 TLF+CombinedArms WPMC+AirAssault
-Tallil_Invasion_v1 TLF+Mechanized ADF+Mechanized
-Sumari_AAS_v1 USMC+CombinedArms MEA+CombinedArms
-Lashkar_TC_v2 TLF+Mechanized MEA+Mechanized
-Narva_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 VDV+CombinedArms USA+AirAssault
-Harju_AAS_v2 USA+CombinedArms RGF+CombinedArms
-AlBasrah_Invasion_v2 INS+Mechanized CAF+Mechanized
-Gorodok_RAAS_v1 CAF+Motorized PLA+Motorized
-Logar_TC_v1 MEA+CombinedArms PLA+CombinedArms
-Yehorivka_AAS_v2 WPMC+LightInfantry IMF+Armored
-Sanxian_AAS_v3 PLANMC+Armored BAF+Armored
-FoolsRoad_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Tallil_Invasion_v1 MEA+Mechanized ADF+Mechanized
-GooseBay_AAS_v1 USA+LightInfantry WPMC+LightInfantry
-Fallujah_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-Narva_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
-Kohat_AAS_v1 PLA+AirAssault INS+Motorized
-Chora_RAAS_v1 CAF+CombinedArms RGF+CombinedArms
-Manicouagan_Invasion_v2 RGF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v1 WPMC+LightInfantry PLA+LightInfantry
-Mestia_RAAS_v1 TLF+CombinedArms USA+CombinedArms
-Kamdesh_RAAS_v1 CAF+Mechanized PLA+CombinedArms
-Mutaha_TC_v1 PLA+Motorized TLF+Motorized
-AlBasrah_AAS_v1 VDV+Support USMC+Support
-Belaya_AAS_v2 BAF+CombinedArms IMF+CombinedArms
-GooseBay_Invasion_v1 RGF+Support USA+Support
-Sumari_RAAS_v1 TLF+CombinedArms VDV+CombinedArms
-Tallil_AAS_v1 USMC+CombinedArms TLF+CombinedArms
-Lashkar_TC_v2 INS+Armored CAF+Armored
-Manicouagan_RAAS_v2 VDV+Armored PLANMC+Armored
-Kokan_AAS_v1 RGF+CombinedArms PLA+CombinedArms
-Yehorivka_Invasion_v1 TLF+CombinedArms IMF+Mechanized
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Sanxian_RAAS_v2 WPMC+LightInfantry USMC+LightInfantry
-Anvil_RAAS_v2 MEA+CombinedArms USA+CombinedArms
-Mestia_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-Narva_AAS_v3 VDV+CombinedArms IMF+CombinedArms
-Fallujah_Invasion_v2 PLA+CombinedArms TLF+Support
-Kamdesh_AAS_v1 MEA+AirAssault TLF+AirAssault
-Kohat_AAS_v1 PLA+CombinedArms ADF+CombinedArms
-AlBasrah_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Gorodok_AAS_v1 TLF+CombinedArms IMF+CombinedArms
-Manicouagan_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
-Chora_AAS_v3 RGF+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v2 PLA+CombinedArms USMC+CombinedArms
-Mutaha_RAAS_v2 TLF+AirAssault PLA+AirAssault
-Belaya_AAS_v3 CAF+Armored PLA+Armored
-Kokan_RAAS_v1 INS+CombinedArms VDV+CombinedArms
-Narva_RAAS_v1 BAF+Mechanized IMF+Mechanized
-Lashkar_TC_v1 PLA+AirAssault BAF+CombinedArms
-Anvil_RAAS_v2 BAF+AirAssault PLA+AirAssault
-Mestia_Invasion_v1 TLF+CombinedArms IMF+CombinedArms
-Tallil_RAAS_v2 INS+Mechanized TLF+Mechanized
-Fallujah_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
-Chora_AAS_v3 PLA+CombinedArms USMC+CombinedArms
-Kamdesh_RAAS_v1 PLA+LightInfantry MEA+LightInfantry
-Kohat_TC_v1 ADF+CombinedArms TLF+CombinedArms
-AlBasrah_AAS_v1 TLF+CombinedArms PLANMC+AirAssault
-FoolsRoad_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
-Narva_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Lashkar_AAS_v2 TLF+Armored PLA+Armored
-GooseBay_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v2 ADF+Mechanized PLAAGF+Armored
-Belaya_AAS_v2 RGF+Mechanized IMF+Mechanized
-Sumari_Invasion_v1 PLA+CombinedArms BAF+CombinedArms
-Yehorivka_RAAS_v2 WPMC+AirAssault BAF+AirAssault
-Anvil_TC_v1 USA+CombinedArms PLA+CombinedArms
-Mutaha_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
-Tallil_RAAS_v1 PLA+CombinedArms MEA+LightInfantry
-Fallujah_AAS_v1 PLA+CombinedArms ADF+CombinedArms
-Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-FoolsRoad_TC_v1 RGF+CombinedArms IMF+CombinedArms
-Kohat_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 TLF+Armored BAF+Mechanized
-Narva_AAS_v2 VDV+AirAssault ADF+AirAssault
-Gorodok_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Mestia_TC_v1 BAF+CombinedArms TLF+CombinedArms
-AlBasrah_AAS_v1 PLA+CombinedArms USA+CombinedArms
-Mutaha_RAAS_v1 USMC+CombinedArms RGF+CombinedArms
-Kokan_Invasion_v1 TLF+CombinedArms USA+CombinedArms
-Lashkar_AAS_v1 VDV+Armored WPMC+LightInfantry
-Fallujah_AAS_v1 RGF+LightInfantry PLA+LightInfantry
-Logar_RAAS_v1 RGF+CombinedArms USA+CombinedArms
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v1 IMF+Armored PLA+Armored
-Manicouagan_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
-Kohat_RAAS_v2 CAF+AirAssault INS+Support
-Gorodok_Skirmish_v1 USA+CombinedArms TLF+CombinedArms
-Tallil_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
-GooseBay_AAS_v1 WPMC+AirAssault VDV+AirAssault
-Kamdesh_RAAS_v1 TLF+AirAssault MEA+AirAssault
-Mutaha_Invasion_v1 INS+LightInfantry TLF+Mechanized
-Skorpo_RAAS_v1 RGF+Motorized USA+Motorized
-Kokan_TC_v1 PLA+CombinedArms BAF+CombinedArms
+Belaya_TC_v1 PLA+LightInfantry IMF+LightInfantry
+Lashkar_AAS_v2 MEA+Armored CAF+Armored
+Kamdesh_AAS_v1 PLA+LightInfantry USMC+LightInfantry
+Gorodok_AAS_v1 ADF+AirAssault TLF+Support
+Chora_Invasion_v1 VDV+CombinedArms BAF+CombinedArms
+Fallujah_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kohat_TC_v1 BAF+Armored PLA+Armored
+Tallil_RAAS_v2 MEA+CombinedArms INS+CombinedArms
+Anvil_RAAS_v2 PLA+Support WPMC+AirAssault
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Sumari_AAS_v1 WPMC+CombinedArms VDV+CombinedArms
+Belaya_Invasion_v2 IMF+Motorized TLF+Motorized
+Lashkar_AAS_v1 PLA+LightInfantry INS+LightInfantry
+Mutaha_RAAS_v2 MEA+AirAssault ADF+AirAssault
+Kokan_TC_v1 PLA+CombinedArms WPMC+CombinedArms
+Harju_AAS_v1 WPMC+CombinedArms RGF+Armored
+Yehorivka_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Gorodok_Invasion_v2 TLF+Motorized CAF+Motorized
+Sanxian_AAS_v3 WPMC+CombinedArms CAF+CombinedArms
+Mestia_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 IMF+LightInfantry CAF+Mechanized
+GooseBay_AAS_v1 CAF+CombinedArms RGF+CombinedArms
+Fallujah_RAAS_v2 VDV+Armored TLF+Armored
+Belaya_Invasion_v2 IMF+CombinedArms ADF+CombinedArms
+Chora_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+Anvil_TC_v1 WPMC+CombinedArms INS+Support
+Tallil_RAAS_v1 RGF+Mechanized USA+Mechanized
 PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 WPMC+AirAssault VDV+AirAssault
-Chora_AAS_v3 RGF+CombinedArms PLA+CombinedArms
+Kamdesh_AAS_v1 PLA+CombinedArms INS+CombinedArms
+Gorodok_Invasion_v2 RGF+Motorized PLA+Motorized
+Manicouagan_AAS_v2 PLAAGF+Armored WPMC+LightInfantry
+Yehorivka_TC_v1 TLF+Support BAF+Support
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v2 TLF+Armored CAF+Armored
+GooseBay_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Sanxian_Invasion_v1 USMC+AmphibiousAssault PLANMC+Support
+Lashkar_AAS_v2 PLA+Support USMC+Support
+Tallil_TC_v1 MEA+LightInfantry WPMC+LightInfantry
+Kokan_AAS_v1 INS+CombinedArms CAF+CombinedArms
+Kamdesh_AAS_v1 VDV+Mechanized INS+Mechanized
+Kohat_RAAS_v1 RGF+Mechanized WPMC+CombinedArms
+Sumari_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Harju_Invasion_v3 VDV+CombinedArms ADF+CombinedArms
+Gorodok_AAS_v1 RGF+Armored USA+Armored
+Chora_AAS_v2 USA+CombinedArms PLA+CombinedArms
+Mutaha_RAAS_v1 TLF+CombinedArms INS+CombinedArms
+BlackCoast_RAAS_v2 PLANMC+AirAssault RGF+Armored
+AlBasrah_Skirmish_v1 ADF+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v2 TLF+Mechanized BAF+Mechanized
+Yehorivka_RAAS_v1 ADF+Mechanized VDV+Mechanized
+Lashkar_Invasion_v1 VDV+Support PLA+Support
+Logar_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Narva_AAS_v1 IMF+Mechanized VDV+Armored
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Kamdesh_TC_v1 TLF+Support INS+Support
+Tallil_RAAS_v1 USA+CombinedArms PLA+CombinedArms
+Chora_Invasion_v1 CAF+CombinedArms INS+CombinedArms
+Mutaha_AAS_v2 INS+LightInfantry WPMC+AirAssault
+AlBasrah_RAAS_v1 BAF+AirAssault VDV+AirAssault
+Manicouagan_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Fallujah_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
+Kohat_RAAS_v1 USA+CombinedArms PLA+CombinedArms
+Yehorivka_Destruction_v1 PLA+LightInfantry TLF+Support
+Kokan_RAAS_v1 INS+CombinedArms TLF+CombinedArms
+Sanxian_RAAS_v1 WPMC+LightInfantry PLANMC+LightInfantry
+GooseBay_AAS_v1 CAF+AirAssault WPMC+AirAssault
+BlackCoast_RAAS_v2 USA+Mechanized PLA+Mechanized
+Narva_RAAS_v1 IMF+CombinedArms RGF+CombinedArms
+FoolsRoad_Invasion_v1 BAF+CombinedArms PLA+CombinedArms
+Harju_RAAS_v1 VDV+Support IMF+Support
+Tallil_AAS_v1 INS+LightInfantry RGF+Armored
+Manicouagan_AAS_v1 BAF+Mechanized VDV+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Gorodok_TC_v1 WPMC+LightInfantry USMC+LightInfantry
+Anvil_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Yehorivka_Destruction_v1 IMF+CombinedArms USMC+Motorized
+Sumari_AAS_v3 MEA+CombinedArms INS+CombinedArms
+Lashkar_AAS_v1 ADF+Mechanized MEA+Mechanized
+Belaya_TC_v1 TLF+CombinedArms IMF+CombinedArms
+Mestia_AAS_v1 PLA+CombinedArms IMF+CombinedArms
+Fallujah_AAS_v1 RGF+Motorized PLA+CombinedArms
+Kamdesh_Invasion_v1 TLF+Support USMC+Support
+Chora_AAS_v3 USMC+CombinedArms VDV+CombinedArms
+Mutaha_TC_v1 PLA+Support TLF+Support
+AlBasrah_RAAS_v1 MEA+Support BAF+Support
+Harju_RAAS_v1 VDV+CombinedArms USA+Mechanized
+Tallil_RAAS_v1 TLF+CombinedArms USMC+CombinedArms
+Kokan_Invasion_v1 MEA+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Narva_AAS_v3 USMC+Armored IMF+Armored
+Sumari_TC_v1 ADF+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v2 BAF+CombinedArms VDV+CombinedArms
+Anvil_RAAS_v2 MEA+CombinedArms TLF+Armored
+FoolsRoad_Destruction_v1 PLA+CombinedArms BAF+CombinedArms
+Gorodok_RAAS_v2 WPMC+AirAssault TLF+AirAssault
+Lashkar_TC_v1 INS+CombinedArms PLA+CombinedArms
+Kohat_AAS_v1 TLF+Mechanized USA+Mechanized
+Mestia_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 WPMC+AirAssault PLA+Armored
+Kamdesh_RAAS_v1 MEA+Support PLA+Support
+Narva_Invasion_v1 USA+CombinedArms RGF+CombinedArms
+Kokan_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Mutaha_RAAS_v2 PLA+LightInfantry USA+LightInfantry
+GooseBay_RAAS_v2 PLAAGF+Mechanized CAF+Mechanized
+AlBasrah_TC_v1 MEA+Mechanized RGF+Mechanized
+Skorpo_RAAS_v1 RGF+CombinedArms USA+AirAssault
+Logar_AAS_v1 INS+CombinedArms PLA+CombinedArms
+Fallujah_Invasion_v1 PLA+Motorized CAF+Motorized
+Anvil_RAAS_v2 MEA+Mechanized CAF+Mechanized
+Chora_AAS_v1 PLA+CombinedArms RGF+CombinedArms
+Manicouagan_AAS_v2 WPMC+AirAssault VDV+AirAssault
+Lashkar_TC_v1 PLA+LightInfantry WPMC+LightInfantry
+Kokan_AAS_v1 USA+CombinedArms VDV+CombinedArms
+Narva_Destruction_v1 USA+LightInfantry RGF+CombinedArms
+Belaya_AAS_v2 RGF+Motorized USMC+Motorized
+Gorodok_RAAS_v1 CAF+CombinedArms IMF+CombinedArms
+Kohat_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
+Tallil_RAAS_v2 PLA+Support BAF+Support
+Sanxian_AAS_v3 WPMC+CombinedArms USMC+Armored
+GooseBay_Invasion_v1 BAF+Mechanized PLAAGF+Mechanized
+Skorpo_RAAS_v1 BAF+Armored IMF+Armored
+Mestia_Skirmish_v1 USMC+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Harju_RAAS_v1 IMF+Armored WPMC+LightInfantry
+BlackCoast_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
+Yehorivka_Invasion_v2 BAF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 VDV+AirAssault PLA+AirAssault
+Kokan_Skirmish_v1 RGF+CombinedArms USMC+CombinedArms
+Fallujah_RAAS_v2 CAF+Armored PLA+Armored
+Lashkar_AAS_v1 MEA+Armored VDV+AirAssault
+Tallil_RAAS_v1 INS+CombinedArms VDV+CombinedArms
+FoolsRoad_Destruction_v1 IMF+CombinedArms VDV+CombinedArms
+Kohat_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Anvil_TC_v1 WPMC+CombinedArms INS+CombinedArms
+Chora_AAS_v1 RGF+CombinedArms USMC+CombinedArms
+Yehorivka_RAAS_v2 TLF+CombinedArms ADF+CombinedArms
+Kamdesh_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Sumari_TC_v1 TLF+CombinedArms WPMC+CombinedArms
+Harju_AAS_v1 CAF+AirAssault WPMC+CombinedArms
+Lashkar_AAS_v1 VDV+Armored INS+Armored
+Logar_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+BlackCoast_AAS_v2 PLANMC+Support USMC+Support
+Tallil_Invasion_v1 INS+Motorized RGF+Motorized
+Narva_AAS_v3 USMC+Armored IMF+Armored
+Mutaha_AAS_v2 MEA+CombinedArms RGF+CombinedArms
+Kohat_AAS_v1 TLF+Support RGF+Support
+AlBasrah_TC_v1 MEA+CombinedArms TLF+CombinedArms
+Kokan_AAS_v2 PLA+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 USA+Armored VDV+Armored
+Kamdesh_Invasion_v1 INS+CombinedArms WPMC+CombinedArms
+Gorodok_AAS_v1 WPMC+AirAssault CAF+AirAssault
+Yehorivka_RAAS_v2 BAF+CombinedArms PLA+CombinedArms
+Anvil_TC_v1 INS+Armored RGF+Armored
+Tallil_AAS_v1 ADF+AirAssault PLA+Support
+Lashkar_AAS_v1 VDV+Armored MEA+Armored
+Fallujah_Invasion_v2 PLA+LightInfantry WPMC+LightInfantry
+Kohat_RAAS_v2 TLF+AirAssault WPMC+AirAssault
+Harju_RAAS_v2 WPMC+AirAssault VDV+AirAssault
+Mutaha_AAS_v1 MEA+Armored ADF+CombinedArms
+Belaya_TC_v1 IMF+CombinedArms TLF+CombinedArms
+Sanxian_RAAS_v2 WPMC+CombinedArms ADF+CombinedArms
+BlackCoast_AAS_v2 WPMC+AirAssault CAF+AirAssault
+AlBasrah_Invasion_v2 PLAAGF+Armored VDV+Armored
+Manicouagan_AAS_v2 WPMC+LightInfantry PLA+LightInfantry
+Kamdesh_Skirmish_v1 ADF+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 IMF+Support WPMC+LightInfantry
+Anvil_RAAS_v2 INS+Mechanized VDV+Mechanized
+Fallujah_Invasion_v2 INS+CombinedArms ADF+CombinedArms
+Yehorivka_AAS_v1 WPMC+AirAssault TLF+AirAssault
+Belaya_AAS_v1 RGF+CombinedArms PLA+CombinedArms
+Sumari_AAS_v1 INS+CombinedArms USA+CombinedArms
+Kohat_TC_v1 PLA+Armored INS+Support
+Mutaha_RAAS_v1 INS+Support TLF+Support
+Manicouagan_Invasion_v2 USA+Mechanized PLA+Mechanized
+Kokan_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Lashkar_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Tallil_TC_v1 TLF+Motorized VDV+AirAssault
+Skorpo_RAAS_v1 IMF+Armored VDV+Armored
+AlBasrah_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+GooseBay_Invasion_v1 USA+Support RGF+Support
+FoolsRoad_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v1 CAF+Support PLANMC+AirAssault
+Kohat_RAAS_v1 BAF+AirAssault WPMC+AirAssault
+Fallujah_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v1 VDV+AirAssault PLA+AirAssault
+Anvil_Invasion_v1 INS+Armored TLF+Armored
+Chora_AAS_v2 WPMC+CombinedArms INS+CombinedArms
+Sanxian_RAAS_v1 WPMC+AirAssault USA+Mechanized
+Kamdesh_AAS_v1 VDV+Support BAF+Support
+Gorodok_TC_v1 USMC+Support TLF+Support
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms ADF+CombinedArms
+AlBasrah_Insurgency_v1 BAF+CombinedArms INS+CombinedArms
+Belaya_AAS_v2 IMF+Support CAF+CombinedArms
+Logar_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Kohat_TC_v1 TLF+AirAssault ADF+AirAssault
+Mutaha_AAS_v1 PLA+AirAssault USA+AirAssault
+Fallujah_RAAS_v2 PLA+Motorized USA+Motorized
