--- a/Tools/Rotation/LayerRotation/LayerRotation_11.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_11.cfg
@@ -1,200 +1,200 @@
-Logar_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
-Kamdesh_AAS_v1 VDV+CombinedArms MEA+CombinedArms
-Fallujah_RAAS_v2 RGF+Mechanized ADF+Mechanized
-Belaya_AAS_v2 IMF+Mechanized TLF+Mechanized
-Tallil_Invasion_v1 BAF+CombinedArms INS+CombinedArms
-Anvil_AAS_v1 VDV+Mechanized MEA+Mechanized
-BlackCoast_AAS_v1 USMC+LightInfantry IMF+Mechanized
-Kohat_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
-Harju_RAAS_v2 VDV+CombinedArms BAF+CombinedArms
+Chora_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Narva_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
+BlackCoast_AAS_v2 TLF+AirAssault WPMC+LightInfantry
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms CAF+CombinedArms
+Gorodok_AAS_v1 USA+Armored TLF+Armored
+Kokan_AAS_v1 TLF+CombinedArms BAF+CombinedArms
+Mutaha_Invasion_v1 INS+Support TLF+Support
+AlBasrah_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Tallil_TC_v1 RGF+Support WPMC+AirAssault
+Lashkar_AAS_v2 PLA+Support CAF+Support
+Manicouagan_RAAS_v1 PLAAGF+Armored USMC+Armored
+GooseBay_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
+FoolsRoad_Invasion_v1 BAF+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 BAF+Support WPMC+CombinedArms
+Yehorivka_RAAS_v1 IMF+Mechanized RGF+Mechanized
+Sumari_AAS_v2 MEA+CombinedArms USMC+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Mutaha_TC_v1 MEA+Support TLF+Support
+Kohat_RAAS_v2 BAF+Armored PLA+CombinedArms
+Kokan_Invasion_v1 USMC+CombinedArms INS+CombinedArms
+Harju_AAS_v1 VDV+Armored USMC+Armored
+Belaya_AAS_v3 RGF+Motorized PLA+Motorized
+Lashkar_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
+GooseBay_Skirmish_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Fallujah_RAAS_v1 MEA+CombinedArms CAF+CombinedArms
+Yehorivka_Destruction_v1 BAF+Support IMF+Support
+Manicouagan_AAS_v1 PLANMC+Motorized WPMC+AirAssault
+Anvil_RAAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Mestia_TC_v1 PLA+CombinedArms VDV+CombinedArms
+Mutaha_RAAS_v2 PLA+AirAssault BAF+AirAssault
+Sanxian_AAS_v3 WPMC+CombinedArms CAF+CombinedArms
+BlackCoast_Invasion_v2 WPMC+AirAssault RGF+LightInfantry
+AlBasrah_AAS_v1 WPMC+CombinedArms INS+CombinedArms
+Tallil_Skirmish_v2 PLA+CombinedArms BAF+CombinedArms
+Gorodok_RAAS_v1 CAF+Support PLA+Support
+Kohat_AAS_v1 INS+CombinedArms TLF+CombinedArms
+Kokan_RAAS_v1 USMC+CombinedArms RGF+CombinedArms
+Manicouagan_Invasion_v2 CAF+Mechanized PLAAGF+Mechanized
+Lashkar_AAS_v1 PLA+AirAssault BAF+AirAssault
+Fallujah_Skirmish_v1 MEA+CombinedArms PLA+CombinedArms
+GooseBay_AAS_v1 CAF+Motorized PLANMC+Support
+Anvil_RAAS_v1 MEA+Armored VDV+Armored
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Lashkar_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
-Mestia_AAS_v1 TLF+CombinedArms PLA+CombinedArms
-Mutaha_AAS_v1 INS+Mechanized CAF+Mechanized
-Kamdesh_AAS_v1 TLF+Support VDV+Support
-Fallujah_Skirmish_v2 MEA+CombinedArms PLA+CombinedArms
-Manicouagan_RAAS_v1 PLAAGF+Mechanized WPMC+LightInfantry
-Narva_Invasion_v2 WPMC+CombinedArms BAF+CombinedArms
-Chora_AAS_v3 INS+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v1 PLA+Armored IMF+Armored
-Kohat_RAAS_v1 MEA+LightInfantry WPMC+LightInfantry
-Sanxian_RAAS_v1 CAF+Armored PLAAGF+Armored
-AlBasrah_TC_v1 TLF+Support USA+AirAssault
-Anvil_RAAS_v1 WPMC+AirAssault BAF+AirAssault
-Kokan_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
-Tallil_Invasion_v1 USMC+Support MEA+Support
-Mutaha_AAS_v1 RGF+Motorized CAF+Motorized
-Fallujah_RAAS_v1 INS+Support PLA+Support
-Kamdesh_AAS_v1 PLA+CombinedArms ADF+AirAssault
-Logar_TC_v1 INS+CombinedArms PLA+CombinedArms
-Yehorivka_RAAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Kohat_Invasion_v1 PLA+Armored VDV+Armored
-FoolsRoad_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 WPMC+AirAssault PLA+LightInfantry
-Manicouagan_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
-GooseBay_Skirmish_v1 BAF+CombinedArms VDV+CombinedArms
-AlBasrah_RAAS_v1 RGF+Motorized PLA+Motorized
-Gorodok_Invasion_v1 TLF+CombinedArms PLA+CombinedArms
-Chora_AAS_v1 MEA+CombinedArms TLF+CombinedArms
-Skorpo_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Fallujah_AAS_v1 VDV+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v2 CAF+CombinedArms PLA+AirAssault
-Logar_Skirmish_v1 TLF+CombinedArms ADF+CombinedArms
-Yehorivka_RAAS_v1 IMF+LightInfantry USMC+LightInfantry
-Kohat_Invasion_v1 ADF+Mechanized MEA+Mechanized
-Mutaha_AAS_v1 INS+Armored USA+Armored
-FoolsRoad_AAS_v2 IMF+CombinedArms USA+CombinedArms
-Manicouagan_AAS_v1 USA+Motorized RGF+Motorized
-PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Kamdesh_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Narva_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Gorodok_Destruction_v1 RGF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v1 WPMC+AirAssault TLF+AirAssault
-Harju_AAS_v3 WPMC+CombinedArms BAF+CombinedArms
-Fallujah_TC_v1 TLF+Mechanized MEA+Mechanized
-Sanxian_AAS_v2 WPMC+AirAssault BAF+AirAssault
-Tallil_AAS_v1 ADF+CombinedArms PLA+LightInfantry
-Anvil_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 ADF+Mechanized RGF+Mechanized
-Logar_AAS_v1 RGF+CombinedArms PLA+CombinedArms
-Belaya_TC_v1 CAF+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 USA+Motorized PLAAGF+CombinedArms
-Manicouagan_AAS_v2 PLA+CombinedArms VDV+CombinedArms
-Kamdesh_Invasion_v1 PLA+LightInfantry RGF+LightInfantry
-Skorpo_RAAS_v1 USA+Armored VDV+Armored
-FoolsRoad_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
+BlackCoast_RAAS_v2 ADF+Mechanized VDV+Mechanized
+Mestia_TC_v1 PLA+CombinedArms USMC+CombinedArms
+Mutaha_AAS_v2 RGF+Mechanized ADF+Mechanized
+Kohat_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
+Sanxian_AAS_v2 WPMC+CombinedArms PLAAGF+CombinedArms
+AlBasrah_RAAS_v1 CAF+Support INS+Support
+Tallil_RAAS_v1 WPMC+AirAssault USA+AirAssault
+Belaya_AAS_v2 PLA+Support IMF+Support
+Fallujah_Skirmish_v2 MEA+CombinedArms TLF+CombinedArms
+Skorpo_RAAS_v1 ADF+CombinedArms VDV+CombinedArms
+Yehorivka_Destruction_v1 WPMC+AirAssault TLF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Kokan_RAAS_v1 INS+CombinedArms RGF+CombinedArms
+BlackCoast_AAS_v2 TLF+CombinedArms PLA+CombinedArms
+Gorodok_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Manicouagan_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Lashkar_Invasion_v1 INS+Support MEA+LightInfantry
+Chora_RAAS_v1 ADF+CombinedArms MEA+CombinedArms
+Kohat_TC_v1 WPMC+LightInfantry USA+LightInfantry
+AlBasrah_AAS_v1 TLF+Mechanized PLAAGF+Mechanized
+Fallujah_RAAS_v2 WPMC+CombinedArms ADF+CombinedArms
+FoolsRoad_RAAS_v1 PLA+CombinedArms VDV+CombinedArms
+Belaya_Invasion_v1 TLF+Mechanized RGF+Mechanized
+Tallil_RAAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Anvil_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v1 IMF+LightInfantry VDV+Support
+Manicouagan_AAS_v1 RGF+CombinedArms PLAAGF+CombinedArms
+Logar_RAAS_v1 INS+CombinedArms MEA+CombinedArms
+GooseBay_Invasion_v1 VDV+Mechanized PLAAGF+Mechanized
+Harju_AAS_v1 BAF+AirAssault VDV+AirAssault
+Sumari_AAS_v1 VDV+CombinedArms PLA+CombinedArms
+AlBasrah_AAS_v1 CAF+Support INS+LightInfantry
+Yehorivka_AAS_v1 TLF+Motorized IMF+Motorized
+Kohat_Skirmish_v1 PLA+CombinedArms USA+CombinedArms
+Tallil_AAS_v1 BAF+Mechanized MEA+Mechanized
+Belaya_Invasion_v1 IMF+Armored BAF+Armored
+FoolsRoad_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+Fallujah_RAAS_v2 PLA+Motorized INS+Motorized
+Anvil_TC_v1 INS+Mechanized TLF+Armored
+Logar_AAS_v1 RGF+CombinedArms TLF+CombinedArms
+Sanxian_AAS_v1 PLANMC+CombinedArms ADF+CombinedArms
+Narva_Destruction_v1 USMC+CombinedArms WPMC+CombinedArms
+Chora_AAS_v2 VDV+CombinedArms CAF+CombinedArms
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Harju_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Mestia_AAS_v2 PLA+CombinedArms USMC+CombinedArms
-Fallujah_Invasion_v2 WPMC+CombinedArms INS+CombinedArms
-Kohat_RAAS_v2 PLA+Armored WPMC+LightInfantry
-Lashkar_TC_v1 TLF+AirAssault USA+AirAssault
-Mutaha_AAS_v1 USMC+LightInfantry PLA+LightInfantry
-AlBasrah_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Anvil_AAS_v1 BAF+Support PLA+Support
-Gorodok_Invasion_v2 IMF+Support PLA+Support
-Chora_AAS_v1 VDV+CombinedArms USA+CombinedArms
-Sanxian_AAS_v3 WPMC+CombinedArms USMC+CombinedArms
-Belaya_AAS_v2 WPMC+AirAssault TLF+AirAssault
-Sumari_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
-Kamdesh_RAAS_v1 USA+Motorized VDV+Support
-Tallil_Invasion_v1 PLA+LightInfantry RGF+LightInfantry
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms ADF+CombinedArms
-Harju_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-BlackCoast_RAAS_v2 TLF+Support USA+Support
-Kokan_TC_v1 INS+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 BAF+CombinedArms TLF+CombinedArms
-Yehorivka_Destruction_v1 PLA+Armored CAF+Armored
-Fallujah_AAS_v1 USA+Support WPMC+LightInfantry
-FoolsRoad_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 BAF+CombinedArms VDV+CombinedArms
-Lashkar_AAS_v1 RGF+Motorized INS+Motorized
-GooseBay_RAAS_v1 PLANMC+AirAssault VDV+AirAssault
-Tallil_Invasion_v1 TLF+Mechanized BAF+Mechanized
-Logar_AAS_v1 ADF+CombinedArms MEA+CombinedArms
-Narva_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Gorodok_TC_v1 CAF+Support WPMC+AirAssault
-Kamdesh_RAAS_v1 TLF+AirAssault ADF+AirAssault
-Chora_RAAS_v1 CAF+CombinedArms TLF+CombinedArms
-Skorpo_Invasion_v1 IMF+LightInfantry WPMC+LightInfantry
-Sanxian_RAAS_v2 ADF+AirAssault WPMC+AirAssault
-Anvil_TC_v1 MEA+Armored BAF+Armored
-AlBasrah_RAAS_v1 VDV+Armored WPMC+AirAssault
-Kokan_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Lashkar_RAAS_v1 ADF+AirAssault PLA+AirAssault
+Gorodok_TC_v1 WPMC+AirAssault TLF+Support
+Yehorivka_RAAS_v1 TLF+AirAssault PLA+AirAssault
+Kamdesh_Invasion_v1 CAF+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 USA+LightInfantry WPMC+LightInfantry
+Mestia_AAS_v2 PLA+CombinedArms RGF+CombinedArms
+Manicouagan_AAS_v3 WPMC+LightInfantry RGF+LightInfantry
+Anvil_TC_v1 USA+LightInfantry PLA+Motorized
+Kokan_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Tallil_Invasion_v1 TLF+Armored USMC+Armored
+BlackCoast_AAS_v2 PLANMC+Motorized USA+Motorized
+Fallujah_RAAS_v2 INS+CombinedArms ADF+CombinedArms
+Mutaha_RAAS_v1 MEA+Armored WPMC+AirAssault
+Lashkar_Skirmish_v1 VDV+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v1 CAF+Motorized TLF+Motorized
+Narva_Invasion_v1 VDV+CombinedArms WPMC+CombinedArms
+FoolsRoad_AAS_v2 PLA+CombinedArms IMF+CombinedArms
+Skorpo_RAAS_v1 IMF+Support WPMC+AirAssault
+Kohat_TC_v1 WPMC+LightInfantry USMC+LightInfantry
+AlBasrah_RAAS_v1 USA+CombinedArms MEA+CombinedArms
+Manicouagan_AAS_v3 VDV+AirAssault PLA+AirAssault
+Kokan_Invasion_v1 TLF+CombinedArms USMC+CombinedArms
 PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-BlackCoast_Invasion_v2 IMF+Armored USA+Armored
-Lashkar_AAS_v2 PLA+LightInfantry USA+LightInfantry
-Yehorivka_TC_v2 BAF+Armored IMF+Armored
-Kohat_AAS_v1 WPMC+AirAssault TLF+AirAssault
-GooseBay_AAS_v1 WPMC+AirAssault CAF+CombinedArms
-Narva_AAS_v3 ADF+Mechanized RGF+Mechanized
-Sumari_Invasion_v1 USA+CombinedArms WPMC+CombinedArms
-Fallujah_AAS_v1 PLA+CombinedArms BAF+CombinedArms
-Anvil_TC_v1 PLA+LightInfantry MEA+LightInfantry
-Tallil_RAAS_v1 CAF+Armored MEA+Armored
-Mutaha_AAS_v1 PLA+LightInfantry USMC+Armored
-Manicouagan_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Kokan_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms USA+CombinedArms
-Lashkar_Invasion_v1 TLF+Support WPMC+CombinedArms
-FoolsRoad_RAAS_v1 USMC+CombinedArms IMF+CombinedArms
-Kohat_AAS_v1 MEA+AirAssault CAF+AirAssault
-Fallujah_AAS_v1 INS+Support MEA+Support
-Sumari_RAAS_v1 RGF+CombinedArms BAF+CombinedArms
-Belaya_AAS_v2 PLA+CombinedArms TLF+CombinedArms
-Tallil_Invasion_v1 USA+LightInfantry VDV+Support
-Skorpo_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Kokan_AAS_v2 CAF+CombinedArms PLA+CombinedArms
-Yehorivka_RAAS_v2 IMF+Support USA+Support
-Gorodok_TC_v1 ADF+AirAssault TLF+AirAssault
-Kamdesh_RAAS_v1 WPMC+AirAssault PLA+AirAssault
-FoolsRoad_Invasion_v1 TLF+CombinedArms VDV+CombinedArms
-Mutaha_RAAS_v2 INS+Mechanized ADF+CombinedArms
-Kohat_AAS_v1 CAF+CombinedArms TLF+CombinedArms
-AlBasrah_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-BlackCoast_AAS_v2 TLF+CombinedArms PLANMC+CombinedArms
-Narva_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Mestia_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-Manicouagan_RAAS_v2 USMC+Armored PLA+Armored
-Belaya_TC_v1 PLA+LightInfantry IMF+LightInfantry
-Tallil_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
-Sumari_AAS_v2 PLA+CombinedArms MEA+CombinedArms
-Gorodok_AAS_v1 IMF+CombinedArms BAF+CombinedArms
-Yehorivka_AAS_v2 USA+CombinedArms TLF+CombinedArms
-Kokan_Invasion_v1 USMC+CombinedArms VDV+CombinedArms
-Lashkar_AAS_v2 PLA+Armored MEA+LightInfantry
-AlBasrah_TC_v1 PLANMC+LightInfantry USA+LightInfantry
-Kohat_RAAS_v1 INS+LightInfantry WPMC+LightInfantry
-Logar_AAS_v1 PLA+CombinedArms TLF+CombinedArms
-BlackCoast_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
-GooseBay_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
-Harju_AAS_v1 WPMC+AirAssault USA+Armored
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-FoolsRoad_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
-Anvil_AAS_v1 TLF+CombinedArms PLA+CombinedArms
-Tallil_TC_v1 MEA+Mechanized VDV+Mechanized
-Fallujah_AAS_v1 INS+Mechanized PLA+Armored
-Yehorivka_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
+Fallujah_TC_v1 PLA+LightInfantry VDV+Support
+Mutaha_RAAS_v1 VDV+CombinedArms ADF+CombinedArms
+Logar_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Lashkar_AAS_v2 VDV+CombinedArms PLA+CombinedArms
+Yehorivka_Destruction_v1 VDV+Armored PLA+Armored
+Gorodok_RAAS_v2 VDV+AirAssault ADF+CombinedArms
+Tallil_TC_v1 USA+Support RGF+Support
+Narva_RAAS_v1 CAF+Support IMF+Support
+Mestia_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+AlBasrah_AAS_v1 TLF+CombinedArms PLAAGF+CombinedArms
+Anvil_Invasion_v1 VDV+CombinedArms PLA+Support
+Fallujah_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
+Sumari_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
+Mutaha_RAAS_v2 PLA+CombinedArms MEA+CombinedArms
 Kamdesh_AAS_v1 WPMC+AirAssault TLF+AirAssault
-Logar_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 PLA+AirAssault MEA+AirAssault
-Lashkar_AAS_v2 PLA+CombinedArms RGF+CombinedArms
-Gorodok_RAAS_v2 RGF+Motorized TLF+Motorized
-Mestia_Invasion_v1 TLF+CombinedArms IMF+CombinedArms
-Manicouagan_RAAS_v2 WPMC+AirAssault USMC+Armored
-Mutaha_TC_v1 PLA+Armored INS+Armored
-Sumari_AAS_v2 TLF+CombinedArms ADF+CombinedArms
-Belaya_AAS_v2 IMF+Armored TLF+Armored
-BlackCoast_AAS_v1 WPMC+AirAssault TLF+AirAssault
-Narva_Destruction_v1 CAF+Motorized VDV+Mechanized
-Sanxian_AAS_v1 ADF+Mechanized PLAAGF+Mechanized
-Chora_AAS_v3 INS+CombinedArms BAF+CombinedArms
-Kamdesh_AAS_v1 ADF+CombinedArms MEA+CombinedArms
-Fallujah_TC_v1 USMC+LightInfantry INS+LightInfantry
-Tallil_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Lashkar_AAS_v1 BAF+Mechanized VDV+Mechanized
-Anvil_Invasion_v1 INS+Support TLF+Support
-Gorodok_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
-Harju_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
-PacificProvingGrounds_AAS_v1 USA+CombinedArms PLA+CombinedArms
-AlBasrah_RAAS_v1 MEA+CombinedArms BAF+CombinedArms
-Sumari_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
-Kohat_Invasion_v1 WPMC+LightInfantry BAF+Armored
-BlackCoast_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-FoolsRoad_AAS_v2 CAF+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Kohat_Insurgency_v1 USA+Support INS+Support
+Lashkar_AAS_v2 INS+Motorized USA+Mechanized
+BlackCoast_AAS_v2 TLF+Armored PLAAGF+Armored
+Mestia_TC_v1 WPMC+CombinedArms USMC+CombinedArms
+Sanxian_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Gorodok_AAS_v1 VDV+Support TLF+Support
+Tallil_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 MEA+Mechanized TLF+Mechanized
+Belaya_TC_v1 USMC+Motorized IMF+Support
+FoolsRoad_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v1 INS+Motorized PLA+Motorized
+Yehorivka_RAAS_v2 WPMC+AirAssault CAF+AirAssault
+Lashkar_Invasion_v1 USA+LightInfantry WPMC+LightInfantry
+Fallujah_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kokan_AAS_v1 USMC+CombinedArms PLA+CombinedArms
+Harju_RAAS_v2 IMF+Support WPMC+LightInfantry
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Tallil_TC_v1 VDV+CombinedArms WPMC+CombinedArms
+BlackCoast_AAS_v2 USMC+Armored PLAAGF+Armored
+Narva_Invasion_v1 RGF+Mechanized USA+Mechanized
+Sumari_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
+GooseBay_AAS_v1 PLA+AirAssault WPMC+AirAssault
+Yehorivka_AAS_v1 VDV+AirAssault TLF+AirAssault
+Anvil_RAAS_v2 PLA+Support ADF+AirAssault
+Mestia_AAS_v1 PLA+CombinedArms IMF+CombinedArms
+Gorodok_Destruction_v1 IMF+LightInfantry WPMC+LightInfantry
 Fallujah_RAAS_v2 MEA+Support TLF+Support
-Tallil_TC_v1 PLA+Motorized INS+Motorized
-Kamdesh_RAAS_v1 USA+LightInfantry INS+LightInfantry
-GooseBay_Invasion_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Chora_Skirmish_v1 ADF+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms USMC+CombinedArms
+Lashkar_RAAS_v1 MEA+Mechanized WPMC+LightInfantry
+Skorpo_RAAS_v1 IMF+Motorized RGF+Motorized
+Narva_Invasion_v2 RGF+Mechanized ADF+Mechanized
+Kohat_RAAS_v2 USA+Armored INS+Armored
+BlackCoast_RAAS_v1 IMF+Support TLF+Support
+GooseBay_Skirmish_v1 VDV+CombinedArms PLAAGF+CombinedArms
+Tallil_AAS_v1 VDV+CombinedArms PLA+Support
+Mutaha_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Mestia_Invasion_v1 USA+CombinedArms IMF+CombinedArms
+Harju_RAAS_v1 IMF+Mechanized CAF+Mechanized
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms ADF+CombinedArms
+Gorodok_TC_v1 IMF+LightInfantry PLA+LightInfantry
+Chora_AAS_v3 MEA+CombinedArms TLF+CombinedArms
+Yehorivka_RAAS_v2 RGF+Armored USA+LightInfantry
+Narva_Destruction_v1 USA+CombinedArms WPMC+CombinedArms
+FoolsRoad_AAS_v1 USA+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v1 MEA+Armored CAF+Armored
+Anvil_RAAS_v1 TLF+AirAssault PLA+AirAssault
+Fallujah_Skirmish_v1 RGF+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 PLANMC+AirAssault VDV+AirAssault
+Kamdesh_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 USMC+CombinedArms TLF+CombinedArms
+Sumari_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
+Gorodok_AAS_v1 IMF+LightInfantry CAF+CombinedArms
+Harju_RAAS_v2 VDV+AirAssault ADF+AirAssault
+Chora_AAS_v3 USMC+CombinedArms INS+CombinedArms
+Yehorivka_Invasion_v1 PLA+Armored BAF+Armored
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Manicouagan_Skirmish_v3 WPMC+CombinedArms PLAAGF+CombinedArms
+Fallujah_AAS_v1 INS+Armored PLA+Armored
 Anvil_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
-Kokan_AAS_v2 TLF+CombinedArms VDV+CombinedArms
-Mutaha_TC_v1 CAF+AirAssault WPMC+AirAssault
-Skorpo_RAAS_v1 IMF+CombinedArms RGF+LightInfantry
-AlBasrah_RAAS_v1 INS+CombinedArms RGF+CombinedArms
-Yehorivka_Destruction_v1 BAF+Mechanized RGF+Mechanized
-FoolsRoad_AAS_v2 PLA+CombinedArms RGF+CombinedArms
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Lashkar_TC_v2 TLF+AirAssault PLA+AirAssault
-Tallil_RAAS_v1 INS+CombinedArms TLF+Armored
-Sumari_AAS_v3 USMC+CombinedArms TLF+CombinedArms
+Narva_AAS_v3 IMF+Mechanized VDV+Mechanized
+FoolsRoad_Destruction_v1 PLA+CombinedArms USA+CombinedArms
+BlackCoast_AAS_v2 USA+AirAssault WPMC+CombinedArms
+Lashkar_AAS_v1 RGF+CombinedArms ADF+CombinedArms
+Mutaha_Skirmish_v1 MEA+CombinedArms RGF+CombinedArms
+Gorodok_RAAS_v1 IMF+CombinedArms USMC+CombinedArms
+Belaya_AAS_v3 TLF+Support USMC+Support
+Kohat_Insurgency_v1 MEA+CombinedArms INS+Motorized
+Chora_AAS_v1 PLA+CombinedArms USMC+CombinedArms
+Kamdesh_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
+Anvil_AAS_v1 WPMC+AirAssault ADF+AirAssault
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Mestia_AAS_v1 PLA+CombinedArms IMF+CombinedArms
+Narva_Destruction_v1 USMC+Motorized WPMC+LightInfantry
