--- a/Tools/Rotation/LayerRotation/LayerRotation_14.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_14.cfg
@@ -1,200 +1,200 @@
-Sanxian_RAAS_v2 USA+AirAssault PLA+AirAssault
-Kohat_RAAS_v1 MEA+Support WPMC+LightInfantry
-BlackCoast_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Harju_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Anvil_Invasion_v1 TLF+Support INS+Support
-AlBasrah_AAS_v1 WPMC+AirAssault PLA+AirAssault
-Fallujah_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
-Mutaha_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-Manicouagan_RAAS_v1 WPMC+AirAssault CAF+AirAssault
-Kamdesh_AAS_v1 RGF+Mechanized BAF+AirAssault
-Gorodok_Invasion_v1 TLF+Mechanized RGF+Mechanized
-GooseBay_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
-Mestia_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
-Skorpo_RAAS_v1 USMC+Support IMF+Support
-Sanxian_AAS_v2 BAF+AirAssault WPMC+AirAssault
-Kohat_RAAS_v1 INS+CombinedArms MEA+CombinedArms
-Kokan_Invasion_v1 PLA+CombinedArms BAF+CombinedArms
-Lashkar_AAS_v2 USA+Motorized INS+Motorized
-AlBasrah_TC_v1 MEA+Support WPMC+CombinedArms
-Narva_AAS_v2 USA+AirAssault WPMC+AirAssault
-FoolsRoad_AAS_v1 TLF+CombinedArms IMF+CombinedArms
-Manicouagan_AAS_v1 BAF+AirAssault PLA+AirAssault
-Tallil_Invasion_v1 USA+Armored VDV+Armored
-BlackCoast_AAS_v2 PLAAGF+CombinedArms CAF+Mechanized
-Anvil_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
-Belaya_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-GooseBay_RAAS_v2 VDV+Armored PLAAGF+Armored
-Sanxian_RAAS_v1 PLA+LightInfantry WPMC+LightInfantry
-Lashkar_Invasion_v1 USMC+Support PLA+Support
-Gorodok_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Kohat_AAS_v1 BAF+AirAssault MEA+Armored
-Kokan_Skirmish_v1 ADF+CombinedArms VDV+CombinedArms
-Fallujah_AAS_v1 INS+Motorized TLF+Motorized
-Tallil_AAS_v1 ADF+CombinedArms INS+CombinedArms
-Yehorivka_Destruction_v1 USMC+LightInfantry WPMC+LightInfantry
-Kamdesh_AAS_v1 INS+LightInfantry PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Mutaha_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-Manicouagan_RAAS_v1 PLA+LightInfantry USMC+LightInfantry
-Lashkar_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Belaya_Invasion_v1 IMF+LightInfantry WPMC+LightInfantry
-GooseBay_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Anvil_AAS_v1 PLA+CombinedArms TLF+CombinedArms
-Logar_AAS_v1 CAF+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 TLF+AirAssault USA+AirAssault
-Fallujah_AAS_v1 BAF+Armored PLA+CombinedArms
-BlackCoast_Invasion_v2 TLF+Support IMF+Support
-Mestia_AAS_v2 PLA+CombinedArms VDV+CombinedArms
-Skorpo_RAAS_v1 CAF+CombinedArms RGF+CombinedArms
-Yehorivka_RAAS_v2 RGF+Mechanized USA+Mechanized
-Kokan_Skirmish_v1 TLF+CombinedArms USMC+CombinedArms
-Mutaha_AAS_v2 PLA+LightInfantry CAF+Mechanized
-Tallil_Invasion_v1 PLA+LightInfantry WPMC+LightInfantry
-Kamdesh_AAS_v1 MEA+CombinedArms INS+CombinedArms
-Sumari_AAS_v3 WPMC+CombinedArms INS+CombinedArms
-Kohat_AAS_v1 PLA+Support MEA+Support
-Belaya_TC_v1 CAF+Armored RGF+Armored
-GooseBay_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-FoolsRoad_Destruction_v1 PLA+CombinedArms IMF+CombinedArms
-Harju_RAAS_v2 WPMC+LightInfantry IMF+Armored
-Narva_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 USA+Armored PLA+Armored
-Fallujah_RAAS_v1 BAF+CombinedArms TLF+CombinedArms
-Lashkar_AAS_v2 WPMC+LightInfantry RGF+LightInfantry
-BlackCoast_Invasion_v2 PLAAGF+Mechanized VDV+Mechanized
-Sanxian_RAAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Skorpo_RAAS_v1 WPMC+LightInfantry CAF+Mechanized
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Tallil_TC_v1 ADF+CombinedArms PLA+CombinedArms
-Belaya_AAS_v2 IMF+LightInfantry WPMC+LightInfantry
-Gorodok_Destruction_v1 IMF+CombinedArms PLA+CombinedArms
-Yehorivka_RAAS_v1 BAF+Mechanized VDV+Mechanized
-Sumari_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
-Anvil_TC_v1 PLA+Support VDV+AirAssault
-Manicouagan_RAAS_v2 WPMC+CombinedArms PLA+CombinedArms
-Kokan_AAS_v2 RGF+CombinedArms INS+CombinedArms
-Fallujah_Insurgency_v1 VDV+CombinedArms INS+CombinedArms
-BlackCoast_AAS_v2 CAF+Support IMF+Support
-Kamdesh_TC_v1 RGF+Motorized INS+CombinedArms
-Mutaha_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
-Logar_RAAS_v1 PLA+CombinedArms USA+CombinedArms
-Tallil_RAAS_v1 INS+Support MEA+Support
-Lashkar_RAAS_v1 WPMC+CombinedArms MEA+CombinedArms
-Narva_Destruction_v1 IMF+Motorized BAF+CombinedArms
-Chora_RAAS_v1 ADF+CombinedArms VDV+CombinedArms
-AlBasrah_TC_v1 PLAAGF+CombinedArms USMC+CombinedArms
-Belaya_AAS_v3 IMF+Support USMC+Support
-Anvil_AAS_v1 TLF+Armored INS+Armored
-Yehorivka_AAS_v1 TLF+Motorized USMC+LightInfantry
-Kamdesh_Invasion_v1 ADF+CombinedArms MEA+CombinedArms
-Skorpo_RAAS_v1 CAF+AirAssault VDV+AirAssault
-Sanxian_RAAS_v2 USMC+CombinedArms WPMC+CombinedArms
-Sumari_RAAS_v1 MEA+CombinedArms PLA+CombinedArms
-Mutaha_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Fallujah_TC_v1 MEA+LightInfantry USMC+LightInfantry
-Logar_RAAS_v1 WPMC+CombinedArms MEA+CombinedArms
-Tallil_Invasion_v1 TLF+Support INS+CombinedArms
-BlackCoast_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Kokan_AAS_v1 INS+CombinedArms PLA+CombinedArms
-Narva_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Lashkar_TC_v2 TLF+Mechanized VDV+Mechanized
+Kohat_Invasion_v2 ADF+Mechanized MEA+Mechanized
+Logar_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Fallujah_AAS_v1 MEA+CombinedArms INS+CombinedArms
+Lashkar_TC_v1 ADF+AirAssault WPMC+AirAssault
+Belaya_AAS_v3 VDV+Support USMC+Motorized
+Harju_AAS_v1 CAF+AirAssault WPMC+AirAssault
+Kokan_Invasion_v1 BAF+CombinedArms INS+CombinedArms
+Manicouagan_AAS_v3 PLANMC+Armored USMC+Armored
+Tallil_TC_v1 BAF+Mechanized RGF+Mechanized
+Chora_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Yehorivka_AAS_v1 ADF+Mechanized IMF+LightInfantry
+Anvil_AAS_v1 RGF+Support USMC+Support
+FoolsRoad_Destruction_v1 TLF+CombinedArms RGF+CombinedArms
+Gorodok_RAAS_v1 RGF+Support CAF+Support
+AlBasrah_TC_v1 VDV+Mechanized TLF+Mechanized
+Lashkar_AAS_v1 MEA+CombinedArms INS+CombinedArms
+GooseBay_RAAS_v1 RGF+LightInfantry WPMC+CombinedArms
+BlackCoast_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
+Mestia_Invasion_v1 CAF+CombinedArms VDV+CombinedArms
+Mutaha_RAAS_v1 INS+LightInfantry WPMC+LightInfantry
+Fallujah_TC_v1 PLA+CombinedArms INS+CombinedArms
+Kamdesh_RAAS_v1 PLA+Armored USMC+CombinedArms
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Kohat_AAS_v1 RGF+CombinedArms ADF+CombinedArms
-Sanxian_Invasion_v2 WPMC+CombinedArms PLAAGF+Mechanized
+Belaya_AAS_v1 TLF+Support IMF+Support
+Tallil_Invasion_v1 WPMC+CombinedArms MEA+CombinedArms
+Kohat_RAAS_v1 TLF+Motorized PLA+Motorized
+Anvil_TC_v1 MEA+Support PLA+Support
+Sumari_AAS_v3 CAF+CombinedArms PLA+CombinedArms
+AlBasrah_AAS_v1 PLAAGF+Armored USMC+Armored
+Yehorivka_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
+FoolsRoad_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
+Lashkar_RAAS_v1 PLA+Support INS+LightInfantry
+Gorodok_RAAS_v2 WPMC+CombinedArms TLF+CombinedArms
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Mutaha_Skirmish_v1 USMC+CombinedArms INS+CombinedArms
+GooseBay_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Tallil_Invasion_v1 MEA+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 BAF+Support MEA+AirAssault
+Mestia_AAS_v2 IMF+CombinedArms TLF+CombinedArms
+Fallujah_RAAS_v1 MEA+Armored TLF+Armored
+BlackCoast_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
+Kokan_Skirmish_v1 USA+CombinedArms PLA+CombinedArms
+Lashkar_AAS_v2 BAF+AirAssault TLF+AirAssault
+Kohat_Insurgency_v1 MEA+Mechanized INS+Mechanized
+Narva_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Mutaha_AAS_v2 ADF+CombinedArms PLA+CombinedArms
+FoolsRoad_Skirmish_v1 TLF+CombinedArms IMF+CombinedArms
+Tallil_RAAS_v1 BAF+CombinedArms INS+CombinedArms
+Gorodok_RAAS_v1 WPMC+LightInfantry USA+AirAssault
+AlBasrah_Invasion_v2 VDV+CombinedArms PLANMC+CombinedArms
+Harju_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
+GooseBay_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Anvil_AAS_v1 PLA+Support USA+Support
+Sumari_TC_v1 MEA+CombinedArms INS+CombinedArms
+BlackCoast_AAS_v2 USMC+CombinedArms PLAAGF+CombinedArms
+Yehorivka_Invasion_v2 TLF+Support PLA+Support
+Manicouagan_AAS_v3 WPMC+CombinedArms BAF+CombinedArms
+Lashkar_RAAS_v1 CAF+Mechanized MEA+Mechanized
+Fallujah_RAAS_v1 MEA+Support PLA+Support
+Kamdesh_TC_v1 VDV+Mechanized TLF+Support
+Chora_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Narva_Invasion_v2 IMF+CombinedArms WPMC+CombinedArms
+Harju_AAS_v1 USA+LightInfantry WPMC+LightInfantry
+Kokan_AAS_v2 VDV+CombinedArms TLF+CombinedArms
+Kohat_AAS_v1 MEA+Mechanized INS+Motorized
+Anvil_RAAS_v2 USA+LightInfantry RGF+LightInfantry
+Mestia_Skirmish_v1 TLF+CombinedArms IMF+CombinedArms
+Manicouagan_AAS_v1 VDV+Mechanized PLA+Mechanized
+Mutaha_Invasion_v1 INS+Support TLF+Support
+Sanxian_AAS_v1 PLA+Armored ADF+Mechanized
+Logar_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
+BlackCoast_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 ADF+AirAssault PLA+AirAssault
+Harju_Skirmish_v1 IMF+CombinedArms BAF+CombinedArms
+Belaya_RAAS_v1 CAF+Armored PLA+Armored
+Gorodok_Destruction_v1 WPMC+CombinedArms IMF+Motorized
+Anvil_RAAS_v1 VDV+CombinedArms BAF+CombinedArms
+Kokan_RAAS_v1 ADF+CombinedArms INS+CombinedArms
+Yehorivka_RAAS_v2 USA+Mechanized IMF+Mechanized
+Mutaha_AAS_v2 WPMC+LightInfantry MEA+LightInfantry
+Fallujah_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
+Manicouagan_AAS_v1 VDV+CombinedArms PLAAGF+CombinedArms
+AlBasrah_Invasion_v1 MEA+Mechanized WPMC+LightInfantry
+Mestia_AAS_v2 VDV+CombinedArms USMC+CombinedArms
+GooseBay_AAS_v1 BAF+Mechanized PLA+Mechanized
+BlackCoast_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
+Gorodok_RAAS_v1 WPMC+AirAssault BAF+AirAssault
+Lashkar_Skirmish_v1 USMC+CombinedArms PLA+CombinedArms
+Belaya_AAS_v1 CAF+Armored TLF+Armored
+Sanxian_Invasion_v2 WPMC+AirAssault PLANMC+Support
+Tallil_AAS_v1 USA+LightInfantry RGF+LightInfantry
+Harju_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Anvil_TC_v1 PLA+AirAssault USA+AirAssault
 FoolsRoad_AAS_v1 PLA+CombinedArms RGF+CombinedArms
-Gorodok_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v2 VDV+Armored PLA+Armored
-Mutaha_RAAS_v1 MEA+Support TLF+Support
-Fallujah_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
-BlackCoast_AAS_v1 USA+Motorized IMF+Motorized
-Tallil_AAS_v1 USMC+CombinedArms RGF+CombinedArms
-Sumari_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-AlBasrah_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
-Kamdesh_RAAS_v1 VDV+CombinedArms PLA+AirAssault
-Yehorivka_Skirmish_v2 PLA+CombinedArms USA+CombinedArms
-Skorpo_RAAS_v1 WPMC+AirAssault VDV+AirAssault
-Kohat_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
-Logar_RAAS_v1 MEA+CombinedArms USA+CombinedArms
-Manicouagan_Invasion_v1 PLA+Support USA+Support
-Anvil_AAS_v1 PLA+Support VDV+AirAssault
-Gorodok_TC_v1 ADF+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v2 PLAAGF+Mechanized TLF+Mechanized
-Mestia_RAAS_v1 BAF+CombinedArms TLF+CombinedArms
-Tallil_RAAS_v1 CAF+Mechanized TLF+Mechanized
-Narva_Invasion_v2 ADF+CombinedArms IMF+CombinedArms
-Kokan_AAS_v2 PLA+CombinedArms RGF+CombinedArms
-Belaya_TC_v1 PLA+AirAssault CAF+AirAssault
-Yehorivka_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
-FoolsRoad_AAS_v1 PLA+CombinedArms USA+CombinedArms
-AlBasrah_RAAS_v1 TLF+AirAssault PLAAGF+Mechanized
-Lashkar_Invasion_v1 TLF+Armored CAF+Armored
-Manicouagan_AAS_v2 USA+Armored PLANMC+Armored
-Kohat_AAS_v1 PLA+Armored MEA+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-BlackCoast_AAS_v2 IMF+CombinedArms USA+CombinedArms
-Kamdesh_TC_v1 MEA+CombinedArms RGF+CombinedArms
-Tallil_RAAS_v2 USA+Mechanized WPMC+CombinedArms
-Fallujah_Invasion_v2 PLA+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Chora_AAS_v1 VDV+CombinedArms INS+CombinedArms
-Anvil_RAAS_v1 PLA+Armored RGF+Armored
-Sanxian_RAAS_v2 WPMC+LightInfantry ADF+CombinedArms
-Belaya_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 TLF+Support PLA+Support
-Kohat_TC_v1 BAF+CombinedArms RGF+CombinedArms
-Narva_AAS_v2 USA+LightInfantry IMF+Mechanized
-Sumari_RAAS_v1 TLF+CombinedArms VDV+CombinedArms
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Manicouagan_Invasion_v2 RGF+CombinedArms BAF+CombinedArms
-Gorodok_AAS_v1 TLF+Support USA+Support
-GooseBay_Skirmish_v1 PLA+CombinedArms USA+CombinedArms
-Mutaha_RAAS_v1 ADF+AirAssault PLA+AirAssault
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Fallujah_RAAS_v1 TLF+Armored VDV+Armored
-Kamdesh_Invasion_v1 TLF+CombinedArms INS+CombinedArms
-Yehorivka_AAS_v1 USMC+Armored PLA+Armored
-Chora_TC_v1 MEA+CombinedArms TLF+CombinedArms
-AlBasrah_AAS_v1 BAF+Support TLF+Support
-Sanxian_RAAS_v2 WPMC+AirAssault ADF+CombinedArms
-Mestia_AAS_v1 VDV+CombinedArms IMF+CombinedArms
-Manicouagan_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
+Mutaha_RAAS_v2 ADF+Mechanized MEA+LightInfantry
+Fallujah_Invasion_v2 USMC+Support MEA+Support
+Manicouagan_AAS_v3 USA+LightInfantry WPMC+LightInfantry
+Gorodok_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
+Lashkar_RAAS_v1 ADF+AirAssault MEA+AirAssault
+Narva_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+BlackCoast_AAS_v2 BAF+CombinedArms IMF+Support
+Chora_Insurgency_v1 MEA+CombinedArms INS+CombinedArms
+Yehorivka_AAS_v1 ADF+CombinedArms IMF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Logar_TC_v1 USA+CombinedArms VDV+CombinedArms
+Belaya_AAS_v1 CAF+Support PLA+CombinedArms
+Fallujah_AAS_v1 INS+LightInfantry WPMC+LightInfantry
+Sanxian_Invasion_v2 BAF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Mutaha_AAS_v1 PLA+Motorized RGF+Motorized
+Mestia_TC_v1 ADF+CombinedArms RGF+CombinedArms
+Lashkar_AAS_v2 TLF+Mechanized ADF+Mechanized
+Gorodok_AAS_v1 BAF+CombinedArms PLA+Armored
+Yehorivka_Invasion_v2 USA+Armored TLF+Armored
+GooseBay_AAS_v1 USMC+Armored PLAAGF+Armored
+Logar_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Tallil_TC_v1 CAF+CombinedArms RGF+CombinedArms
+Fallujah_RAAS_v1 VDV+Armored PLA+Armored
+Kamdesh_AAS_v1 ADF+AirAssault PLA+Motorized
+Kokan_Invasion_v1 WPMC+CombinedArms ADF+CombinedArms
+AlBasrah_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+BlackCoast_AAS_v2 TLF+Mechanized IMF+Mechanized
+Anvil_RAAS_v2 TLF+Armored VDV+Armored
+Chora_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
+Lashkar_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Gorodok_Invasion_v2 ADF+Mechanized TLF+Mechanized
+Harju_AAS_v3 WPMC+CombinedArms IMF+CombinedArms
+Yehorivka_AAS_v1 BAF+Support TLF+Support
+Kohat_RAAS_v2 MEA+AirAssault RGF+CombinedArms
+Mutaha_Skirmish_v1 WPMC+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 VDV+Armored USMC+Armored
+Kamdesh_Invasion_v1 VDV+Support INS+Support
+Kokan_RAAS_v1 ADF+CombinedArms INS+CombinedArms
+Tallil_RAAS_v1 BAF+AirAssault WPMC+AirAssault
+Fallujah_TC_v1 USMC+Motorized INS+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Logar_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Gorodok_Destruction_v1 TLF+CombinedArms PLA+CombinedArms
+AlBasrah_RAAS_v1 TLF+CombinedArms USMC+CombinedArms
+Mestia_TC_v1 TLF+CombinedArms IMF+CombinedArms
+Lashkar_AAS_v1 INS+Motorized BAF+Support
+Kohat_RAAS_v2 ADF+Mechanized VDV+Mechanized
 Anvil_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
-GooseBay_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-Belaya_AAS_v2 RGF+LightInfantry USA+Motorized
-BlackCoast_RAAS_v2 IMF+Mechanized ADF+Mechanized
-Tallil_AAS_v1 ADF+Mechanized TLF+Mechanized
-Mutaha_Invasion_v1 INS+Mechanized MEA+Mechanized
-Fallujah_AAS_v1 WPMC+LightInfantry INS+LightInfantry
-Gorodok_TC_v1 PLA+LightInfantry USMC+LightInfantry
-AlBasrah_AAS_v1 INS+LightInfantry WPMC+LightInfantry
-Narva_AAS_v2 IMF+CombinedArms VDV+Support
-Kohat_RAAS_v2 INS+Motorized PLA+Motorized
-Lashkar_Invasion_v1 PLA+CombinedArms VDV+CombinedArms
-Chora_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
-BlackCoast_AAS_v2 TLF+Support IMF+Mechanized
-Manicouagan_Skirmish_v2 WPMC+CombinedArms CAF+CombinedArms
-Skorpo_RAAS_v1 USMC+Support VDV+Support
-Anvil_Invasion_v1 TLF+Armored PLA+Armored
-Fallujah_AAS_v1 INS+Motorized PLA+Motorized
-AlBasrah_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
-GooseBay_Skirmish_v1 CAF+CombinedArms RGF+CombinedArms
-Kamdesh_AAS_v1 BAF+Armored VDV+Armored
-Mutaha_AAS_v1 TLF+AirAssault USA+AirAssault
-FoolsRoad_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
-Kohat_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
-Gorodok_AAS_v1 RGF+Motorized USMC+Armored
-Yehorivka_RAAS_v2 PLA+AirAssault USA+AirAssault
-Manicouagan_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
-Tallil_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
-Skorpo_RAAS_v1 BAF+AirAssault WPMC+AirAssault
-BlackCoast_Invasion_v2 PLAAGF+Mechanized RGF+Mechanized
-Logar_AAS_v1 USA+CombinedArms INS+CombinedArms
-Kamdesh_AAS_v1 INS+Armored RGF+Armored
-Sanxian_RAAS_v2 PLANMC+Motorized BAF+Mechanized
-FoolsRoad_RAAS_v1 PLA+CombinedArms IMF+CombinedArms
-Fallujah_RAAS_v1 TLF+Support MEA+Support
-AlBasrah_AAS_v1 BAF+Armored MEA+Armored
+FoolsRoad_Destruction_v1 WPMC+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v2 VDV+CombinedArms USA+CombinedArms
+Tallil_RAAS_v2 ADF+AirAssault MEA+AirAssault
+Chora_TC_v1 MEA+CombinedArms INS+CombinedArms
+Fallujah_RAAS_v2 CAF+Armored VDV+Armored
+Harju_RAAS_v1 CAF+Armored IMF+Armored
+BlackCoast_Invasion_v2 IMF+LightInfantry USA+LightInfantry
+Kokan_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 ADF+Mechanized VDV+Armored
+AlBasrah_RAAS_v1 PLANMC+Armored VDV+Armored
+Lashkar_Skirmish_v1 BAF+CombinedArms RGF+CombinedArms
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Gorodok_Destruction_v1 PLA+Motorized CAF+Motorized
+Mutaha_RAAS_v1 CAF+Armored RGF+Armored
+Narva_AAS_v1 IMF+Motorized CAF+Motorized
+Sumari_TC_v1 USA+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v1 VDV+Mechanized TLF+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Yehorivka_Destruction_v1 VDV+Armored PLA+Armored
+FoolsRoad_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+Tallil_TC_v1 RGF+Support PLA+Support
+Belaya_AAS_v2 RGF+Support TLF+Support
+Kamdesh_AAS_v1 MEA+Armored USMC+Armored
+Mestia_AAS_v2 PLA+CombinedArms RGF+CombinedArms
+Gorodok_Destruction_v1 PLA+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v2 VDV+CombinedArms MEA+CombinedArms
+Manicouagan_Skirmish_v2 WPMC+CombinedArms VDV+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Fallujah_RAAS_v1 CAF+CombinedArms TLF+Armored
+AlBasrah_AAS_v1 WPMC+CombinedArms MEA+CombinedArms
+Yehorivka_Invasion_v2 VDV+Armored PLA+Armored
+FoolsRoad_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Anvil_TC_v1 MEA+CombinedArms VDV+CombinedArms
+Skorpo_RAAS_v1 IMF+Mechanized ADF+Mechanized
+BlackCoast_AAS_v2 TLF+Support IMF+Motorized
+Kamdesh_RAAS_v1 PLA+AirAssault TLF+AirAssault
+Mestia_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
+Narva_RAAS_v1 RGF+LightInfantry USMC+LightInfantry
+Kohat_RAAS_v1 TLF+Support CAF+Support
+Harju_Skirmish_v2 IMF+CombinedArms ADF+CombinedArms
+Tallil_AAS_v1 TLF+Armored INS+Armored
+Sanxian_AAS_v2 USMC+LightInfantry WPMC+LightInfantry
+AlBasrah_Invasion_v1 PLANMC+Motorized WPMC+CombinedArms
+GooseBay_RAAS_v2 USA+LightInfantry WPMC+LightInfantry
+Yehorivka_AAS_v2 IMF+CombinedArms VDV+CombinedArms
+BlackCoast_RAAS_v2 BAF+Armored VDV+Armored
+Logar_TC_v1 CAF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v1 WPMC+LightInfantry MEA+LightInfantry
+Narva_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
+Lashkar_AAS_v1 RGF+Armored USA+Armored
+Gorodok_AAS_v1 RGF+Armored BAF+CombinedArms
+FoolsRoad_Skirmish_v2 VDV+CombinedArms USMC+CombinedArms
+Belaya_AAS_v2 VDV+CombinedArms IMF+CombinedArms
+Kamdesh_AAS_v1 WPMC+LightInfantry INS+LightInfantry
+Kokan_Invasion_v1 INS+CombinedArms TLF+CombinedArms
+Fallujah_RAAS_v1 PLA+CombinedArms CAF+Support
+Mutaha_TC_v1 CAF+Support INS+Support
