--- a/Tools/Rotation/LayerRotation/LayerRotation_16.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_16.cfg
@@ -1,200 +1,200 @@
-Mutaha_TC_v1 USA+LightInfantry MEA+LightInfantry
-Sanxian_AAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
-Kamdesh_RAAS_v1 PLA+CombinedArms VDV+CombinedArms
-Narva_Invasion_v2 USA+LightInfantry IMF+Motorized
-BlackCoast_RAAS_v2 CAF+Motorized IMF+Motorized
-Gorodok_TC_v1 IMF+Support TLF+Support
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-AlBasrah_AAS_v1 CAF+CombinedArms PLA+CombinedArms
-FoolsRoad_AAS_v1 IMF+CombinedArms TLF+CombinedArms
-Anvil_Invasion_v1 USMC+Armored INS+Support
-Belaya_AAS_v2 IMF+CombinedArms TLF+CombinedArms
-Yehorivka_TC_v1 PLA+Armored TLF+Armored
-Mutaha_AAS_v2 MEA+Armored PLA+Armored
-Kamdesh_AAS_v1 MEA+Armored PLA+Armored
-Kokan_AAS_v2 ADF+CombinedArms PLA+CombinedArms
-Tallil_Invasion_v1 INS+Armored TLF+Support
-Harju_RAAS_v2 WPMC+CombinedArms USA+CombinedArms
-Manicouagan_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Fallujah_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
-Gorodok_RAAS_v2 VDV+AirAssault TLF+AirAssault
-Anvil_RAAS_v1 PLA+Armored VDV+Armored
-Narva_Invasion_v1 IMF+LightInfantry WPMC+CombinedArms
-GooseBay_AAS_v1 PLANMC+AirAssault VDV+AirAssault
-Sumari_AAS_v1 USA+CombinedArms TLF+CombinedArms
-Kohat_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
-Kamdesh_RAAS_v1 PLA+LightInfantry INS+LightInfantry
-Tallil_Skirmish_v3 INS+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v1 TLF+Mechanized WPMC+AirAssault
-Harju_Invasion_v3 IMF+LightInfantry WPMC+LightInfantry
-AlBasrah_RAAS_v1 PLA+Mechanized VDV+Mechanized
-Mutaha_AAS_v1 TLF+Armored MEA+Armored
-Mestia_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-Belaya_RAAS_v1 IMF+CombinedArms WPMC+AirAssault
-Narva_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
-Gorodok_Destruction_v1 TLF+CombinedArms IMF+CombinedArms
+AlBasrah_RAAS_v1 TLF+Armored MEA+Armored
+Kohat_Invasion_v2 INS+Mechanized WPMC+LightInfantry
+Logar_AAS_v1 PLA+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms CAF+CombinedArms
+Mutaha_RAAS_v1 PLA+Armored INS+Armored
+Fallujah_TC_v1 BAF+Armored PLA+Armored
+Chora_AAS_v1 CAF+CombinedArms INS+CombinedArms
+Manicouagan_Invasion_v2 RGF+Mechanized USMC+LightInfantry
 Skorpo_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
-Manicouagan_RAAS_v2 WPMC+LightInfantry USMC+LightInfantry
-Kohat_TC_v1 VDV+Mechanized INS+Motorized
-Sumari_AAS_v2 TLF+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v2 TLF+AirAssault WPMC+AirAssault
-Kamdesh_Invasion_v1 CAF+CombinedArms PLA+CombinedArms
-Tallil_AAS_v1 PLA+AirAssault WPMC+AirAssault
-Anvil_AAS_v1 USA+Armored PLA+Armored
-Yehorivka_RAAS_v2 PLA+CombinedArms WPMC+AirAssault
-Mutaha_Skirmish_v1 INS+CombinedArms CAF+CombinedArms
-Belaya_AAS_v2 CAF+CombinedArms WPMC+CombinedArms
-Narva_Destruction_v1 VDV+CombinedArms IMF+CombinedArms
-Kokan_AAS_v2 TLF+CombinedArms CAF+CombinedArms
-GooseBay_AAS_v1 PLAAGF+Armored USMC+Armored
-Lashkar_TC_v2 PLA+LightInfantry TLF+Mechanized
-Fallujah_RAAS_v2 ADF+Mechanized VDV+Mechanized
-Sumari_AAS_v3 TLF+CombinedArms INS+CombinedArms
-Tallil_RAAS_v1 PLA+Support USA+Support
-Gorodok_Destruction_v1 PLA+Motorized TLF+Motorized
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms USA+CombinedArms
-Logar_Skirmish_v1 VDV+CombinedArms CAF+CombinedArms
-Yehorivka_RAAS_v1 RGF+Armored IMF+Armored
-Manicouagan_AAS_v3 USMC+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 IMF+Mechanized ADF+Mechanized
-Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
-FoolsRoad_AAS_v2 WPMC+CombinedArms ADF+CombinedArms
-Kamdesh_AAS_v1 PLA+Support USA+LightInfantry
-Kohat_RAAS_v1 MEA+Armored PLA+Armored
-Mestia_TC_v1 ADF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v1 WPMC+AirAssault TLF+AirAssault
-AlBasrah_Invasion_v2 VDV+Support PLANMC+Support
-Sanxian_AAS_v3 PLA+CombinedArms USA+CombinedArms
-Tallil_RAAS_v2 WPMC+CombinedArms MEA+CombinedArms
-Harju_RAAS_v2 CAF+CombinedArms RGF+Motorized
-Chora_AAS_v1 PLA+CombinedArms USA+CombinedArms
-Anvil_RAAS_v1 RGF+Motorized USMC+Motorized
-Mutaha_Invasion_v1 USA+CombinedArms VDV+CombinedArms
-Kamdesh_AAS_v1 PLA+Armored USMC+Armored
-GooseBay_Skirmish_v1 BAF+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 INS+LightInfantry USMC+CombinedArms
-Belaya_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Kokan_AAS_v1 USMC+CombinedArms PLA+CombinedArms
-Yehorivka_Destruction_v1 CAF+Support VDV+Support
-Fallujah_AAS_v1 BAF+Armored RGF+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-FoolsRoad_AAS_v1 VDV+CombinedArms CAF+CombinedArms
-Anvil_RAAS_v1 TLF+Armored USMC+Armored
-Skorpo_RAAS_v1 USA+LightInfantry WPMC+LightInfantry
-Sanxian_AAS_v3 WPMC+CombinedArms PLAAGF+CombinedArms
-GooseBay_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 USA+LightInfantry PLANMC+CombinedArms
-Kohat_TC_v1 USMC+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 INS+Mechanized TLF+Mechanized
-Manicouagan_RAAS_v2 VDV+Support USMC+Support
-Fallujah_RAAS_v1 WPMC+LightInfantry MEA+LightInfantry
-Sumari_AAS_v1 PLA+CombinedArms BAF+CombinedArms
-Gorodok_Destruction_v1 USMC+Motorized PLA+Motorized
-Mutaha_AAS_v2 ADF+CombinedArms PLA+CombinedArms
-Yehorivka_TC_v2 IMF+CombinedArms VDV+Support
-Sanxian_AAS_v3 PLAAGF+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v2 BAF+Mechanized RGF+Mechanized
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Mestia_Invasion_v1 IMF+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 RGF+Motorized WPMC+LightInfantry
-Kokan_AAS_v2 INS+CombinedArms WPMC+CombinedArms
-Manicouagan_AAS_v2 USA+Mechanized VDV+Mechanized
-Tallil_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
-Kamdesh_Invasion_v1 MEA+CombinedArms PLA+CombinedArms
-Mutaha_RAAS_v2 BAF+CombinedArms WPMC+AirAssault
-Chora_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-GooseBay_RAAS_v1 WPMC+LightInfantry PLANMC+LightInfantry
-Fallujah_AAS_v1 MEA+CombinedArms PLA+CombinedArms
-Harju_RAAS_v2 WPMC+CombinedArms BAF+CombinedArms
-Yehorivka_RAAS_v1 VDV+Support TLF+Support
-Mestia_Invasion_v1 BAF+CombinedArms RGF+CombinedArms
-Anvil_RAAS_v2 INS+Motorized BAF+Mechanized
-Gorodok_TC_v1 PLA+Support TLF+Support
-AlBasrah_RAAS_v1 VDV+CombinedArms PLAAGF+CombinedArms
-Tallil_RAAS_v1 PLA+CombinedArms VDV+CombinedArms
-Logar_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
-Lashkar_Invasion_v1 VDV+Mechanized PLA+Support
-Sanxian_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Mutaha_Skirmish_v1 VDV+CombinedArms USMC+CombinedArms
-BlackCoast_AAS_v2 ADF+Mechanized PLAAGF+Mechanized
-Yehorivka_RAAS_v1 CAF+Support PLA+Support
-Skorpo_RAAS_v1 IMF+Mechanized WPMC+LightInfantry
-Kohat_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
-Mestia_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Anvil_TC_v1 RGF+LightInfantry USMC+LightInfantry
-AlBasrah_RAAS_v1 PLAAGF+Mechanized RGF+Mechanized
-Narva_AAS_v3 WPMC+CombinedArms VDV+CombinedArms
-Chora_AAS_v3 RGF+CombinedArms PLA+CombinedArms
-Kamdesh_Invasion_v1 TLF+Motorized CAF+Motorized
-Fallujah_AAS_v1 RGF+CombinedArms TLF+Armored
-Harju_Skirmish_v1 VDV+CombinedArms IMF+CombinedArms
-BlackCoast_RAAS_v2 TLF+Mechanized BAF+Mechanized
-Yehorivka_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 INS+LightInfantry PLA+LightInfantry
-Lashkar_AAS_v2 MEA+LightInfantry PLA+LightInfantry
-Gorodok_Destruction_v1 RGF+Motorized PLA+Motorized
-Sanxian_RAAS_v1 PLANMC+CombinedArms ADF+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms USMC+CombinedArms
-Skorpo_RAAS_v1 IMF+Support USMC+Support
-Logar_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
-Kamdesh_AAS_v1 USMC+Motorized RGF+Motorized
-Mutaha_Invasion_v1 USMC+Motorized TLF+Mechanized
-Anvil_AAS_v1 TLF+AirAssault WPMC+AirAssault
-Harju_RAAS_v1 USMC+CombinedArms RGF+CombinedArms
-Kokan_TC_v1 RGF+CombinedArms WPMC+CombinedArms
-Narva_AAS_v1 RGF+Armored USA+Armored
-Manicouagan_RAAS_v1 USA+Mechanized WPMC+LightInfantry
-Tallil_RAAS_v1 PLA+AirAssault BAF+AirAssault
-BlackCoast_AAS_v2 TLF+CombinedArms IMF+CombinedArms
-FoolsRoad_Destruction_v1 PLA+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Fallujah_RAAS_v2 MEA+Armored INS+Armored
-GooseBay_RAAS_v2 VDV+Mechanized WPMC+LightInfantry
-Anvil_AAS_v1 INS+Support MEA+Support
-Logar_AAS_v1 ADF+CombinedArms PLA+CombinedArms
-AlBasrah_Invasion_v1 WPMC+CombinedArms ADF+CombinedArms
-Kohat_RAAS_v2 USA+Motorized PLA+Motorized
-Kamdesh_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
-Yehorivka_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v2 PLA+LightInfantry ADF+Mechanized
-Skorpo_RAAS_v1 USA+Armored IMF+Armored
-Sumari_Invasion_v1 RGF+CombinedArms PLA+CombinedArms
-Manicouagan_RAAS_v2 RGF+CombinedArms BAF+CombinedArms
-Lashkar_TC_v1 INS+CombinedArms WPMC+CombinedArms
-Mestia_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
-Fallujah_RAAS_v2 VDV+Armored WPMC+LightInfantry
-Tallil_AAS_v1 PLA+CombinedArms USA+CombinedArms
-Logar_AAS_v1 USA+CombinedArms TLF+CombinedArms
-Narva_Destruction_v1 RGF+Support CAF+Support
-Gorodok_RAAS_v1 IMF+CombinedArms BAF+CombinedArms
-BlackCoast_AAS_v2 VDV+CombinedArms WPMC+CombinedArms
-AlBasrah_Skirmish_v2 ADF+CombinedArms MEA+CombinedArms
-Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Mutaha_RAAS_v2 MEA+AirAssault WPMC+CombinedArms
-Anvil_Invasion_v1 USA+Support VDV+Support
-Chora_AAS_v3 INS+CombinedArms MEA+CombinedArms
-Fallujah_TC_v1 INS+Mechanized TLF+Mechanized
-GooseBay_RAAS_v2 RGF+LightInfantry WPMC+LightInfantry
-Yehorivka_RAAS_v2 VDV+Support PLA+Support
-Mestia_AAS_v1 BAF+CombinedArms PLA+CombinedArms
-Tallil_Invasion_v1 MEA+Support WPMC+CombinedArms
-Harju_RAAS_v1 USA+AirAssault WPMC+AirAssault
-Logar_Skirmish_v1 MEA+CombinedArms USMC+CombinedArms
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Gorodok_RAAS_v1 TLF+AirAssault BAF+AirAssault
-Anvil_RAAS_v1 VDV+AirAssault ADF+AirAssault
-AlBasrah_Invasion_v2 VDV+Mechanized PLANMC+Armored
-Kokan_RAAS_v1 MEA+CombinedArms PLA+CombinedArms
-Mutaha_AAS_v2 INS+LightInfantry PLA+LightInfantry
+Sumari_RAAS_v1 USMC+CombinedArms PLA+CombinedArms
+Anvil_AAS_v1 USMC+LightInfantry MEA+LightInfantry
+Kamdesh_RAAS_v1 PLA+LightInfantry USA+LightInfantry
+GooseBay_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v2 IMF+Mechanized VDV+Mechanized
+Narva_Invasion_v1 USMC+Support WPMC+CombinedArms
+Logar_AAS_v1 PLA+CombinedArms BAF+CombinedArms
+Mutaha_RAAS_v1 TLF+CombinedArms INS+CombinedArms
+Lashkar_AAS_v2 WPMC+LightInfantry RGF+LightInfantry
+Yehorivka_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
+Kokan_Skirmish_v1 ADF+CombinedArms TLF+CombinedArms
+Sanxian_AAS_v2 PLANMC+LightInfantry WPMC+AirAssault
+Kamdesh_Invasion_v1 PLA+CombinedArms MEA+CombinedArms
+Tallil_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Anvil_AAS_v1 VDV+AirAssault PLA+AirAssault
+Gorodok_AAS_v1 PLA+Armored BAF+Armored
+AlBasrah_TC_v1 INS+Mechanized CAF+Mechanized
+Harju_RAAS_v1 IMF+Armored CAF+Armored
+Narva_Destruction_v1 WPMC+AirAssault ADF+Mechanized
+Kohat_RAAS_v1 TLF+Mechanized INS+Mechanized
+Logar_AAS_v1 WPMC+CombinedArms INS+CombinedArms
+Belaya_TC_v1 IMF+CombinedArms PLA+CombinedArms
 PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Lashkar_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-Belaya_RAAS_v1 CAF+CombinedArms IMF+CombinedArms
-Narva_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
-Yehorivka_RAAS_v2 WPMC+CombinedArms TLF+CombinedArms
-Tallil_RAAS_v1 MEA+CombinedArms ADF+CombinedArms
-Mestia_Skirmish_v1 PLA+CombinedArms USA+CombinedArms
-Kohat_RAAS_v2 PLA+AirAssault WPMC+AirAssault
-BlackCoast_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
-FoolsRoad_Invasion_v1 RGF+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 IMF+Mechanized USA+Mechanized
+Lashkar_Invasion_v1 INS+CombinedArms WPMC+CombinedArms
+FoolsRoad_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v1 USMC+CombinedArms MEA+CombinedArms
+Gorodok_TC_v1 TLF+AirAssault ADF+AirAssault
+BlackCoast_RAAS_v1 RGF+Support USMC+Support
+Chora_AAS_v1 BAF+CombinedArms RGF+CombinedArms
+Narva_Destruction_v1 RGF+CombinedArms USA+Motorized
+Tallil_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
+AlBasrah_Skirmish_v1 INS+CombinedArms TLF+CombinedArms
+Kamdesh_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v1 TLF+Armored USMC+Armored
+Belaya_RAAS_v1 TLF+Support IMF+Support
+Yehorivka_Destruction_v1 PLA+Motorized ADF+Mechanized
+Mestia_RAAS_v1 TLF+CombinedArms BAF+CombinedArms
+Gorodok_TC_v1 TLF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
+Harju_AAS_v1 CAF+AirAssault VDV+AirAssault
+Logar_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
+Mutaha_Invasion_v1 RGF+Mechanized MEA+Mechanized
+Tallil_AAS_v1 RGF+LightInfantry PLA+LightInfantry
+Narva_TC_v1 IMF+Motorized BAF+Support
+Chora_AAS_v3 WPMC+CombinedArms BAF+CombinedArms
+Lashkar_AAS_v1 USMC+LightInfantry RGF+LightInfantry
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Kokan_Invasion_v1 PLA+CombinedArms USA+CombinedArms
+Fallujah_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v2 IMF+Mechanized ADF+Mechanized
+Sumari_TC_v1 PLA+CombinedArms VDV+CombinedArms
+Sanxian_AAS_v1 WPMC+AirAssault ADF+AirAssault
+Kohat_AAS_v1 USA+Mechanized RGF+Motorized
+Belaya_Invasion_v2 ADF+Mechanized TLF+Mechanized
+Logar_RAAS_v1 PLA+CombinedArms MEA+CombinedArms
+AlBasrah_TC_v1 PLA+Motorized TLF+Motorized
+Kamdesh_RAAS_v1 TLF+AirAssault BAF+AirAssault
+BlackCoast_RAAS_v2 IMF+Support TLF+CombinedArms
+Mutaha_AAS_v2 ADF+AirAssault VDV+AirAssault
+Mestia_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Gorodok_Destruction_v1 WPMC+CombinedArms BAF+CombinedArms
+GooseBay_AAS_v1 CAF+Mechanized PLA+Mechanized
+Harju_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
+Anvil_RAAS_v2 VDV+AirAssault PLA+AirAssault
+Yehorivka_AAS_v2 ADF+Mechanized PLA+LightInfantry
+Chora_AAS_v3 ADF+CombinedArms PLA+CombinedArms
+Lashkar_Invasion_v1 PLA+CombinedArms BAF+CombinedArms
+Kamdesh_RAAS_v1 PLA+AirAssault WPMC+AirAssault
+Tallil_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v1 USA+CombinedArms IMF+CombinedArms
+Mutaha_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
+Mestia_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLAAGF+CombinedArms
+GooseBay_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
+FoolsRoad_AAS_v2 CAF+CombinedArms PLA+CombinedArms
+Sanxian_AAS_v3 ADF+AirAssault WPMC+LightInfantry
+AlBasrah_TC_v1 INS+LightInfantry MEA+LightInfantry
+Chora_AAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Narva_AAS_v2 WPMC+LightInfantry RGF+LightInfantry
+Tallil_Invasion_v1 RGF+Support INS+Support
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Anvil_TC_v1 WPMC+AirAssault TLF+Armored
+Kohat_AAS_v1 TLF+Support PLA+Support
+Lashkar_AAS_v1 INS+Motorized RGF+Motorized
+Sumari_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
+Harju_Invasion_v3 IMF+Motorized USA+Motorized
+Manicouagan_RAAS_v2 WPMC+AirAssault USA+AirAssault
+AlBasrah_RAAS_v1 MEA+Mechanized BAF+Mechanized
+Mutaha_Skirmish_v1 BAF+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v1 WPMC+AirAssault CAF+AirAssault
+Narva_RAAS_v1 WPMC+LightInfantry IMF+CombinedArms
+FoolsRoad_Invasion_v1 BAF+CombinedArms PLA+CombinedArms
+Belaya_AAS_v1 USA+Mechanized VDV+Mechanized
+Tallil_TC_v1 CAF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v2 USMC+LightInfantry INS+LightInfantry
+Logar_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 TLF+Support USMC+Support
+Fallujah_Insurgency_v1 WPMC+LightInfantry INS+Armored
+Kamdesh_AAS_v1 INS+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Mestia_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v1 ADF+AirAssault WPMC+AirAssault
+Skorpo_RAAS_v1 VDV+Support WPMC+LightInfantry
+FoolsRoad_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
+Mutaha_RAAS_v1 PLA+Motorized RGF+Motorized
+Lashkar_AAS_v2 PLA+Motorized USA+Motorized
+Sumari_TC_v1 PLA+CombinedArms TLF+CombinedArms
+Anvil_AAS_v1 MEA+Armored CAF+Armored
+Tallil_RAAS_v1 ADF+Mechanized VDV+Mechanized
+Chora_Insurgency_v1 PLA+CombinedArms INS+CombinedArms
+Kamdesh_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
+Narva_AAS_v3 VDV+AirAssault CAF+AirAssault
+Mestia_TC_v1 BAF+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v2 MEA+Support TLF+Support
+Yehorivka_RAAS_v2 PLA+CombinedArms IMF+CombinedArms
+Mutaha_Invasion_v1 WPMC+CombinedArms PLA+Motorized
+Skorpo_RAAS_v1 BAF+CombinedArms IMF+CombinedArms
+Sumari_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
+Manicouagan_RAAS_v1 PLAAGF+Armored USMC+Armored
+AlBasrah_AAS_v1 TLF+CombinedArms INS+CombinedArms
+Tallil_RAAS_v2 VDV+AirAssault WPMC+AirAssault
+Gorodok_Invasion_v2 PLA+CombinedArms WPMC+LightInfantry
+Sanxian_AAS_v1 PLANMC+CombinedArms BAF+CombinedArms
+Mestia_TC_v1 WPMC+CombinedArms TLF+CombinedArms
+Kamdesh_AAS_v1 RGF+Motorized PLA+Motorized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Chora_AAS_v2 PLA+CombinedArms INS+CombinedArms
+Mutaha_Invasion_v1 VDV+Mechanized ADF+Mechanized
+Anvil_RAAS_v1 TLF+Mechanized MEA+AirAssault
+Yehorivka_RAAS_v2 RGF+Support TLF+Support
+Lashkar_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 WPMC+AirAssault ADF+AirAssault
+Gorodok_AAS_v1 CAF+AirAssault WPMC+AirAssault
+Manicouagan_Invasion_v2 WPMC+AirAssault USMC+Motorized
+Fallujah_RAAS_v1 PLA+Armored INS+Armored
+GooseBay_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Mestia_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v2 VDV+Armored USA+Armored
+AlBasrah_RAAS_v1 USMC+LightInfantry WPMC+AirAssault
+Tallil_Invasion_v1 MEA+CombinedArms ADF+CombinedArms
+FoolsRoad_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Lashkar_RAAS_v1 PLA+AirAssault TLF+AirAssault
+Narva_AAS_v1 USMC+CombinedArms VDV+CombinedArms
+Sumari_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v2 CAF+Mechanized WPMC+LightInfantry
+Skorpo_Invasion_v1 WPMC+LightInfantry IMF+LightInfantry
+Anvil_AAS_v1 WPMC+CombinedArms MEA+CombinedArms
+Manicouagan_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Mestia_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Kohat_TC_v1 INS+Armored VDV+Armored
+GooseBay_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Mutaha_Invasion_v1 PLA+CombinedArms VDV+CombinedArms
+Belaya_AAS_v2 VDV+Armored USMC+Armored
+BlackCoast_RAAS_v1 TLF+CombinedArms IMF+LightInfantry
+Kamdesh_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v2 CAF+Motorized TLF+Motorized
+Tallil_AAS_v1 RGF+CombinedArms MEA+CombinedArms
+AlBasrah_Invasion_v2 MEA+Armored BAF+Armored
+Narva_RAAS_v1 WPMC+AirAssault CAF+AirAssault
+Gorodok_Skirmish_v1 ADF+CombinedArms RGF+CombinedArms
+Manicouagan_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Yehorivka_RAAS_v1 IMF+Armored PLA+Armored
+Chora_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
+Belaya_Invasion_v1 USMC+Motorized VDV+Armored
+Lashkar_AAS_v2 PLA+Armored USMC+Armored
+Mutaha_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
+Anvil_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 USMC+LightInfantry MEA+LightInfantry
+Mestia_AAS_v1 TLF+CombinedArms IMF+CombinedArms
+Fallujah_Invasion_v2 WPMC+LightInfantry PLA+LightInfantry
+GooseBay_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Kohat_AAS_v1 BAF+CombinedArms RGF+CombinedArms
+Yehorivka_RAAS_v1 USA+LightInfantry PLA+Motorized
+Kokan_Skirmish_v1 VDV+CombinedArms CAF+CombinedArms
+BlackCoast_RAAS_v2 IMF+Motorized CAF+Motorized
+Narva_Destruction_v1 IMF+Motorized CAF+Motorized
+FoolsRoad_AAS_v2 PLA+CombinedArms TLF+CombinedArms
+Tallil_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Mutaha_TC_v1 RGF+Armored MEA+Armored
+AlBasrah_RAAS_v1 INS+Motorized USA+Motorized
+Gorodok_RAAS_v2 USMC+CombinedArms TLF+Motorized
+Logar_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Manicouagan_Invasion_v2 RGF+LightInfantry WPMC+LightInfantry
+Kohat_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Sumari_AAS_v2 BAF+CombinedArms PLA+CombinedArms
+Fallujah_TC_v1 TLF+Mechanized CAF+Mechanized
+Lashkar_AAS_v2 PLA+LightInfantry WPMC+LightInfantry
+Mestia_AAS_v2 TLF+CombinedArms IMF+CombinedArms
